Enhance legal and compliance documentation across multiple languages
- Added new sections for 'practitioner-agreement' and 'compliance' in the messages files for English, Portuguese, Spanish, and Brazilian Portuguese.
- Updated privacy, terms, and payment policies documents to clarify Eleva.care's role as a technology marketplace platform, emphasizing compliance with GDPR, LGPD, and other regulations.
- Removed outdated documentation files and reorganized legal documentation for better accessibility and clarity.

These changes improve the comprehensiveness and clarity of legal information provided to users, ensuring compliance with relevant regulations.

--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -14,8 +14,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="transforming-women-healthcare"
   headingLevel="h1"
-  title="Transforming women's health care through innovation and compassion"
-  description="At Eleva Care, we are dedicated to empowering women of all ages to take control of their health and well-being."
+  title="Connecting you with expert women's healthcare practitioners"
+  description="At Eleva Care, we provide a secure technology platform that empowers women to find and connect with licensed healthcare professionals for personalized care."
 />
 
 <MissionSection
@@ -23,25 +23,25 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        'Our mission is to provide a supportive and inclusive platform that connects individuals with expert-led resources, evidence-based information, and a collaborative community of healthcare professionals.',
+        'Our mission is to provide a secure technology marketplace that connects women with independent, licensed healthcare practitioners. We offer the platform and tools; qualified healthcare professionals provide your medical care.',
     },
     {
       paragraph:
-        "We believe in making quality healthcare accessible to all women, empowering them with knowledge, and fostering collaboration for better health outcomes. Our approach recognizes that women's health is a lifelong, evolving journey.",
+        'We believe technology can make quality healthcare more accessible. By connecting patients with verified practitioners through our platform, we empower women with choice, convenience, and access to specialized care throughout every life stage.',
     },
   ]}
   statsTitle="The numbers"
   stats={[
-    { label: 'Patient Satisfaction', value: '95%' },
-    { label: 'Support Available', value: '24/7' },
+    { label: 'Platform Satisfaction', value: '95%' },
+    { label: 'Platform Support', value: '24/7' },
   ]}
 />
 
 <HeadlineSection
   id="our-vision"
   label="Our Vision"
-  title="Bridging science and care for every woman"
-  description="To bridge the gap between scientific research and practical application, delivering accessible and personalized women's health care solutions throughout every life stage."
+  title="Connecting women with expert healthcare providers"
+  description="To be the leading technology platform connecting women with licensed healthcare practitioners, making specialized care accessible and convenient throughout every life stage."
 />
 
 <BeliefsSection
@@ -82,11 +82,11 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        "Founded by healthcare professionals who witnessed firsthand the gaps in women's healthcare, Eleva Care emerged from a shared vision to make expert care more accessible, personalized, and comprehensive.",
+        "Founded by healthcare professionals who witnessed firsthand the gaps in women's healthcare access, Eleva Care emerged as a technology solution to connect patients with expert practitioners more efficiently.",
     },
     {
       paragraph:
-        'Today, Eleva Care is transforming how women access and experience healthcare. Our platform connects thousands of women with specialized healthcare providers, offering evidence-based care and support throughout every life stage.',
+        'Today, Eleva Care operates a secure digital marketplace connecting women with independent, licensed healthcare practitioners. Our platform provides the technology; your chosen practitioner provides your medical care.',
     },
   ]}
   ctaText="Read our story"
@@ -198,19 +198,19 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   title="Why Join Eleva"
   benefits={[
     {
-      title: 'Flexible Practice',
+      title: 'Independent Practice',
       description:
-        'Practice on your terms with our flexible telehealth platform. Set your own schedule and connect with patients from anywhere.',
+        'Maintain your independence as a licensed healthcare provider. Set your own schedule, rates, and practice policies while using our technology platform.',
     },
     {
-      title: 'Innovative Technology',
+      title: 'Secure Technology Platform',
       description:
-        'Access state-of-the-art telehealth tools and AI-assisted clinical support to enhance your practice.',
+        'Access our secure booking, scheduling, payment processing, and encrypted clinical notes storage. We provide the technology; you provide the medical care.',
     },
     {
-      title: 'Collaborative Community',
+      title: 'Professional Network',
       description:
-        'Join a network of leading healthcare professionals and participate in case discussions and knowledge sharing.',
+        'Connect with other independent healthcare practitioners in our network for professional development and knowledge sharing opportunities.',
     },
   ]}
   applyUrl="mailto:patimota@gmail.com?subject=Application%20for%20Eleva%20Care&body=Hello%20Patrícia,%20I%20would%20like%20to%20apply%20for%20Eleva%20Care."
