--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -13,8 +13,9 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   id="transforming-women-healthcare"
-  title="Transformando la atención médica para mujeres a través de la innovación y la compasión"
-  description="En Eleva Care, nos dedicamos a empoderar a las mujeres de todas las edades para que tomen el control de su salud y bienestar."
+  headingLevel="h1"
+  title="Conectándola con profesionales de salud especializados en salud de la mujer"
+  description="En Eleva Care, proporcionamos una plataforma tecnológica segura que empodera a las mujeres para encontrar y conectarse con profesionales de salud licenciados para atención personalizada."
 />
 
 <MissionSection
@@ -22,47 +23,48 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        'Nuestra misión es proporcionar una plataforma inclusiva y de apoyo que conecte a las personas con recursos dirigidos por expertos, información basada en evidencia y una comunidad colaborativa de profesionales de la salud.',
+        'Nuestra misión es proporcionar un marketplace tecnológico seguro que conecte a mujeres con profesionales de salud independientes y licenciados. Ofrecemos la plataforma y las herramientas; profesionales de salud cualificados brindan su atención médica.',
     },
     {
       paragraph:
-        'Creemos en hacer que la atención médica de calidad sea accesible para todas las mujeres, empoderándolas con conocimiento y fomentando la colaboración para mejores resultados de salud. Nuestro enfoque reconoce que la salud de la mujer es un viaje evolutivo de toda la vida.',
+        'Creemos que la tecnología puede hacer que la atención médica de calidad sea más accesible. Al conectar pacientes con profesionales verificados a través de nuestra plataforma, empoderamos a las mujeres con elección, conveniencia y acceso a atención especializada en todas las etapas de la vida.',
     },
   ]}
   statsTitle="Los números"
   stats={[
-    { label: 'Satisfacción del Paciente', value: '95%' },
-    { label: 'Soporte Disponible', value: '24/7' },
+    { label: 'Satisfacción de la Plataforma', value: '95%' },
+    { label: 'Soporte de la Plataforma', value: '24/7' },
   ]}
 />
 
 <HeadlineSection
   id="our-vision"
-  label="Nuestra visión"
-  title="Uniendo ciencia y cuidado para cada mujer"
-  description="Para unir el gap entre la investigación científica y la aplicación práctica, entregando soluciones de cuidados de salud de la mujer de forma accesible y personalizadas en todas las etapas de la vida."
+  label="Nuestra Visión"
+  title="Conectando mujeres con profesionales de salud expertos"
+  description="Ser la plataforma tecnológica líder que conecta a mujeres con profesionales de salud licenciados, haciendo que la atención especializada sea accesible y conveniente en todas las etapas de la vida."
 />
 
 <BeliefsSection
-  title="Nuestras creencias fundamentales"
+  id="our-beliefs"
+  title="Nuestras Creencias"
   beliefs={[
     {
-      title: 'Acceso a Cuidados de Salud de Calidad',
+      title: 'Acceso a Atención Médica de Calidad',
       description:
-        'Cada mujer merece acceso a cuidados de salud de calidad, independientemente de su ubicación o circunstancias.',
+        'Toda mujer merece acceso a atención médica de calidad, independientemente de su ubicación o circunstancias.',
     },
     {
-      title: 'El conocimiento es poder',
+      title: 'El Conocimiento es Poder',
       description:
-        'Capacitar a las mujeres con información basada en evidencia para tomar decisiones informadas sobre su salud.',
+        'Empoderar a las mujeres con información basada en evidencia para tomar decisiones informadas sobre atención médica.',
     },
     {
-      title: 'Cuidados colaborativos',
+      title: 'Atención Colaborativa',
       description:
-        'Mejores resultados de salud se logran a través de la colaboración entre pacientes y profesionales de la salud.',
+        'Mejores resultados de salud se logran a través de la colaboración entre pacientes y proveedores de atención médica.',
     },
     {
-      title: 'Jornada de Salud',
+      title: 'Viaje de por Vida',
       description:
         'La salud de la mujer es un viaje continuo que evoluciona a través de diferentes etapas de la vida.',
     },
@@ -71,30 +73,30 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   id="our-team"
-  label="Conoce a nuestro equipo"
-  title="Liderada por inovadores y expertos en salud"
-  description="Nuestro equipo combina expertise en salud de la mujer, tecnología y cuidado con pacientes para revolucionar la entrega de cuidados de salud."
+  label="Conozca nuestro equipo"
+  title="Liderados por innovadores y expertos en salud"
+  description="Nuestro equipo combina experiencia en salud de la mujer, tecnología y atención al paciente para revolucionar la prestación de atención médica."
 />
 
 <TeamSection
   description={[
     {
       paragraph:
-        'Fundada por profesionales de la salud que presenciaron de primera mano las brechas en la atención médica para mujeres, Eleva Care surgió de una visión compartida para hacer que la atención especializada sea más accesible, personalizada e integral.',
+        'Fundada por profesionales de salud que presenciaron de primera mano las brechas en el acceso a la atención médica de la mujer, Eleva Care surgió como una solución tecnológica para conectar pacientes con profesionales expertos de manera más eficiente.',
     },
     {
       paragraph:
-        'Hoy, Eleva Care está transformando cómo las mujeres acceden y experimentan la atención médica. Nuestra plataforma conecta a miles de mujeres con proveedores de atención médica especializados, ofreciendo atención y apoyo basados en evidencia a lo largo de cada etapa de la vida.',
+        'Hoy, Eleva Care opera un marketplace digital seguro que conecta a mujeres con profesionales de salud independientes y licenciados. Nuestra plataforma proporciona la tecnología; su profesional elegido brinda su atención médica.',
     },
   ]}
-  ctaText="Lee nuestra historia"
-  ctaLink="/es/history"
-  title="Nuestra lídera"
+  ctaText="Lea nuestra historia"
+  ctaLink="/history"
+  title="Nuestro Liderazgo"
   leadership={[
     {
       name: 'Patricia Mota, PT, PhD',
       flags: '🇵🇹 🇪🇸 🇺🇸',
-      role: 'Co-Fundadora / Directora General',
+      role: 'Co-Fundadora / Directora Ejecutiva',
       image: '/img/about/team/team-patricia-mota.jpg',
     },
     {
@@ -108,9 +110,9 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   id="board-of-advisors"
-  label="Guiada por expertos en salud"
-  title="Consejo Consultivo"
-  description="Nuestro consejo consultivo reúne voces líderes en salud de la mujer, innovación en salud y transformación digital."
+  label="Guiados por expertos de la industria"
+  title="Consejo de Asesores"
+  description="Nuestro consejo asesor reúne a voces líderes en salud de la mujer, innovación en atención médica y transformación digital."
 />
 
 <AdvisorsSection
@@ -119,23 +121,23 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       name: 'Kari Bø, PT, PhD',
       flags: '🇳🇴',
-      role: 'Asesora de Salud Pelvica',
+      role: 'Asesora en Salud del Suelo Pélvico',
       quote:
-        'El entrenamiento de los músculos del suelo pélvico basado en la evidencia no sólo previene y trata las disfunciones, sino que permite a las mujeres vivir con confianza y plenamente en todas las etapas de la vida.',
+        'El entrenamiento basado en evidencia de los músculos del suelo pélvico no solo previene y trata disfunciones—empodera a las mujeres para vivir con confianza y plenamente en todas las etapas de la vida.',
       image: '/img/about/team/team-kari-bo.jpg',
     },
-    {
+        {
       name: 'Ruben Barakat, PhD',
       flags: '🇦🇷 🇪🇸',
-      role: 'Asesor de Ciencias del Ejercicio',
+      role: 'Asesor en Ciencia del Ejercicio',
       quote:
         'La evidencia muestra que el ejercicio personalizado durante el embarazo puede transformar los resultados de salud de las mujeres.',
       image: '/img/about/team/team-ruben-barakat.jpg',
     },
-    {
+        {
       name: 'Alexandre Delgado, PT, PhD',
       flags: '🇧🇷',
-      role: 'Asesor de Fisioterapia Obstétrica',
+      role: 'Asesor en Fisioterapia Obstétrica',
       quote:
         'La fisioterapia basada en evidencia transforma la experiencia del embarazo y el parto, empoderando a las mujeres en cada etapa.',
       image: '/img/about/team/team-alexandre-delgado.jpg',
@@ -143,42 +145,42 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       name: 'Cristine Homsi Jorge, PT, PhD',
       flags: '🇧🇷',
-      role: 'Asesora de Salud Femenina',
+      role: "Asesora en Salud de la Mujer",
       quote:
         'La investigación clínica y la educación empoderan a las mujeres para tomar decisiones informadas sobre su viaje de salud',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
-  {
+ {
       name: 'Annelie Gutke, PT, PhD',
       flags: '🇸🇪',
-      role: 'Asesora de Salud Femenina',
+      role: "Asesora en Salud de la Mujer",
       quote:
-        'Entender los mecanismos del dolor transforma cómo cuidamos a las mujeres durante el embarazo y más allá.',
+        'Comprender los mecanismos del dolor transforma cómo cuidamos a las mujeres durante el embarazo y más allá.',
       image: '/img/about/team/team-annelie-gutke.jpg',
     },
-         {
+       {
       name: 'Joana Goulão Barros, MD, PhD',
       flags: '🇵🇹',
-      role: 'Asesora de Atención a la Mujer',
+      role: 'Asesora en Atención del Ciclo de Vida de la Mujer',
       quote:
-        'La atención integral y en equipo en todas las etapas de la vida -desde la adolescencia hasta el embarazo, el parto y la menopausia- garantiza que las mujeres reciban el apoyo personalizado que necesitan.',
+        'La atención integral y en equipo en todas las etapas de la vida—desde la adolescencia hasta el embarazo, el parto y la menopausia—garantiza que las mujeres reciban el apoyo personalizado que necesitan para prosperar.',
       image: '/img/about/team/team-joana-barros.jpg',
     },
     {
       name: 'Patricia Driusso, PT, PhD',
       flags: '🇧🇷',
-      role: 'Asesora de Salud Femenina',
+      role: "Asesora en Salud de la Mujer",
       quote:
-        'La investigación clínica avanza en los tratamientos de rehabilitación mientras empodera a las mujeres a través de la educación basada en evidencia.',
+        'La investigación clínica avanza los tratamientos de rehabilitación mientras empodera a las mujeres a través de la educación basada en evidencia.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
 
     {
       name: 'Jenny Bagwell, PT, PhD, DPT',
       flags: '🇺🇸',
-      role: 'Asesora de Biomecánica y Salud Perinatal',
+      role: 'Asesora en Biomecánica y Salud Perinatal',
       quote:
-        'Entender los patrones de movimiento durante y después del embarazo ayuda a optimizar la atención y mejorar los resultados a largo plazo para las mujeres.',
+        'Comprender los patrones de movimiento durante y después del embarazo ayuda a optimizar la atención y mejorar los resultados a largo plazo para las mujeres.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
 
@@ -187,30 +189,30 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   id="join-our-network"
-  label="Únete a nuestra red"
-  title="Transforma la atención médica femenina con nosotros"
-  description="Únete a una comunidad de profesionales dedicados que hacen que la atención de calidad sea accesible para mujeres en todas partes."
+  label="Únase a nuestra red"
+  title="Transforme la atención médica de la mujer con nosotros"
+  description="Únase a una comunidad de profesionales de salud dedicados a hacer que la atención de calidad sea accesible para mujeres en todas partes."
 />
 
 <JoinNetworkSection
-  title="Por qué unirse a nuestra red"
+  title="Por Qué Unirse a Eleva"
   benefits={[
     {
-      title: 'Práctica Flexible',
+      title: 'Práctica Independiente',
       description:
-        'Ejerce en tus propios términos con nuestra plataforma flexible de telesalud. Establece tu propio horario y conéctate con pacientes desde cualquier lugar.',
+        'Mantenga su independencia como proveedor de atención médica licenciado. Establezca su propio horario, tarifas y políticas de práctica mientras usa nuestra plataforma tecnológica.',
     },
     {
-      title: 'Tecnología Innovadora',
+      title: 'Plataforma Tecnológica Segura',
       description:
-        'Accede a herramientas de telesalud de vanguardia y soporte clínico asistido por IA para mejorar tu práctica.',
+        'Acceda a nuestro sistema seguro de reservas, programación, procesamiento de pagos y almacenamiento cifrado de notas clínicas. Proporcionamos la tecnología; usted brinda la atención médica.',
     },
     {
-      title: 'Comunidad Colaborativa',
+      title: 'Red Profesional',
       description:
-        'Únete a una red de profesionales de la salud líderes y participa en discusiones de casos e intercambio de conocimientos.',
+        'Conéctese con otros profesionales de salud independientes en nuestra red para oportunidades de desarrollo profesional e intercambio de conocimientos.',
     },
   ]}
-  applyUrl="mailto:patimota@gmail.com?subject=Candidatura%20para%20a%20Eleva%20Care&body=Hola%20Patrícia,%20me gustaría%20candidatarme%20para%20Eleva%20Care."
+  applyUrl="mailto:patimota@gmail.com?subject=Solicitud%20para%20Eleva%20Care&body=Hola%20Patrícia,%20me%20gustaría%20solicitar%20unirme%20a%20Eleva%20Care."
   applyButtonText="Solicitar Unirse"
 />
