--- a/content/cookie/en.mdx
+++ b/content/cookie/en.mdx
@@ -2,6 +2,10 @@
 
 _Effective Date:_ April 16, 2025
 
+**IMPORTANT**: Eleva.care is a **healthcare technology marketplace platform** that connects patients with independent, licensed healthcare practitioners. We are NOT a healthcare provider. This Cookie Policy explains how we use cookies and similar tracking technologies on our platform.
+
+---
+
 As a healthcare platform, we take cookie privacy and transparency very seriously. This Cookie Policy explains how we use cookies and similar tracking technologies on our website and platform, with special attention to healthcare data protection. It also explains how we manage cookie consent to ensure your privacy and compliance with relevant regulations.
 
 ## 1. What Are Cookies?
@@ -105,16 +109,27 @@ You can manage your cookie preferences in several ways:
 
 We minimize the use of third-party cookies. When required, we ensure our partners comply with relevant data protection regulations and maintain transparent privacy practices. Our third-party services include:
 
-- Clerk for user authentication
-- Stripe for payment processing
-- PostHog for minimal usage statistics and analytics
-- Beehiiv for newsletter subscription management
+- **Clerk** for user authentication and identity management
+- **Stripe** for payment processing (EU processing)
+- **PostHog** for minimal usage statistics and analytics (EU hosting)
+- **Beehiiv** for newsletter subscription management
+- **Novu** (Noti-Fire Apps Ltd.) for notification services (EU API endpoint: eu.api.novu.co)
+- **Vercel** for hosting and platform infrastructure (EU regions)
 
-Each of these providers has been selected based on their security practices and compliance with data protection standards relevant to healthcare applications.
+Each of these providers has been selected based on their security practices and compliance with data protection standards relevant to healthcare applications. All providers have executed Data Processing Agreements (DPAs) and use EU data centers for hosting and processing.
 
 ## 9. Data Processing and Storage
 
-Cookie data may be processed and stored in the European Union and in the United States. For transfers outside the EU, we ensure appropriate safeguards are in place, such as Standard Contractual Clauses or adequacy decisions.
+**EU Data Residency:** All cookie data is stored and processed within the European Union. We do not transfer cookie data outside the EEA during normal operations.
+
+**Data Location:** Our infrastructure is hosted exclusively in EU regions:
+
+- Database: Frankfurt, Germany (EU)
+- Hosting: Vercel EU regions
+- Analytics: PostHog EU hosting
+- Notifications: Novu EU API endpoint
+
+While some service providers are US-based companies, they provide **EU-hosted infrastructure** with data residency in the European Union and have executed Standard Contractual Clauses (SCCs) for GDPR compliance.
 
 ## 10. Regular Cookie Audits
 
