--- a/content/cookie/es.mdx
+++ b/content/cookie/es.mdx
@@ -2,6 +2,10 @@
 
 _Fecha de Vigencia:_ 16 de abril de 2025
 
+**IMPORTANTE**: Eleva.care es una **plataforma marketplace tecnológica de salud** que conecta pacientes con profesionales de salud independientes y licenciados. NO somos un proveedor de atención médica. Esta Política de Cookies explica cómo utilizamos cookies y tecnologías similares de seguimiento en nuestra plataforma.
+
+---
+
 Como plataforma de atención médica, nos tomamos muy en serio la privacidad y transparencia de las cookies. Esta Política de Cookies explica cómo utilizamos cookies y tecnologías similares de seguimiento en nuestro sitio web y plataforma, con especial atención a la protección de datos sanitarios. También explica cómo gestionamos el consentimiento de cookies para garantizar su privacidad y el cumplimiento de las normativas pertinentes.
 
 ## 1. ¿Qué Son las Cookies?
@@ -105,16 +109,27 @@ Puede gestionar sus preferencias de cookies de varias maneras:
 
 Minimizamos el uso de cookies de terceros. Cuando se requieren, nos aseguramos de que nuestros socios cumplan con las regulaciones relevantes de protección de datos y mantengan prácticas de privacidad transparentes. Nuestros servicios de terceros incluyen:
 
-- Clerk para autenticación de usuarios
-- Stripe para procesamiento de pagos
-- PostHog para estadísticas mínimas de uso y análisis
-- Beehiiv para gestión de suscripciones al boletín
+- **Clerk** para autenticación y gestión de identidad de usuarios
+- **Stripe** para procesamiento de pagos (procesamiento en la UE)
+- **PostHog** para estadísticas mínimas de uso y análisis (alojamiento en la UE)
+- **Beehiiv** para gestión de suscripciones al boletín
+- **Novu** (Noti-Fire Apps Ltd.) para servicios de notificación (endpoint de API en la UE: eu.api.novu.co)
+- **Vercel** para alojamiento e infraestructura de la plataforma (regiones de la UE)
 
-Cada uno de estos proveedores ha sido seleccionado en base a sus prácticas de seguridad y cumplimiento de los estándares de protección de datos relevantes para aplicaciones sanitarias.
+Cada uno de estos proveedores ha sido seleccionado en base a sus prácticas de seguridad y cumplimiento de los estándares de protección de datos relevantes para aplicaciones sanitarias. Todos los proveedores han ejecutado Acuerdos de Procesamiento de Datos (APD) y utilizan centros de datos en la UE para alojamiento y procesamiento.
 
 ## 9. Procesamiento y Almacenamiento de Datos
 
-Los datos de cookies pueden ser procesados y almacenados en la Unión Europea y en los Estados Unidos. Para transferencias fuera de la UE, nos aseguramos de que se implementen salvaguardas apropiadas, como Cláusulas Contractuales Estándar o decisiones de adecuación.
+**Residencia de Datos en la UE:** Todos los datos de cookies se almacenan y procesan dentro de la Unión Europea. No transferimos datos de cookies fuera del EEE durante las operaciones normales.
+
+**Ubicación de Datos:** Nuestra infraestructura está alojada exclusivamente en regiones de la UE:
+
+- Base de datos: Frankfurt, Alemania (UE)
+- Alojamiento: Vercel regiones de la UE
+- Análisis: PostHog alojamiento en la UE
+- Notificaciones: Novu endpoint de API en la UE
+
+Aunque algunos proveedores de servicios son empresas con sede en EE.UU., proporcionan **infraestructura alojada en la UE** con residencia de datos en la Unión Europea y han ejecutado Cláusulas Contractuales Tipo (CCT) para cumplimiento del RGPD.
 
 ## 10. Auditorías Regulares de Cookies
 
