--- a/content/dpa/pt.mdx
+++ b/content/dpa/pt.mdx
@@ -1,192 +1,490 @@
-# Acordo de Processamento de Dados
+# Acordo de Processamento de Dados (APD)
 
-_Data de Vigência:_ 16 de abril de 2025
+_Data de Entrada em Vigor:_ 16 de abril de 2025
 
-Este Acordo de Processamento de Dados ("DPA") faz parte dos Termos e Condições acordados entre **Búzios e Tartarugas, Lda.**, operando como **Eleva.care** (doravante, o "Processador") e o cliente (doravante, o "Responsável pelo Tratamento") e é incorporado por referência.
+**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia para saúde** que conecta pacientes com profissionais de saúde independentes e licenciados. NÃO somos um prestador de cuidados de saúde. Este Acordo de Processamento de Dados explica como tratamos os dados no nosso **duplo papel** como Responsável pelo Tratamento e Subcontratante.
 
-Este DPA reflete as obrigações das partes no que diz respeito ao tratamento de Dados Pessoais e Dados Pessoais Sensíveis no contexto dos serviços de saúde digital.
+## O Nosso Duplo Papel no Processamento de Dados
 
-## 1. Definições
+A Eleva.care processa dados pessoais em **duas capacidades distintas**:
 
-Neste DPA, os seguintes termos terão os significados estabelecidos abaixo:
+### 🟦 Como Responsável pelo Tratamento (Operações da Plataforma)
 
-- **"RGPD"** significa o Regulamento Geral de Proteção de Dados (UE) 2016/679.
-- **"Legislação de Proteção de Dados"** significa o RGPD e qualquer outra legislação aplicável relacionada com privacidade e proteção de dados, incluindo as leis nacionais que implementam ou complementam o RGPD.
-- **"Dados Pessoais"** tem o significado dado no RGPD e refere-se a qualquer informação relacionada com uma pessoa singular identificada ou identificável.
-- **"Dados Pessoais Sensíveis"** significa dados pessoais que revelam origem racial ou étnica, opiniões políticas, crenças religiosas ou filosóficas, filiação sindical, dados genéticos, dados biométricos, dados de saúde, ou dados relativos à vida sexual ou orientação sexual de uma pessoa.
-- **"Titular dos Dados"** significa uma pessoa singular identificada ou identificável a quem os Dados Pessoais se referem.
-- **"Violação de Dados Pessoais"** significa uma violação de segurança que leva à destruição, perda, alteração, divulgação não autorizada de, ou acesso a, Dados Pessoais transmitidos, armazenados ou processados de outra forma.
-- **"Serviços"** significa os serviços fornecidos pelo Processador ao Responsável pelo Tratamento conforme estabelecido nos Termos e Condições.
-- **"Subprocessador"** significa qualquer processador contratado pelo Processador para processar Dados Pessoais em nome do Responsável pelo Tratamento.
-- **"Padrões Técnicos e Organizativos"** significa as medidas técnicas e organizativas apropriadas que cumprem os requisitos da Legislação de Proteção de Dados aplicável.
+Para a funcionalidade da plataforma, somos o **Responsável pelo Tratamento** e utilizamos fornecedores tecnológicos como nossos subcontratantes:
 
-## 2. Âmbito e Aplicação do DPA
+- Contas de utilizadores (profissionais e pacientes)
+- Informações de marcação e agendamento
+- Processamento de pagamentos
+- Análise da plataforma
+- Comunicações e suporte
 
-Este DPA aplica-se ao processamento de Dados Pessoais e Dados Pessoais Sensíveis pelo Processador em nome do Responsável pelo Tratamento, exceto conforme estabelecido nos Termos e Condições.
+### 🟧 Como Subcontratante (Armazenamento de Dados Clínicos)
 
-## 3. Processamento de Dados
+Para notas clínicas e registos médicos criados pelos profissionais, somos o **Subcontratante**:
 
-### 3.1 Detalhes de Processamento
+- Os profissionais de saúde são os **Responsáveis pelo Tratamento**
+- Fornecemos apenas armazenamento encriptado seguro
+- Processamos dados apenas mediante instruções do profissional
+- NÃO acedemos ao conteúdo clínico sem autorização
 
-O processamento de Dados Pessoais será realizado da seguinte forma:
+---
 
-- **Duração do Processamento:** O processamento ocorrerá durante a vigência do acordo principal entre as partes e continuará até que todos os Dados Pessoais tenham sido devolvidos ou eliminados de acordo com este DPA ou com as instruções do Responsável pelo Tratamento.
-- **Categorias de Titulares de Dados:** Pessoas que utilizam os serviços, incluindo pacientes, profissionais de saúde, representantes autorizados e outros utilizadores da plataforma.
-- **Categorias de Dados Pessoais:**
-  - Informações de identificação (como nome, morada, data de nascimento)
-  - Informações de contacto (endereço de email, número de telefone)
-  - Informações de pagamento e faturação
-  - Credenciais de profissionais de saúde
-  - Informações de consultas e horários
-  - Dados de autenticação e segurança
-- **Categorias de Dados Pessoais Sensíveis:**
-  - Informações médicas e de saúde
-  - Tratamentos e medicamentos
-  - Informações de diagnóstico
-  - Histórico médico
-  - Informações genéticas ou biométricas (quando aplicável)
-- **Finalidade do Processamento:** Fornecer a plataforma de saúde digital e serviços relacionados conforme descrito nos Termos e Condições.
+## PARTE A: Eleva.care como Responsável pelo Tratamento
 
-### 3.2 Obrigações do Processador
+**Esta secção regula como a Eleva.care (como Responsável) contrata Subcontratantes (fornecedores) para fornecer os nossos serviços de plataforma.**
 
-O Processador deve:
+### A.1 Partes deste Acordo
 
-- Processar os Dados Pessoais apenas de acordo com as instruções documentadas do Responsável pelo Tratamento, inclusive no que diz respeito a transferências internacionais.
-- Assegurar que as pessoas autorizadas a processar os Dados Pessoais se comprometeram com a confidencialidade ou estão sob uma obrigação estatutária apropriada de confidencialidade.
-- Implementar medidas técnicas e organizativas apropriadas para garantir um nível de segurança adequado ao risco.
-- Respeitar as condições para contratar Subprocessadores.
-- Auxiliar o Responsável pelo Tratamento a garantir o cumprimento das obrigações relacionadas com a segurança dos Dados Pessoais, notificações de violações de dados, avaliações de impacto e consultas com autoridades supervisoras.
-- À escolha do Responsável pelo Tratamento, eliminar ou devolver todos os Dados Pessoais após a conclusão dos serviços, e eliminar as cópias existentes a menos que a lei aplicável exija o armazenamento dos Dados Pessoais.
-- Fornecer ao Responsável pelo Tratamento toda a informação necessária para demonstrar o cumprimento das obrigações estabelecidas neste DPA e permitir e contribuir para auditorias, incluindo inspeções, realizadas pelo Responsável pelo Tratamento ou outro auditor designado pelo Responsável pelo Tratamento.
+**Responsável pelo Tratamento:**  
+**BÚZIOS E TARTARUGAS - LDA**, uma sociedade por quotas organizada e existente sob as leis de Portugal, com NIPC 515001708, com sede na Rua Gil Vicente, 2, 2775-198 Parede, Portugal, operando comercialmente como **Eleva.care** ("Responsável"),
 
-### 3.3 Obrigações do Responsável pelo Tratamento
+**Subcontratantes (Fornecedores):**
 
-O Responsável pelo Tratamento deve:
+- **Neon Inc.**, 2261 Market Street STE 22601 San Francisco, CA, 94114, EUA (alojamento na UE: Frankfurt, Alemanha)
+- **Clerk Inc.**, 660 King Street Unit 345 San Francisco, CA 94107 Estados Unidos (alojamento na UE disponível)
+- **Stripe Inc.**, 510 Townsend St., San Francisco, CA Estados Unidos (processamento na UE)
+- **PostHog Inc.**, 2261 Market St STE 22301, San Francisco, CA 94114, Estados Unidos (alojamento na UE)
+- **Google LLC**, 1600 Amphitheatre Parkway, Mountain View, CA 94043 Estados Unidos (para Google SSO)
+- **Beehiiv Inc.**, 228 Park Avenue # 2329976 New York, New York 10003, Estados Unidos
+- **Vercel Inc.**, 340 S Lemon Ave #4133, Walnut, CA 91789, Estados Unidos (regiões da UE)
+- **Upstash Inc.**, 120 9th St, San Francisco, CA 94103, Estados Unidos (regiões da UE)
+- **Resend Inc.**, 1111B S Governors Ave STE 7567, Dover, DE 19904, Estados Unidos (alojamento na UE: Irlanda)
+- **Noti-Fire Apps Ltd. d/b/a Novu**, Derech Ben Gurion 132, Ramat Gan, Israel (endpoint da API na UE: eu.api.novu.co; Representante na UE: Instant EU GDPR Representative Ltd., Office 2, 12A Lower Main Street, Lucan Co. Dublin K78 X5P8 Irlanda)
 
-- Fornecer instruções documentadas ao Processador no que diz respeito ao processamento de Dados Pessoais.
-- Cumprir com as suas obrigações como Responsável pelo Tratamento de acordo com a Legislação de Proteção de Dados aplicável, incluindo a obtenção de todos os consentimentos necessários dos Titulares de Dados.
-- Responder a consultas dos Titulares de Dados e das autoridades supervisoras no que diz respeito ao processamento de Dados Pessoais pelo Processador.
+### A.2 Definições
 
-## 4. Subprocessadores
+Para os fins deste Acordo:
 
-### 4.1 Autorização Geral
+- **Legislação de Proteção de Dados** refere-se a todas as leis aplicáveis que regem o processamento de dados pessoais, incluindo o Regulamento Geral de Proteção de Dados (UE) 2016/679 ("RGPD"), e respetivas implementações nacionais.
+- **Dados Pessoais** refere-se a qualquer informação relativa a uma pessoa singular identificada ou identificável, conforme definido pelo RGPD.
+- **Categorias Especiais de Dados Pessoais** incluem dados sensíveis como informações de saúde, dados biométricos ou informações relacionadas com a origem racial ou étnica de um indivíduo, opiniões políticas, crenças religiosas, etc.
+- **Tratamento** significa qualquer operação realizada sobre dados pessoais, como recolha, armazenamento, modificação ou transferência.
+- **Titular dos Dados** refere-se ao indivíduo a quem os dados pessoais dizem respeito.
+- **Violação de Dados Pessoais** significa uma violação de segurança que conduza à destruição, perda, alteração, divulgação não autorizada ou acesso acidental ou ilícito a dados pessoais.
+- **Subcontratante Adicional** significa qualquer processador contratado por um Subcontratante para processar dados pessoais em nome do Responsável pelo Tratamento.
 
-O Responsável pelo Tratamento concede ao Processador uma autorização geral para contratar Subprocessadores para o processamento de Dados Pessoais, sujeito às condições estabelecidas nesta Secção 4.
+### A.3 Objeto e Finalidade do Tratamento pelos Fornecedores
 
-### 4.2 Lista de Subprocessadores
+Este APD regula o tratamento de dados pessoais pelos Subcontratantes (fornecedores) em nome da Eleva.care (Responsável) em relação aos seguintes serviços de plataforma:
 
-O Processador manterá uma lista atualizada de Subprocessadores e disponibilizá-la-á ao Responsável pelo Tratamento a pedido. A lista atual de Subprocessadores inclui:
+- **Neon:** Serviços de base de dados para armazenamento de dados de plataforma e clínicos (encriptados)
+- **Clerk:** Serviços de autenticação e gestão de identidade de utilizadores
+- **Stripe:** Processamento de pagamentos e armazenamento de dados de métodos de pagamento
+- **PostHog:** Serviços de análise da plataforma e rastreamento de comportamento do utilizador
+- **Google:** Serviços de autenticação Single Sign-On
+- **Beehiiv:** Serviços de newsletter e comunicações de marketing
+- **Resend:** Serviços de entrega de emails transacionais (alojado na UE na Irlanda)
+- **Vercel:** Serviços de alojamento e edge computing (regiões da UE)
+- **Upstash:** Armazenamento Redis KV para gestão de sessões e Qstash para processamento de tarefas orientado a eventos
+- **Novu:** Serviços de notificação e comunicação (endpoint da UE)
 
-- **Stripe, Inc.** - Para processamento de pagamentos
-- **Amazon Web Services (AWS)** - Para serviços de infraestrutura em nuvem
-- **Clerk** - Para autenticação de utilizadores
-- **PostHog** - Para análises e rastreamento de eventos
+O tratamento de dados pessoais é necessário para facilitar a operação da plataforma marketplace da Eleva.care, incluindo autenticação de utilizadores, marcação de consultas, processamento de pagamentos, análise, armazenamento seguro e comunicações.
 
-### 4.3 Notificação de Alterações
+### A.4 Tipos de Dados Pessoais e Categorias de Titulares dos Dados
 
-O Processador informará o Responsável pelo Tratamento por escrito de qualquer alteração prevista relativa à adição ou substituição de Subprocessadores, dando assim ao Responsável pelo Tratamento a oportunidade de se opor a tais alterações. A notificação será fornecida pelo menos 30 dias antes da alteração prevista.
+**Tipos de Dados Pessoais processados pelos fornecedores:**
 
-### 4.4 Requisitos de Subprocessamento
+- **Dados de Identidade:** Nomes, endereços de email, números de telefone, IDs de utilizador
+- **Dados de Perfil:** Credenciais profissionais, especialidades, informações de perfil
+- **Dados de Conta:** Nome de utilizador, palavra-passe (hash), preferências de conta
+- **Dados de Comunicação:** Mensagens, emails, preferências de comunicação
+- **Dados Técnicos:** Endereços IP, cookies, informações do dispositivo, registos de acesso
+- **Dados de Utilização:** Interação com a plataforma, utilização de funcionalidades, dados de análise
+- **Dados de Pagamento:** Detalhes de métodos de pagamento, registos de transações, endereços de faturação
+- **Dados Relacionados com Saúde:** Tipos de consultas, informações de agendamento, notas clínicas (encriptadas em repouso)
+- **Dados de Sessão:** Identificadores de sessão, tokens de autenticação, registos de atividade
+- **Dados de Processamento de Webhook:** Dados de tarefas orientadas a eventos, registos, metadados
 
-Quando o Processador contratar um Subprocessador, deverá:
+**Categorias de Titulares dos Dados:**
 
-- Realizar uma diligência devida adequada para garantir que o Subprocessador possa fornecer o nível de proteção para os Dados Pessoais exigido por este DPA.
-- Impor, por contrato, as mesmas obrigações de proteção de dados que as estabelecidas neste DPA.
-- Continuar a ser plenamente responsável perante o Responsável pelo Tratamento pelo cumprimento das obrigações do Subprocessador.
+- Profissionais de saúde que utilizam a plataforma (profissionais independentes)
+- Pacientes/clientes que procuram serviços de saúde
+- Funcionários e administradores da Eleva.care
+- Parceiros de negócio e prestadores de serviços
 
-## 5. Transferências Internacionais de Dados
+### A.5 Responsabilidades da Eleva.care como Responsável pelo Tratamento
 
-### 5.1 Restrições de Transferência
+Como Responsável pelo Tratamento para operações da plataforma, a Eleva.care deverá:
 
-O Processador não transferirá Dados Pessoais para um país fora do Espaço Económico Europeu (EEE) sem o consentimento prévio por escrito do Responsável pelo Tratamento, a menos que seja obrigado a fazê-lo pela lei da União Europeia ou do Estado-Membro à qual o Processador está sujeito.
+- Cumprir com todas as leis aplicáveis de proteção de dados, incluindo o RGPD
+- Fornecer instruções claras e precisas aos Subcontratantes relativamente ao tratamento de dados pessoais
+- Obter e manter os consentimentos necessários dos titulares dos dados para processar os seus dados pessoais
+- Implementar medidas técnicas e organizativas adequadas para garantir a segurança dos dados pessoais
+- Responder a pedidos de titulares dos dados relativamente aos seus direitos sob as leis aplicáveis de proteção de dados
+- Realizar Avaliações de Impacto sobre a Proteção de Dados (AIPD) quando necessário
+- Manter registos de atividades de tratamento (Artigo 30)
+- Assegurar que os Subcontratantes fornecem garantias suficientes relativamente à segurança e confidencialidade dos dados pessoais
+- Nomear um Encarregado de Proteção de Dados (EPD) conforme exigido pelo Artigo 37
 
-### 5.2 Salvaguardas para Transferências
+### A.6 Responsabilidades do Subcontratante (Fornecedor)
 
-Quando o Processador transferir Dados Pessoais para um país fora do EEE (com o consentimento do Responsável pelo Tratamento ou conforme exigido por lei), o Processador deverá garantir que existam salvaguardas adequadas de acordo com a Legislação de Proteção de Dados aplicável, que podem incluir:
+Cada Subcontratante (fornecedor) deverá:
 
-- Uma decisão de adequação emitida pela Comissão Europeia em relação ao país ou território.
-- Cláusulas Contratuais Padrão aprovadas pela Comissão Europeia ou por uma autoridade supervisora e assinadas entre o Processador e o Subprocessador.
-- Um código de conduta aprovado ou um mecanismo de certificação juntamente com compromissos vinculativos e exequíveis do destinatário.
+- Processar dados pessoais apenas mediante instruções documentadas da Eleva.care
+- Assegurar que as pessoas autorizadas a processar dados pessoais estão vinculadas por obrigações de confidencialidade
+- Implementar medidas técnicas e organizativas de segurança adequadas, incluindo:
+  - Encriptação de dados pessoais em trânsito (TLS 1.3) e em repouso (AES-256-GCM para dados de saúde)
+  - Sistemas de controlo de acesso com autenticação forte
+  - Controlos de acesso baseados em funções
+  - Formação de funcionários sobre proteção de dados
+  - Procedimentos de resposta a incidentes
+  - Procedimentos regulares de backup
+- Não contratar subcontratantes adicionais sem autorização prévia por escrito da Eleva.care
+- Auxiliar a Eleva.care a responder a pedidos de titulares dos dados
+- Auxiliar a Eleva.care a garantir o cumprimento das obrigações de segurança
+- Notificar a Eleva.care de qualquer violação de dados pessoais sem demora indevida (dentro de 24 horas)
+- Eliminar ou devolver todos os dados pessoais à Eleva.care após a cessação dos serviços, salvo se o armazenamento for exigido pela lei aplicável
 
-## 6. Assistência ao Responsável pelo Tratamento
+### A.7 Medidas de Segurança
 
-### 6.1 Direitos do Titular dos Dados
+Os Subcontratantes deverão implementar medidas de segurança adequadas, incluindo:
 
-O Processador fornecerá assistência razoável ao Responsável pelo Tratamento para o cumprimento das suas obrigações de responder aos pedidos dos Titulares de Dados para exercerem os seus direitos ao abrigo da Legislação de Proteção de Dados, incluindo os direitos de acesso, retificação, restrição, eliminação e portabilidade de dados.
+- Sistemas de controlo de acesso com autenticação multifator
+- Encriptação de dados pessoais em trânsito (usando TLS 1.3)
+- Encriptação em repouso para dados relacionados com saúde (AES-256-GCM)
+- Controlos de acesso baseados em funções (RBAC)
+- Formação de funcionários sobre proteção de dados e confidencialidade
+- Procedimentos de resposta a incidentes e notificação de violações
+- Procedimentos regulares de backup e recuperação de desastres
+- Registo de auditoria para acesso a dados de saúde
+- Processamento seguro de webhook com payloads encriptados
 
-### 6.2 Segurança, Avaliações de Impacto e Consultas Prévias
+### A.8 Transferências Internacionais
 
-O Processador fornecerá assistência razoável ao Responsável pelo Tratamento no que diz respeito a:
+**Residência de Dados na UE:** Todos os dados de clientes são armazenados e processados dentro da União Europeia. Não ocorrem transferências internacionais de dados fora do EEE durante operações normais.
 
-- A segurança do processamento.
-- Notificação de Violações de Dados Pessoais à autoridade supervisora e aos Titulares de Dados afetados.
-- Avaliações de impacto de proteção de dados.
-- Consulta prévia com autoridades supervisoras.
+**Conformidade de Fornecedores dos EUA:** Embora alguns subcontratantes sejam empresas baseadas nos EUA, fornecem **infraestrutura alojada na UE** com residência de dados na União Europeia e executaram:
 
-## 7. Violação de Dados Pessoais
+- ✅ Cláusulas Contratuais Tipo (CCT) para conformidade com o RGPD
+- ✅ Acordos de Processamento de Dados (APD)
+- ✅ Opções de data center na UE (utilizadas pela Eleva.care)
 
-### 7.1 Notificação de Violação
+**Localização e Soberania de Dados:**
 
-O Processador notificará o Responsável pelo Tratamento sem atraso indevido após ter conhecimento de uma Violação de Dados Pessoais, e em qualquer caso dentro de 48 horas.
+Todos os dados pessoais e informações de saúde são armazenados e processados exclusivamente dentro da União Europeia:
 
-### 7.2 Detalhes da Notificação
+- Base de dados: Neon.tech (Frankfurt, Alemanha - UE)
+- Alojamento: Vercel (regiões da UE)
+- Email: Resend (Irlanda - UE)
+- Cache/Fila: Upstash (regiões da UE)
+- Análise: PostHog (alojamento na UE)
+- Notificações: Novu (endpoint da API na UE: eu.api.novu.co)
 
-A notificação descreverá a natureza da Violação de Dados Pessoais, as categorias e o número aproximado de Titulares de Dados afetados, as categorias e o número aproximado de registos de Dados Pessoais afetados, as consequências prováveis, as medidas tomadas ou propostas para abordar a violação, e as informações de contacto para mais informações.
+### A.9 Conformidade com Regulamentos de Saúde
 
-### 7.3 Documentação
+**Regulamentos de Dados de Saúde da UE (Primários):**
 
-O Processador documentará todas as Violações de Dados Pessoais, incluindo os factos relacionados com a violação, os seus efeitos e as medidas corretivas tomadas.
+A Eleva.care opera primariamente sob o **Artigo 9 do RGPD** (Categorias Especiais de Dados Pessoais) como entidade baseada em Portugal que serve profissionais de saúde e pacientes da UE.
 
-## 8. Eliminação ou Devolução de Dados Pessoais
+**Conformidade com o Artigo 9 do RGPD:**
 
-### 8.1 Eliminação ou Devolução
+- ✅ Medidas de segurança reforçadas para dados de saúde
+- ✅ Mecanismos de consentimento explícito
+- ✅ Avaliação de Impacto sobre a Proteção de Dados (AIPD) necessária e realizada
+- ✅ Encriptação em repouso e em trânsito (AES-256-GCM + TLS 1.3)
+- ✅ Controlos de acesso e registo de auditoria
+- ✅ Minimização de dados e limitação de finalidade
 
-Após a conclusão da prestação dos Serviços, o Processador deverá, à escolha do Responsável pelo Tratamento, eliminar ou devolver todos os Dados Pessoais ao Responsável pelo Tratamento e eliminar as cópias existentes, a menos que a lei da União Europeia ou do Estado-Membro exija o armazenamento dos Dados Pessoais.
+**Regulamentos de Saúde dos EUA (HIPAA) - Infraestrutura Preparada:**
 
-### 8.2 Certificação
+A Eleva.care opera numa **infraestrutura conforme com HIPAA** através do nosso fornecedor de base de dados **Neon.tech** (plano Scale):
 
-A pedido do Responsável pelo Tratamento, o Processador fornecerá uma certificação por escrito de que cumpriu plenamente esta Secção 8.
+- ✅ Acordo de Associado de Negócios (BAA) executado com Neon.tech
+- ✅ Infraestrutura de base de dados conforme com HIPAA ativada
+- ✅ Registo de auditoria melhorado via extensão pgAudit
+- ✅ Salvaguardas técnicas da Regra de Segurança HIPAA implementadas
+- ✅ Procedimentos de notificação de violações em vigor
+- ✅ Todos os PHI encriptados em repouso (AES-256-GCM) e em trânsito (TLS 1.3)
 
-## 9. Auditoria
+**Aplicabilidade Regulatória:** Como entidade baseada em Portugal, a Eleva.care opera primariamente sob o **Artigo 9 do RGPD**. A conformidade HIPAA torna-se aplicável ao processar Informações de Saúde Protegidas (PHI) de pacientes dos EUA ou profissionais de saúde licenciados nos EUA. A nossa infraestrutura preparada para HIPAA garante conformidade contínua caso sirvamos utilizadores baseados nos EUA no futuro.
 
-### 9.1 Direitos de Auditoria
+**Proteção de Dados Brasileiros (LGPD) - Conformidade Total:**
 
-O Responsável pelo Tratamento terá o direito de auditar o cumprimento do Processador com este DPA. Tais auditorias estarão sujeitas a um aviso razoável e serão realizadas durante o horário comercial normal, sem perturbar substancialmente as operações comerciais do Processador.
+A Eleva.care cumpre a **Lei Geral de Proteção de Dados Pessoais (LGPD)** do Brasil, que partilha princípios semelhantes ao RGPD:
 
-### 9.2 Relatórios de Auditoria
+**Disposições-Chave da LGPD:**
 
-O Processador disponibilizará ao Responsável pelo Tratamento, a pedido, os relatórios de auditoria relevantes ou certificações mantidas pelo Processador para demonstrar o cumprimento das suas obrigações ao abrigo deste DPA.
+- **Bases Legais para Processamento** (LGPD Artigo 7): Processamos dados com base no consentimento, execução de contrato, obrigação legal e interesses legítimos
+- **Dados Pessoais Sensíveis** (LGPD Artigo 11): Dados de saúde requerem consentimento específico ou autorização legal
+- **Direitos dos Titulares de Dados** (LGPD Artigos 17-22): Direito de acesso, correção, eliminação, portabilidade e mais
+- **Transferências Internacionais** (LGPD Artigos 33-36): Garantimos salvaguardas adequadas para transferências internacionais de dados
+- **Medidas de Segurança** (LGPD Artigo 46): Medidas técnicas e organizacionais para proteger dados pessoais
 
-## 10. Responsabilidade e Indemnização
+**Atividades de Processamento de Dados:**
 
-### 10.1 Responsabilidade
+Todas as atividades de processamento de dados cumprem os requisitos do RGPD e da LGPD, incluindo:
 
-O Processador será responsável pelos danos causados pelo processamento apenas quando não tenha cumprido com as obrigações específicas do processador ao abrigo da Legislação de Proteção de Dados ou quando tenha agido fora de ou contra as instruções legais do Responsável pelo Tratamento.
+✅ Transparência no processamento de dados  
+✅ Limitação de finalidade  
+✅ Minimização de dados  
+✅ Exatidão e registos atualizados  
+✅ Limitação de conservação  
+✅ Segurança e confidencialidade
 
-### 10.2 Indemnização
+Para direitos de utilizadores brasileiros ou questões relacionadas com a LGPD, contacte: [dpo@eleva.care](mailto:dpo@eleva.care)
 
-O Processador indemnizará o Responsável pelo Tratamento pelas perdas, danos, custos e despesas incorridos pelo Responsável pelo Tratamento como resultado do incumprimento por parte do Processador deste DPA ou da Legislação de Proteção de Dados aplicável.
+---
 
-## 11. Disposições Gerais
+## PARTE B: Eleva.care como Subcontratante (para Profissionais de Saúde)
 
-### 11.1 Prazo
+**Esta secção regula como a Eleva.care (como Subcontratante) processa dados clínicos em nome dos profissionais de saúde (Responsáveis).**
 
-Este DPA entrará em vigor na data de vigência indicada acima e continuará em vigor até à rescisão dos Termos e Condições.
+### B.1 Natureza da Plataforma e Relação com Profissionais
 
-### 11.2 Sobrevivência
+**IMPORTANTE**: Os profissionais de saúde que utilizam a Eleva.care são **profissionais independentes**, não funcionários. Para dados clínicos que criam (notas de sessão, registos médicos):
 
-As obrigações do Processador no que diz respeito ao processamento de Dados Pessoais sobreviverão à rescisão deste DPA pelo tempo que o Processador continuar a processar Dados Pessoais em nome do Responsável pelo Tratamento.
+- **O profissional é o Responsável pelo Tratamento**
+- **A Eleva.care é o Subcontratante**
+- **A relação do paciente é com o profissional, não com a Eleva.care**
 
-### 11.3 Conflito
+Esta secção constitui um Acordo de Processamento de Dados sob o **Artigo 28 do RGPD** entre profissionais e a Eleva.care.
 
-Em caso de qualquer conflito ou inconsistência entre as disposições deste DPA e os Termos e Condições, prevalecerão as disposições deste DPA no que diz respeito ao processamento de Dados Pessoais.
+### B.2 Âmbito do Tratamento
+
+**Dados Clínicos que Processamos em Nome do Profissional:**
+
+- Notas de sessão clínicas e observações médicas
+- Informações de saúde do paciente registadas pelo profissional
+- Planos de tratamento e recomendações médicas
+- Anexos de ficheiros médicos (encriptados)
+- Documentação clínica relacionada com consultas
+
+**NÃO:**
+
+- ❌ Acedemos a conteúdo clínico sem autorização do profissional
+- ❌ Tomamos decisões médicas ou fornecemos aconselhamento médico
+- ❌ Modificamos dados clínicos sem instrução do profissional
+- ❌ Partilhamos dados clínicos exceto conforme instruído pelo profissional
+
+### B.3 Finalidade do Tratamento
+
+A Eleva.care fornece **armazenamento encriptado seguro e infraestrutura de plataforma** para permitir que os profissionais:
+
+- Armazenem notas de sessão clínicas de forma segura
+- Acedam a registos de pacientes quando necessário
+- Mantenham continuidade de cuidados
+- Cumpram requisitos de retenção de registos médicos
+- Garantam backup de dados e recuperação de desastres
+
+### B.4 Base Legal para o Tratamento
+
+**Para o Profissional (Responsável pelo Tratamento):**
+
+- **Artigo 9(2)(h) do RGPD** - Tratamento necessário para prestação de cuidados de saúde por um profissional de saúde
+- O profissional deve obter consentimento informado dos pacientes para tratamento e processamento de dados
+
+**Para a Eleva.care (Subcontratante):**
+
+- **Artigo 6(1)(b) do RGPD** - Execução de contrato (acordo de serviços de plataforma com o profissional)
+- **Artigo 9(2)(a) do RGPD** - Consentimento explícito dos pacientes para armazenamento na plataforma
+
+### B.5 Responsabilidades do Profissional como Responsável pelo Tratamento
+
+Como Responsável pelo Tratamento de dados clínicos, cada profissional deverá:
+
+- **Obter consentimento informado** dos pacientes para tratamento e processamento de dados
+- **Assegurar base legal** para processar dados de saúde (Artigo 9(2)(h))
+- **Cumprir com ética médica** e requisitos de licenciamento profissional
+- **Manter seguro de responsabilidade profissional** (cobertura de negligência médica)
+- **Responder a pedidos de direitos dos pacientes** (acesso, retificação, eliminação, etc.)
+- **Determinar períodos de retenção de dados** em conformidade com leis de registos médicos
+- **Instruir a Eleva.care** sobre processamento, retenção e eliminação de dados
+- **Notificar a Eleva.care** de quaisquer alterações às instruções de processamento
+- **Garantir precisão de dados clínicos** e manter registos atualizados
+
+### B.6 Responsabilidades da Eleva.care como Subcontratante
+
+Como Subcontratante de dados clínicos, a Eleva.care deverá:
+
+- **Processar dados apenas mediante instruções do profissional** - Nenhum acesso não autorizado a conteúdo clínico
+- **Implementar medidas técnicas de segurança:**
+  - Encriptação AES-256-GCM em repouso para todos os dados clínicos
+  - Encriptação TLS 1.3 em trânsito
+  - Controlo de acesso baseado em funções (apenas o profissional pode aceder às suas notas clínicas)
+  - Registo de auditoria para todos os acessos a dados clínicos
+  - Backups automáticos regulares
+  - Procedimentos de recuperação de desastres
+- **Usar apenas subcontratantes aprovados:**
+  - Neon Inc. (base de dados - Frankfurt, Alemanha)
+  - Vercel Inc. (alojamento - regiões da UE)
+  - Upstash Inc. (cache - regiões da UE)
+- **Notificar profissionais de violações de dados** dentro de 24 horas
+- **Auxiliar com pedidos de titulares dos dados** (fornecer ferramentas para profissionais exportarem, eliminarem dados)
+- **Eliminar ou devolver dados** mediante instrução do profissional ou cessação do contrato
+- **Não transferir dados fora da UE** sem autorização explícita
+- **Manter confidencialidade** de todas as informações clínicas
+
+### B.7 Subcontratantes (para Dados Clínicos)
+
+**A Eleva.care contrata os seguintes subcontratantes para armazenar dados clínicos:**
+
+| Subcontratante   | Serviço                  | Localização              | Finalidade                                 |
+| ---------------- | ------------------------ | ------------------------ | ------------------------------------------ |
+| **Neon Inc.**    | Base de Dados PostgreSQL | Frankfurt, Alemanha (UE) | Armazenamento encriptado de notas clínicas |
+| **Vercel Inc.**  | Alojamento & CDN         | Regiões da UE            | Alojamento de aplicação                    |
+| **Upstash Inc.** | Cache Redis              | Regiões da UE            | Gestão de sessões                          |
+
+**Todos os subcontratantes têm:**
+
+- ✅ Acordos de Processamento de Dados executados
+- ✅ Cláusulas Contratuais Tipo (CCT)
+- ✅ Residência de dados na UE
+- ✅ Certificações de conformidade com o RGPD
+- ✅ Medidas de segurança adequadas (encriptação, controlos de acesso)
+
+**Notificação:** Os profissionais serão notificados de quaisquer alterações aos subcontratantes com 30 dias de antecedência.
+
+### B.8 Direitos dos Titulares dos Dados
+
+A Eleva.care auxiliará os profissionais a responder aos pedidos dos pacientes para:
+
+- **Direito de acesso** - Ferramentas de exportação de dados fornecidas
+- **Direito de retificação** - Interface de edição para profissionais
+- **Direito de eliminação** - Funcionalidade de eliminação de dados
+- **Direito de limitação** - Ferramentas de restrição de processamento
+- **Direito à portabilidade de dados** - Exportação em formato estruturado (JSON/CSV)
+- **Direito de oposição** - Procedimentos de tratamento de objeções
+
+**Prazo de resposta:** 30 dias (conforme Artigo 12(3))
+
+### B.9 Segurança e Confidencialidade de Dados
+
+**Medidas Técnicas:**
+
+- Encriptação AES-256-GCM para todos os dados clínicos em repouso
+- Encriptação TLS 1.3 para todos os dados em trânsito
+- Backups encriptados armazenados em data centers da UE
+- Autenticação multifator disponível
+- Whitelisting de IP (opcional)
+- Registos de auditoria para todos os acessos a dados clínicos
+
+**Medidas Organizativas:**
+
+- Acordos de confidencialidade de funcionários
+- Princípio de necessidade de conhecer
+- Formação regular de segurança
+- Plano de resposta a incidentes
+- Procedimentos de notificação de violação de dados (SLA de 24 horas)
+
+### B.10 Notificação de Violação de Dados
+
+No caso de uma violação de dados pessoais que afete dados clínicos:
+
+**A Eleva.care deverá:**
+
+1. **Notificar o profissional** sem demora indevida, dentro de **24 horas** após tomar conhecimento
+2. **Fornecer detalhes:**
+   - Natureza da violação
+   - Categorias e número aproximado de titulares dos dados afetados
+   - Categorias e número aproximado de registos afetados
+   - Consequências prováveis da violação
+   - Medidas tomadas ou propostas para abordar a violação
+3. **Cooperar com o profissional** na investigação e mitigação da violação
+4. **Auxiliar o profissional** a notificar autoridades de supervisão (CNPD) se necessário
+
+**Responsabilidade do profissional:**
+
+- Determinar se é necessária notificação à autoridade de supervisão (CNPD) (Artigo 33)
+- Determinar se é necessária notificação aos pacientes afetados (Artigo 34)
+- Assumir responsabilidade pelas notificações regulatórias como Responsável pelo Tratamento
+
+### B.11 Retenção e Eliminação de Dados
+
+**Período de Retenção:**
+
+- Os dados clínicos são retidos enquanto o profissional mantiver uma conta ativa
+- Os profissionais podem definir políticas de retenção personalizadas
+- Lei portuguesa de retenção de registos médicos: **10 anos mínimo** (responsabilidade do profissional cumprir)
+
+**Procedimentos de Eliminação:**
+
+Mediante pedido do profissional ou cessação da conta:
+
+1. **Período de graça de 30 dias** - Os dados permanecem acessíveis para recuperação
+2. **Após 30 dias** - Eliminação permanente do armazenamento primário
+3. **Após 90 dias** - Eliminação de backups encriptados
+4. **Confirmação** - O profissional recebe certificado de confirmação de eliminação
+
+**Exportação de Dados:** Os profissionais podem exportar todos os dados clínicos antes da eliminação (formato JSON/CSV)
+
+### B.12 Auditorias e Inspeções
+
+A Eleva.care deverá:
+
+- **Permitir aos profissionais** solicitar informações sobre medidas de segurança
+- **Fornecer relatórios anuais de segurança** (mediante pedido)
+- **Cooperar com auditorias** pelo profissional ou auditor terceiro nomeado
+- **Fornecer registos de auditoria** para acesso a dados clínicos (mediante pedido)
+- **Dar aviso prévio de 30 dias** para auditorias no local
+
+### B.13 Responsabilidade e Indemnização
+
+**Responsabilidade da Eleva.care (como Subcontratante):**
+
+- **Responsável por:** Segurança da plataforma, encriptação de dados, notificação de violações, gestão de subcontratantes
+- **NÃO responsável por:** Negligência médica, decisões clínicas, resultados dos pacientes, licenciamento de profissionais
+
+**Responsabilidade do Profissional (como Responsável):**
+
+- **Responsável por:** Todos os cuidados médicos prestados, precisão de dados clínicos, consentimento do paciente, conformidade de registos médicos
+- **Indemniza a Eleva.care** por quaisquer reclamações decorrentes de negligência médica ou decisões clínicas
+
+**Limitação:** A responsabilidade da Eleva.care está limitada apenas a serviços de tecnologia de plataforma, não serviços médicos.
+
+### B.14 Prazo e Cessação
+
+**Duração:** Este APD permanece em vigor enquanto o profissional mantiver uma conta Eleva.care.
+
+**Cessação:**
+
+- Qualquer parte pode cessar com 30 dias de aviso prévio por escrito
+- Após a cessação, a Eleva.care deverá:
+  - Fornecer período de exportação de dados de 30 dias
+  - Eliminar todos os dados clínicos após período de graça
+  - Fornecer certificado de confirmação de eliminação
+  - Devolver ou destruir cópias de subcontratantes
+
+**Sobrevivência:** As cláusulas de segurança, confidencialidade e responsabilidade sobrevivem à cessação.
+
+---
+
+## Disposições Gerais (Aplicáveis a Ambos os Papéis)
+
+### Alterações
+
+Qualquer alteração a este APD deve ser feita por escrito. A Eleva.care pode atualizar medidas de segurança e requisitos de conformidade com notificação prévia de 30 dias.
+
+### Separabilidade
+
+Se qualquer disposição deste APD for considerada inválida ou inexequível, o restante do acordo permanecerá em vigor.
+
+### Lei Aplicável
+
+Este APD é regido pelas leis de Portugal e pelo RGPD.
+
+### Resolução de Litígios
+
+Quaisquer litígios serão resolvidos nos tribunais de Portugal.
 
 ---
 
 ## Informações de Contacto
 
-Para qualquer consulta relacionada com este Acordo de Processamento de Dados, por favor contacte-nos em:
+**Questões sobre Proteção de Dados:**
 
 - **Email:** [dpo@eleva.care](mailto:dpo@eleva.care)
-- **Morada postal:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Encarregado de Proteção de Dados:** Rodrigo Barona Oliete
+- **Telefone:** +351 931 897 950
+- **Endereço Postal:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
+
+**Autoridade de Supervisão (Portugal):**
+
+- **CNPD** (Comissão Nacional de Proteção de Dados)
+- Website: https://www.cnpd.pt
+- Email: geral@cnpd.pt
+- Telefone: +351 213 928 400
+
+---
+
+**Ao utilizar os serviços de plataforma da Eleva.care, reconhece e concorda com este Acordo de Processamento de Dados.**
+
+_Última Atualização: 16 de abril de 2025_
