--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -2,23 +2,49 @@
 
 _Data de Vigência:_ 3 de junho de 2025
 
-Estas Políticas de Pagamento regem todas as transações financeiras realizadas através da plataforma **Eleva.care**. Ao utilizar nossos serviços de pagamento, você concorda em estar sujeito a estas políticas além de nossos Termos e Condições.
+Estas Políticas de Pagamento regem todas as transações financeiras realizadas através da plataforma Eleva.care. Ao utilizar nossos serviços de pagamento, você concorda em estar vinculado a estas políticas, além de nossos Termos e Condições.
 
-## 1. Métodos de Pagamento
+**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia**. Os pagamentos processados através de nossa plataforma são para serviços fornecidos por **profissionais de saúde independentes e licenciados**. A Eleva.care facilita o processamento de pagamentos, mas não fornece serviços médicos. Cobramos uma taxa de serviço da plataforma para manter e operar nossa infraestrutura de tecnologia, marketing e suporte.
+
+## 1. Papel da Plataforma nos Pagamentos
+
+### 1.1 Facilitação de Pagamentos
+
+- A Eleva.care fornece a plataforma tecnológica para processamento seguro de pagamentos
+- Os pagamentos são feitos AOS profissionais de saúde independentes PELOS seus serviços médicos
+- Processamos pagamentos de forma segura via Stripe e Stripe Connect
+- NÃO somos o provedor de serviços médicos
+- NÃO somos responsáveis pela qualidade dos serviços médicos prestados
+
+### 1.2 Pelo Que Você Está Pagando
+
+Quando você faz um pagamento através da Eleva.care:
+
+- **Taxa de Serviço do Profissional**: Pagamento pela consulta/serviço do profissional de saúde (85%)
+- **Taxa de Serviço da Plataforma**: Taxa de 15% pelo uso da tecnologia de agendamento, processamento de pagamentos e plataforma da Eleva.care
+
+**Exemplo**: Para uma consulta de €100:
+
+- O profissional recebe: €85,00 (após taxas de processamento Stripe)
+- Taxa de serviço da plataforma: €15,00 (cobre tecnologia, marketing, vendas, infraestrutura)
+
+O preço total exibido no agendamento inclui todas as taxas. Sem custos ocultos.
+
+## 2. Métodos de Pagamento
 
 A Eleva.care aceita vários métodos de pagamento, incluindo:
 
 - Cartões de crédito e débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
 
-## 2. Políticas de Pagamento Multibanco
+## 3. Políticas de Pagamento Multibanco
 
-### 2.1 Restrições de Janela de Pagamento
+### 3.1 Restrições de Janela de Pagamento
 
 - **Consultas dentro de 8 dias**: Pagamentos Multibanco **não estão disponíveis** para consultas agendadas dentro de 8 dias do momento atual
 - **Consultas com 8+ dias de antecedência**: Pagamentos Multibanco são aceitos com termos especiais descritos abaixo
 
-### 2.2 Sistema de Reserva de Horário
+### 3.2 Sistema de Reserva de Horário
 
 Ao pagar com Multibanco para consultas agendadas com 8 ou mais dias de antecedência:
 
@@ -26,173 +52,180 @@ Ao pagar com Multibanco para consultas agendadas com 8 ou mais dias de antecedê
 - Você tem **7 dias completos** para completar o pagamento Multibanco
 - Se o pagamento não for recebido dentro de 7 dias, a reserva de horário expira e fica disponível para outros pacientes
 
-### 2.3 Sistema de Lembretes de Pagamento
+### 3.3 Sistema de Lembretes de Pagamento
 
 Para ajudar a garantir que você não perca o prazo de pagamento:
 
-- **Lembrete do 3º Dia**: Email amigável de lembrete com 4 dias restantes para pagar
-- **Lembrete do 6º Dia**: Aviso final urgente com 1 dia restante para pagar
-- **Instruções de Pagamento**: Cada lembrete inclui todos os detalhes e instruções de pagamento Multibanco
-- **Métodos de Pagamento**: Pague via caixa eletrônico, internet banking, ou MB WAY (se suportado pelo seu banco)
+- **Lembrete Dia 3**: Email de lembrete amigável com 4 dias restantes para pagar
+- **Lembrete Dia 6**: Aviso final urgente com 1 dia restante para pagar
+- **Instruções de Pagamento**: Cada lembrete inclui detalhes completos de pagamento Multibanco e instruções
+- **Métodos de Pagamento**: Pague via caixa eletrônico, internet banking ou MB WAY (se suportado pelo seu banco)
 
-### 2.4 Processamento de Pagamento Tardio
+### 3.4 Processamento de Pagamento Atrasado
 
 Se um pagamento Multibanco for processado após o período de reserva de 7 dias:
 
 - O sistema verifica automaticamente conflitos de consulta
-- Se o horário da consulta não estiver mais disponível ou entrar em conflito com os requisitos de disponibilidade do especialista, será processado um **reembolso parcial**
+- Se o horário da consulta não estiver mais disponível ou entrar em conflito com os requisitos de disponibilidade do profissional, será processado um **reembolso parcial**
 - **Estrutura de Reembolso**: 90% do valor do pagamento será reembolsado, com 10% retido como taxa de processamento
 
-## 3. Conflitos de Consulta e Política de Reembolso
+## 4. Conflitos de Consulta e Política de Reembolso
 
-### 3.1 Detecção de Conflitos
+### 4.1 Detecção de Conflitos
 
-Nosso sistema detecta automaticamente conflitos incluindo:
+Nosso sistema detecta automaticamente conflitos, incluindo:
 
-- **Conflitos de horário**: Quando outro paciente reservou o mesmo horário ou horário sobreposto
-- **Violações de aviso mínimo**: Quando a consulta não atende mais aos requisitos de aviso mínimo do especialista
-- **Mudanças de disponibilidade do especialista**: Quando o especialista não está mais disponível no horário agendado
+- **Conflitos de horário**: Quando outro paciente agendou o mesmo horário ou horário sobreposto
+- **Violações de aviso mínimo**: Quando a consulta não atende mais aos requisitos de aviso mínimo do profissional
+- **Mudanças de disponibilidade do profissional**: Quando o profissional não está mais disponível no horário agendado
 
-### 3.2 Processamento de Reembolsos
+### 4.2 Processamento de Reembolsos
 
-Quando conflitos são detectados devido a pagamentos Multibanco tardios:
+Quando conflitos são detectados devido a pagamentos Multibanco atrasados:
 
 #### Reembolsos Automáticos
 
 - **Valor do Reembolso**: 90% do pagamento original
-- **Taxa de Processamento**: 10% do pagamento original (retida)
+- **Taxa de Processamento**: 10% do pagamento original (retido)
 - **Tempo de Processamento**: 5-10 dias úteis via Stripe
-- **Notificação**: Notificação automática por email no seu idioma preferido
+- **Notificação**: Notificação automática por email em seu idioma preferido
 
 #### Exemplo de Detalhamento de Reembolso
 
 - Pagamento Original: €100,00
-- Valor Reembolsado: €90,00 (90%)
-- Taxa de Processamento: €10,00 (10% - retida)
+- Valor do Reembolso: €90,00 (90%)
+- Taxa de Processamento: €10,00 (10% - retido)
 
-### 3.3 Resolução Manual
+### 4.3 Resolução Manual
 
 Em casos de erros do sistema ou circunstâncias especiais:
 
 - Entre em contato com nossa equipe de suporte dentro de 48 horas
 - Forneça sua referência de pagamento e detalhes do agendamento
-- Nossa equipe irá revisar e resolver a questão dentro de 2 dias úteis
+- Nossa equipe revisará e resolverá o problema dentro de 2 dias úteis
 
-## 4. Guia de Seleção de Método de Pagamento
+## 5. Guia de Seleção de Método de Pagamento
 
-### 4.1 Pagamentos por Cartão (Imediato)
+### 5.1 Pagamentos com Cartão (Imediato)
 
 **Melhor para:**
 
 - Consultas dentro de 8 dias
-- Confirmação imediata necessária
+- Necessidade de confirmação imediata
 - Agendamentos de última hora
 
 **Benefícios:**
 
-- Processamento instantâneo de pagamento
+- Processamento de pagamento instantâneo
 - Acesso imediato ao link da reunião
 - Sem estresse de prazo de pagamento
 
-### 4.2 Pagamentos Multibanco (Janela de 7 Dias)
+### 5.2 Pagamentos Multibanco (Janela de 7 Dias)
 
 **Melhor para:**
 
-- Consultas planejadas com muita antecedência (8+ dias)
+- Consultas planejadas com bastante antecedência (8+ dias)
 - Residentes portugueses que preferem métodos de pagamento locais
-- Aqueles confortáveis com pagamento diferido
+- Quem se sente confortável com pagamento diferido
 
 **Requisitos:**
 
 - A consulta deve ser agendada com 8+ dias de antecedência
-- O pagamento deve ser concluído dentro de 7 dias
-- Acesso a caixa eletrônico, internet banking, ou MB WAY
+- O pagamento deve ser completado dentro de 7 dias
+- Acesso a caixa eletrônico, internet banking ou MB WAY
 
-## 5. Processamento de Pagamentos de Especialistas
+## 6. Processamento de Pagamentos aos Profissionais
 
-### 5.1 Transferências de Pagamento
+### 6.1 Transferências de Pagamento
 
-- Pagamentos de especialistas são processados após conclusão bem-sucedida da consulta
-- O cronograma de transferência varia conforme as configurações do especialista e requisitos bancários locais
-- Todas as transferências atendem às políticas do Stripe Connect e regulamentações locais
+**A Eleva.care atua como facilitador de pagamentos entre pacientes e profissionais de saúde independentes:**
 
-### 5.2 Resolução de Disputas
+- Os profissionais de saúde são profissionais independentes que recebem pagamento por seus serviços
+- Os pagamentos são processados através do Stripe Connect
+- Os profissionais recebem 85% da taxa de consulta (após taxas de processamento Stripe aplicáveis)
+- A Eleva.care retém 15% como taxa de serviço da plataforma
+- As transferências ocorrem após a conclusão bem-sucedida da consulta
+- O cronograma de transferências varia de acordo com as configurações do profissional e requisitos bancários locais
+- Todas as transferências cumprem com as políticas do Stripe Connect e regulamentos locais
 
-- Disputas de pagamento são tratadas através do processo de resolução de disputas do Stripe
-- Especialistas são notificados imediatamente de quaisquer disputas de pagamento
+### 6.2 Resolução de Disputas
+
+- As disputas de pagamento são tratadas através do processo de resolução de disputas do Stripe
+- Os profissionais de saúde são notificados imediatamente de quaisquer disputas de pagamento
 - Documentação e evidências podem ser necessárias para resolução de disputas
 
-## 6. Moeda e Preços
+## 7. Moeda e Preços
 
-### 6.1 Moeda Base
+### 7.1 Moeda Base
 
 - Todos os preços são exibidos em Euros (EUR)
-- Conversão de moeda pode se aplicar para pagamentos internacionais
-- Taxas de câmbio são determinadas pelos processadores de pagamento no momento da transação
+- Conversão de moeda pode ser aplicada para pagamentos internacionais
+- As taxas de câmbio são determinadas pelos processadores de pagamento no momento da transação
 
-### 6.2 Mudanças de Preços
+### 7.2 Mudanças de Preços
 
-- Preços de consultas são fixados no momento do agendamento
-- Não serão aplicadas taxas adicionais após confirmação do agendamento
+- Os preços das consultas são bloqueados no momento do agendamento
+- Não serão aplicados custos adicionais após a confirmação do agendamento
+- A taxa de serviço da plataforma de 15% está incluída no preço exibido
 - Impostos e taxas estão incluídos no preço exibido
 
-## 7. Segurança de Pagamentos
+## 8. Segurança de Pagamentos
 
-### 7.1 Proteção de Dados
+### 8.1 Proteção de Dados
 
-- Todos os dados de pagamento são processados com segurança através do Stripe
+- Todos os dados de pagamento são processados de forma segura através do Stripe
 - Não armazenamos detalhes de cartões de pagamento em nossos servidores
-- Todas as transações são criptografadas e atendem aos padrões PCI DSS
+- Todas as transações são criptografadas e cumprem com os padrões PCI DSS
 
-### 7.2 Prevenção de Fraude
+### 8.2 Prevenção de Fraude
 
 - Sistemas automatizados de detecção de fraude estão implementados
 - Transações suspeitas podem ser atrasadas ou recusadas
 - Verificação adicional pode ser necessária para transações de alto valor
 
-## 8. Pagamentos Falhados
+## 9. Pagamentos Falhados
 
-### 8.1 Falhas de Pagamento
+### 9.1 Falhas de Pagamento
 
 - Pagamentos falhados resultam em cancelamento automático da consulta
-- Pacientes são notificados imediatamente por email
+- Os pacientes são notificados imediatamente por email
 - Novos agendamentos podem ser feitos com métodos de pagamento válidos
 
-### 8.2 Política de Tentativa
+### 9.2 Política de Repetição
 
 - Tentativas automáticas de pagamento não são realizadas
-- Pacientes devem iniciar novas tentativas de pagamento manualmente
+- Os pacientes devem iniciar novas tentativas de pagamento manualmente
 - Múltiplas tentativas falhadas podem resultar em restrições temporárias de agendamento
 
-## 9. Suporte ao Cliente
+## 10. Atendimento ao Cliente
 
-### 9.1 Problemas de Pagamento
+### 10.1 Problemas de Pagamento
 
-Para perguntas ou problemas relacionados a pagamentos:
+Para questões ou problemas relacionados a pagamentos:
 
 - Email: support@eleva.care
 - Tempo de resposta: Dentro de 24 horas
-- Disponível em múltiplos idiomas (Inglês, Português, Espanhol, Português Brasileiro)
+- Disponível em vários idiomas (Inglês, Português, Espanhol, Português Brasileiro)
 
-### 9.2 Solicitações de Reembolso
+### 10.2 Solicitações de Reembolso
 
-- Solicitações de reembolso devem ser enviadas dentro de 7 dias da transação original
+- As solicitações de reembolso devem ser submetidas dentro de 7 dias da transação original
 - Reembolsos por emergência médica são considerados caso a caso
-- Políticas de cancelamento se aplicam conforme descrito em nossos Termos e Condições
+- As políticas de cancelamento se aplicam conforme descrito em nossos Termos e Condições
 
-## 10. Atualizações de Políticas
+## 11. Atualizações de Políticas
 
-Estas políticas de pagamento podem ser atualizadas periodicamente. Usuários serão notificados de mudanças significativas por email e notificações da plataforma. O uso continuado da plataforma constitui aceitação das políticas atualizadas.
+Estas políticas de pagamento podem ser atualizadas periodicamente. Os usuários serão notificados de mudanças significativas por email e notificações da plataforma. O uso continuado da plataforma constitui aceitação das políticas atualizadas.
 
-## 11. Conformidade Legal
+## 12. Conformidade Legal
 
-Estas políticas atendem a:
+Estas políticas cumprem com:
 
-- Leis portuguesas de proteção ao consumidor
-- Regulamentações europeias de serviços de pagamento (PSD2)
-- Requisitos de proteção de dados LGPD/GDPR
+- Leis portuguesas de proteção do consumidor
+- Regulamentos europeus de serviços de pagamento (PSD2)
+- Requisitos de proteção de dados do GDPR
 - Termos de serviço e padrões de conformidade do Stripe
 
 ---
 
-_Para perguntas sobre estas políticas de pagamento, entre em contato com nossa equipe de suporte em support@eleva.care_
+_Para questões sobre estas políticas de pagamento, entre em contato com nossa equipe de suporte em support@eleva.care_
