--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -1,76 +1,102 @@
 # Políticas de Pago
 
-_Fecha de Entrada en Vigor:_ 3 de junio de 2025
+_Fecha de Vigencia:_ 3 de junio de 2025
 
-Estas Políticas de Pago rigen todas las transacciones financieras realizadas a través de la plataforma **Eleva.care**. Al utilizar nuestros servicios de pago, acepta estar sujeto a estas políticas además de nuestros Términos y Condiciones.
+Estas Políticas de Pago rigen todas las transacciones financieras realizadas a través de la plataforma Eleva.care. Al utilizar nuestros servicios de pago, acepta estar sujeto a estas políticas además de nuestros Términos y Condiciones.
 
-## 1. Métodos de Pago
+**IMPORTANTE**: Eleva.care es una **plataforma marketplace de tecnología**. Los pagos procesados a través de nuestra plataforma son por servicios proporcionados por **profesionales de salud independientes y licenciados**. Eleva.care facilita el procesamiento de pagos pero no proporciona servicios médicos. Cobramos una tarifa de servicio de plataforma para mantener y operar nuestra infraestructura de tecnología, marketing y soporte.
+
+## 1. Rol de la Plataforma en los Pagos
+
+### 1.1 Facilitación de Pagos
+
+- Eleva.care proporciona la plataforma tecnológica para el procesamiento seguro de pagos
+- Los pagos se realizan A profesionales de salud independientes POR sus servicios médicos
+- Procesamos los pagos de forma segura a través de Stripe y Stripe Connect
+- NO somos el proveedor de servicios médicos
+- NO somos responsables de la calidad de los servicios médicos proporcionados
+
+### 1.2 Por Qué Está Pagando
+
+Cuando realiza un pago a través de Eleva.care:
+
+- **Tarifa de Servicio del Profesional**: Pago por la consulta/servicio del profesional de salud (85%)
+- **Tarifa de Servicio de la Plataforma**: Tarifa del 15% por usar la tecnología de reservas, procesamiento de pagos y plataforma de Eleva.care
+
+**Ejemplo**: Para una cita de €100:
+
+- El profesional recibe: €85,00 (después de las tarifas de procesamiento de Stripe)
+- Tarifa de servicio de la plataforma: €15,00 (cubre tecnología, marketing, ventas, infraestructura)
+
+El precio total mostrado en la reserva incluye todas las tarifas. Sin cargos ocultos.
+
+## 2. Métodos de Pago
 
 Eleva.care acepta varios métodos de pago, incluyendo:
 
 - Tarjetas de crédito y débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
 
-## 2. Políticas de Pago Multibanco
+## 3. Políticas de Pago Multibanco
 
-### 2.1 Restricciones de Ventana de Pago
+### 3.1 Restricciones de Ventana de Pago
 
 - **Citas dentro de 8 días**: Los pagos Multibanco **no están disponibles** para citas programadas dentro de 8 días del momento actual
 - **Citas con 8+ días de anticipación**: Los pagos Multibanco son aceptados con términos especiales descritos a continuación
 
-### 2.2 Sistema de Reserva de Horario
+### 3.2 Sistema de Reserva de Horario
 
 Al pagar con Multibanco para citas programadas con 8 o más días de anticipación:
 
 - Su horario de cita está **reservado por 7 días** desde el momento de la reserva
 - Tiene **7 días completos** para completar el pago Multibanco
-- Si no se recibe el pago dentro de 7 días, la reserva de horario expira y queda disponible para otros pacientes
+- Si el pago no se recibe dentro de 7 días, la reserva de horario expira y queda disponible para otros pacientes
 
-### 2.3 Sistema de Recordatorios de Pago
+### 3.3 Sistema de Recordatorios de Pago
 
-Para ayudar a asegurar que no pierda su fecha límite de pago:
+Para ayudar a garantizar que no pierda su plazo de pago:
 
-- **Recordatorio del Día 3**: Email amigable de recordatorio con 4 días restantes para pagar
-- **Recordatorio del Día 6**: Aviso final urgente con 1 día restante para pagar
-- **Instrucciones de Pago**: Cada recordatorio incluye todos los detalles e instrucciones de pago Multibanco
-- **Métodos de Pago**: Pague vía cajero automático, banca online, o MB WAY (si es compatible con su banco)
+- **Recordatorio Día 3**: Correo electrónico de recordatorio amistoso con 4 días restantes para pagar
+- **Recordatorio Día 6**: Aviso final urgente con 1 día restante para pagar
+- **Instrucciones de Pago**: Cada recordatorio incluye detalles completos de pago Multibanco e instrucciones
+- **Métodos de Pago**: Pague a través de cajero automático, banca en línea o MB WAY (si es compatible con su banco)
 
-### 2.4 Procesamiento de Pago Tardío
+### 3.4 Procesamiento de Pago Tardío
 
 Si un pago Multibanco se procesa después del período de reserva de 7 días:
 
 - El sistema verifica automáticamente conflictos de citas
-- Si el horario de la cita ya no está disponible o entra en conflicto con los requisitos de disponibilidad del especialista, se procesará un **reembolso parcial**
-- **Estructura de Reembolso**: Se reembolsará el 90% del monto del pago, con 10% retenido como tarifa de procesamiento
+- Si el horario de la cita ya no está disponible o entra en conflicto con los requisitos de disponibilidad del profesional, se procesará un **reembolso parcial**
+- **Estructura de Reembolso**: Se reembolsará el 90% del monto del pago, reteniendo el 10% como tarifa de procesamiento
 
-## 3. Conflictos de Citas y Política de Reembolso
+## 4. Conflictos de Citas y Política de Reembolsos
 
-### 3.1 Detección de Conflictos
+### 4.1 Detección de Conflictos
 
-Nuestro sistema detecta automáticamente conflictos incluyendo:
+Nuestro sistema detecta automáticamente conflictos, incluyendo:
 
-- **Conflictos de horario**: Cuando otro paciente ha reservado el mismo horario u horario superpuesto
-- **Violaciones de aviso mínimo**: Cuando la cita ya no cumple con los requisitos de aviso mínimo del especialista
-- **Cambios de disponibilidad del especialista**: Cuando el especialista ya no está disponible en el horario programado
+- **Conflictos de horario**: Cuando otro paciente ha reservado el mismo horario o un horario superpuesto
+- **Violaciones de aviso mínimo**: Cuando la cita ya no cumple con los requisitos de aviso mínimo del profesional
+- **Cambios de disponibilidad del profesional**: Cuando el profesional ya no está disponible en el horario programado
 
-### 3.2 Procesamiento de Reembolsos
+### 4.2 Procesamiento de Reembolsos
 
 Cuando se detectan conflictos debido a pagos Multibanco tardíos:
 
 #### Reembolsos Automáticos
 
 - **Monto del Reembolso**: 90% del pago original
-- **Tarifa de Procesamiento**: 10% del pago original (retenida)
-- **Tiempo de Procesamiento**: 5-10 días hábiles vía Stripe
-- **Notificación**: Notificación automática por email en su idioma preferido
+- **Tarifa de Procesamiento**: 10% del pago original (retenido)
+- **Tiempo de Procesamiento**: 5-10 días hábiles a través de Stripe
+- **Notificación**: Notificación automática por correo electrónico en su idioma preferido
 
 #### Ejemplo de Desglose de Reembolso
 
 - Pago Original: €100,00
-- Monto Reembolsado: €90,00 (90%)
-- Tarifa de Procesamiento: €10,00 (10% - retenida)
+- Monto del Reembolso: €90,00 (90%)
+- Tarifa de Procesamiento: €10,00 (10% - retenido)
 
-### 3.3 Resolución Manual
+### 4.3 Resolución Manual
 
 En casos de errores del sistema o circunstancias especiales:
 
@@ -78,119 +104,126 @@ En casos de errores del sistema o circunstancias especiales:
 - Proporcione su referencia de pago y detalles de la reserva
 - Nuestro equipo revisará y resolverá el problema dentro de 2 días hábiles
 
-## 4. Guía de Selección de Método de Pago
+## 5. Guía de Selección de Método de Pago
 
-### 4.1 Pagos con Tarjeta (Inmediato)
+### 5.1 Pagos con Tarjeta (Inmediato)
 
 **Mejor para:**
 
 - Citas dentro de 8 días
-- Confirmación inmediata necesaria
-- Reservas de último momento
+- Necesidad de confirmación inmediata
+- Reservas de última hora
 
 **Beneficios:**
 
-- Procesamiento instantáneo de pago
+- Procesamiento de pago instantáneo
 - Acceso inmediato al enlace de reunión
-- Sin estrés por fecha límite de pago
+- Sin estrés de plazo de pago
 
-### 4.2 Pagos Multibanco (Ventana de 7 Días)
+### 5.2 Pagos Multibanco (Ventana de 7 Días)
 
 **Mejor para:**
 
 - Citas planificadas con mucha anticipación (8+ días)
 - Residentes portugueses que prefieren métodos de pago locales
-- Aquellos cómodos con pago diferido
+- Quienes se sienten cómodos con pago diferido
 
 **Requisitos:**
 
 - La cita debe programarse con 8+ días de anticipación
 - El pago debe completarse dentro de 7 días
-- Acceso a cajero automático, banca online, o MB WAY
+- Acceso a cajero automático, banca en línea o MB WAY
 
-## 5. Procesamiento de Pagos de Especialistas
+## 6. Procesamiento de Pagos a Profesionales
 
-### 5.1 Transferencias de Pago
+### 6.1 Transferencias de Pago
 
-- Los pagos de especialistas se procesan después de la finalización exitosa de la cita
-- El cronograma de transferencia varía según la configuración del especialista y los requisitos bancarios locales
-- Todas las transferencias cumplen con las políticas de Stripe Connect y regulaciones locales
+**Eleva.care actúa como facilitador de pagos entre pacientes y profesionales de salud independientes:**
 
-### 5.2 Resolución de Disputas
+- Los profesionales de salud son profesionales independientes que reciben el pago por sus servicios
+- Los pagos se procesan a través de Stripe Connect
+- Los profesionales reciben el 85% de la tarifa de cita (después de las tarifas de procesamiento de Stripe aplicables)
+- Eleva.care retiene el 15% como tarifa de servicio de la plataforma
+- Las transferencias ocurren después de la finalización exitosa de la cita
+- El calendario de transferencias varía según la configuración del profesional y los requisitos bancarios locales
+- Todas las transferencias cumplen con las políticas de Stripe Connect y las regulaciones locales
+
+### 6.2 Resolución de Disputas
 
 - Las disputas de pago se manejan a través del proceso de resolución de disputas de Stripe
-- Los especialistas son notificados inmediatamente de cualquier disputa de pago
-- Se puede requerir documentación y evidencia para la resolución de disputas
+- Los profesionales de salud son notificados inmediatamente de cualquier disputa de pago
+- Puede ser necesaria documentación y evidencia para la resolución de disputas
 
-## 6. Moneda y Precios
+## 7. Moneda y Precios
 
-### 6.1 Moneda Base
+### 7.1 Moneda Base
 
 - Todos los precios se muestran en Euros (EUR)
 - La conversión de moneda puede aplicarse para pagos internacionales
-- Las tasas de cambio son determinadas por los procesadores de pago al momento de la transacción
+- Las tasas de cambio son determinadas por los procesadores de pago en el momento de la transacción
 
-### 6.2 Cambios de Precios
+### 7.2 Cambios de Precios
 
-- Los precios de las citas se fijan al momento de la reserva
+- Los precios de las citas se bloquean en el momento de la reserva
 - No se aplicarán cargos adicionales después de la confirmación de la reserva
+- La tarifa de servicio de la plataforma del 15% está incluida en el precio mostrado
 - Los impuestos y tarifas están incluidos en el precio mostrado
 
-## 7. Seguridad de Pagos
+## 8. Seguridad de Pagos
 
-### 7.1 Protección de Datos
+### 8.1 Protección de Datos
 
 - Todos los datos de pago se procesan de forma segura a través de Stripe
 - No almacenamos detalles de tarjetas de pago en nuestros servidores
-- Todas las transacciones están encriptadas y cumplen con los estándares PCI DSS
+- Todas las transacciones están cifradas y cumplen con los estándares PCI DSS
 
-### 7.2 Prevención de Fraude
+### 8.2 Prevención de Fraude
 
 - Los sistemas automatizados de detección de fraude están implementados
-- Las transacciones sospechosas pueden ser retrasadas o rechazadas
-- Se puede requerir verificación adicional para transacciones de alto valor
+- Las transacciones sospechosas pueden retrasarse o rechazarse
+- Puede ser necesaria verificación adicional para transacciones de alto valor
 
-## 8. Pagos Fallidos
+## 9. Pagos Fallidos
 
-### 8.1 Fallas de Pago
+### 9.1 Fallos de Pago
 
 - Los pagos fallidos resultan en la cancelación automática de la cita
-- Los pacientes son notificados inmediatamente por email
+- Los pacientes son notificados inmediatamente por correo electrónico
 - Se pueden hacer nuevas reservas con métodos de pago válidos
 
-### 8.2 Política de Reintento
+### 9.2 Política de Reintentos
 
-- Los reintentos automáticos de pago no se realizan
+- No se realizan reintentos automáticos de pago
 - Los pacientes deben iniciar nuevos intentos de pago manualmente
 - Múltiples intentos fallidos pueden resultar en restricciones temporales de reserva
 
-## 9. Soporte al Cliente
+## 10. Atención al Cliente
 
-### 9.1 Problemas de Pago
+### 10.1 Problemas de Pago
 
 Para preguntas o problemas relacionados con pagos:
 
 - Email: support@eleva.care
 - Tiempo de respuesta: Dentro de 24 horas
-- Disponible en múltiples idiomas (Inglés, Portugués, Español, Portugués Brasileño)
+- Disponible en varios idiomas (Inglés, Portugués, Español, Portugués Brasileño)
 
-### 9.2 Solicitudes de Reembolso
+### 10.2 Solicitudes de Reembolso
 
-- Las solicitudes de reembolso deben enviarse dentro de 7 días de la transacción original
+- Las solicitudes de reembolso deben presentarse dentro de 7 días de la transacción original
 - Los reembolsos por emergencia médica se consideran caso por caso
-- Las políticas de cancelación se aplican según se describe en nuestros Términos y Condiciones
+- Las políticas de cancelación se aplican según lo descrito en nuestros Términos y Condiciones
 
-## 10. Actualizaciones de Políticas
+## 11. Actualizaciones de Políticas
 
-Estas políticas de pago pueden actualizarse periódicamente. Los usuarios serán notificados de cambios significativos por email y notificaciones de la plataforma. El uso continuo de la plataforma constituye aceptación de las políticas actualizadas.
+Estas políticas de pago pueden actualizarse periódicamente. Los usuarios serán notificados de cambios significativos por correo electrónico y notificaciones de la plataforma. El uso continuado de la plataforma constituye la aceptación de las políticas actualizadas.
 
-## 11. Cumplimiento Legal
+## 12. Cumplimiento Legal
 
 Estas políticas cumplen con:
 
-- Leyes portuguesas de protección al consumidor
+- Leyes portuguesas de protección del consumidor
 - Regulaciones europeas de servicios de pago (PSD2)
-- Requisitos de protección de datos RGPD
+- Requisitos de protección de datos del RGPD
 - Términos de servicio y estándares de cumplimiento de Stripe
 
 ---
