--- a/content/privacy/en.mdx
+++ b/content/privacy/en.mdx
@@ -2,9 +2,41 @@
 
 _Effective Date:_ April 16, 2025
 
-At **Eleva.care** ("we," "us," "our"), we are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy explains how we collect, use, disclose, and protect your personal data when you use our services.
+At **Eleva.care** ("we," "us," "our"), we are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy explains how we collect, use, disclose, and protect your personal data when you use our **technology platform services**.
 
-By using or accessing Eleva.care's services, you agree to the collection and use of your data as described in this Privacy Policy.
+**IMPORTANT**: Eleva.care is a **healthcare technology marketplace platform** that connects patients with independent, licensed healthcare practitioners. We are NOT a healthcare provider. This Privacy Policy covers how WE (Eleva.care) handle your platform data. Your healthcare practitioner has their own separate responsibilities for the medical data they create.
+
+By using or accessing Eleva.care's platform services, you agree to the collection and use of your data as described in this Privacy Policy.
+
+## Eleva.care's Dual Role in Data Processing
+
+Eleva.care processes your data in **two distinct capacities**:
+
+### As Data Controller (Platform Operations)
+
+For the following data, **Eleva.care is the data controller**:
+
+- Your account information (name, email, phone number)
+- Booking and scheduling information
+- Payment information (processed via Stripe)
+- Platform usage analytics
+- Communications with our support team
+
+**Legal Basis**: Contract performance (GDPR Article 6(1)(b))
+
+### As Data Processor (Clinical Data Storage)
+
+For clinical session notes and medical records created by practitioners:
+
+- **The healthcare practitioner is the data controller**
+- **Eleva.care provides secure encrypted storage only**
+- We process this data ONLY on the practitioner's instructions
+- We do NOT access clinical notes without authorization
+
+**Legal Basis**:
+
+- Practitioners rely on GDPR Article 9(2)(h) (healthcare provision)
+- You consent to platform storage via Article 9(2)(a) (explicit consent)
 
 ## 1. Information We Collect
 
@@ -95,3 +127,50 @@ The controller responsible for processing your personal data is:
 - Rua Gil Vicente, 2, 2775-198 Parede, Portugal
 - Email: [support@eleva.care](mailto:support@eleva.care)
 - Phone: [+351 931 897 950](tel:+351931897950)
+
+---
+
+## International Data Protection Compliance
+
+### GDPR Compliance (European Union)
+
+As a Portugal-based company, we fully comply with the **General Data Protection Regulation (GDPR)**. All data processing activities adhere to GDPR principles including:
+
+- **Lawfulness, fairness, and transparency**
+- **Purpose limitation**
+- **Data minimization**
+- **Accuracy**
+- **Storage limitation**
+- **Integrity and confidentiality**
+
+For detailed information on our GDPR compliance, including our Data Processing Agreement, please visit our [Data Processing Agreement](/legal/dpa).
+
+### LGPD Compliance (Brazil)
+
+We also comply with Brazil's **Lei Geral de Proteção de Dados Pessoais (LGPD)**, ensuring that Brazilian users' data is protected with the same high standards as GDPR. Our LGPD compliance includes:
+
+- **Lawful data processing bases** (LGPD Article 7)
+- **Special categories of personal data protection** (LGPD Article 11)
+- **Data subject rights** (LGPD Articles 17-22)
+- **International data transfer safeguards** (LGPD Articles 33-36)
+- **Data security measures** (LGPD Article 46)
+
+**Brazilian Users' Rights:**
+
+Under LGPD, Brazilian users have the right to:
+
+1. **Confirmation of data processing** (Article 18, I)
+2. **Access to your data** (Article 18, II)
+3. **Correction of incomplete or inaccurate data** (Article 18, III)
+4. **Anonymization, blocking, or deletion of data** (Article 18, IV)
+5. **Data portability** (Article 18, V)
+6. **Deletion of data processed with consent** (Article 18, VI)
+7. **Information about data sharing** (Article 18, VII)
+8. **Information about the possibility of not providing consent** (Article 18, VIII)
+9. **Revocation of consent** (Article 18, IX)
+
+To exercise any of these rights, please contact us at [privacy@eleva.care](mailto:privacy@eleva.care).
+
+**Data Protection Officer (DPO):**
+
+For GDPR and LGPD-related inquiries, contact our DPO at: [dpo@eleva.care](mailto:dpo@eleva.care)
