--- a/content/privacy/es.mdx
+++ b/content/privacy/es.mdx
@@ -2,133 +2,176 @@
 
 _Fecha de Vigencia:_ 16 de abril de 2025
 
-En Eleva.care, respetamos su privacidad y nos comprometemos a proteger sus datos personales. Esta política de privacidad le informará sobre cómo cuidamos sus datos personales cuando visita nuestro sitio web y le informará sobre sus derechos de privacidad y cómo la ley lo protege.
+En **Eleva.care** ("nosotros," "nuestro"), estamos comprometidos a proteger su privacidad y garantizar que su información personal se maneje de manera segura y responsable. Esta Política de Privacidad explica cómo recopilamos, usamos, divulgamos y protegemos sus datos personales cuando utiliza nuestros **servicios de plataforma tecnológica**.
 
-## 1. Información Importante y Quiénes Somos
+**IMPORTANTE**: Eleva.care es una **plataforma marketplace de tecnología de salud** que conecta pacientes con profesionales de salud independientes y licenciados. NO somos un proveedor de atención médica. Esta Política de Privacidad cubre cómo NOSOTROS (Eleva.care) manejamos sus datos de plataforma. Su profesional de salud tiene sus propias responsabilidades separadas para los datos médicos que crea.
 
-### Propósito de Esta Política de Privacidad
+Al utilizar o acceder a los servicios de la plataforma Eleva.care, acepta la recopilación y uso de sus datos según se describe en esta Política de Privacidad.
 
-Esta política de privacidad tiene como objetivo proporcionarle información sobre cómo Eleva.care recopila y procesa sus datos personales a través de su uso de nuestro sitio web y servicios, incluidos los datos que pueda proporcionar a través de nuestro sitio cuando se registre en nuestra plataforma, utilice nuestros servicios o participe en una encuesta.
+## Rol Dual de Eleva.care en el Procesamiento de Datos
 
-Es importante que lea esta política de privacidad junto con cualquier otra política de privacidad o aviso de procesamiento justo que podamos proporcionar en ocasiones específicas cuando estemos recopilando o procesando datos personales sobre usted, para que esté completamente consciente de cómo y por qué estamos utilizando sus datos.
+Eleva.care procesa sus datos en **dos capacidades distintas**:
 
-### Controlador
+### Como Responsable del Tratamiento (Operaciones de la Plataforma)
 
-**Búzios e Tartarugas, Lda**, operando como **Eleva.care**, es el controlador y responsable de sus datos personales (colectivamente referidos como "Eleva.care", "nosotros", "nos" o "nuestro" en esta política de privacidad).
+Para los siguientes datos, **Eleva.care es el responsable del tratamiento**:
 
-Detalles de contacto:
+- Su información de cuenta (nombre, correo electrónico, número de teléfono)
+- Información de reservas y programación
+- Información de pago (procesada vía Stripe)
+- Análisis de uso de la plataforma
+- Comunicaciones con nuestro equipo de soporte
 
-- **Nombre de la Empresa:** Búzios e Tartarugas, Lda
-- **Dirección:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Email:** [privacy@eleva.care](mailto:privacy@eleva.care)
-- **Teléfono:** [+351 931 897 950](tel:+351931897950)
-- **NIPC/VAT:** 515001708
+**Base Legal**: Ejecución del contrato (Artículo 6(1)(b) del RGPD)
 
-## 2. Los Datos que Recopilamos Sobre Usted
+### Como Encargado del Tratamiento (Almacenamiento de Datos Clínicos)
 
-Datos personales, o información personal, significa cualquier información sobre un individuo a partir de la cual esa persona puede ser identificada. No incluye datos donde la identidad ha sido eliminada (datos anónimos).
+Para notas de sesión clínicas y registros médicos creados por los profesionales:
 
-Podemos recopilar, usar, almacenar y transferir diferentes tipos de datos personales sobre usted, que hemos agrupado de la siguiente manera:
+- **El profesional de salud es el responsable del tratamiento**
+- **Eleva.care proporciona solo almacenamiento cifrado seguro**
+- Procesamos estos datos SOLO bajo las instrucciones del profesional
+- NO accedemos a notas clínicas sin autorización
 
-### Para Usuarios Generales
+**Base Legal**:
 
-- **Datos de Identidad** incluyen nombre, apellido, nombre de usuario o identificador similar, y fecha de nacimiento.
-- **Datos de Contacto** incluyen dirección de facturación, dirección de entrega, dirección de correo electrónico y números de teléfono.
-- **Datos Financieros** incluyen detalles de cuenta bancaria y tarjeta de pago para procesamiento de transacciones.
-- **Datos de Transacción** incluyen detalles sobre pagos hacia y desde usted, y otros detalles de servicios que ha comprado de nosotros.
-- **Datos Técnicos** incluyen dirección de protocolo de Internet (IP), datos de inicio de sesión, tipo y versión de navegador, configuración de zona horaria y ubicación, tipos y versiones de plugins de navegador, sistema operativo y plataforma, y otra tecnología en los dispositivos que utiliza para acceder a nuestro sitio web.
-- **Datos de Perfil** incluyen su nombre de usuario y contraseña, sus intereses, preferencias, retroalimentación y respuestas de encuestas.
-- **Datos de Uso** incluyen información sobre cómo utiliza nuestro sitio web, productos y servicios.
-- **Datos de Marketing y Comunicaciones** incluyen sus preferencias para recibir marketing de nosotros y nuestros terceros, y sus preferencias de comunicación.
+- Los profesionales se basan en el Artículo 9(2)(h) del RGPD (prestación de atención médica)
+- Usted consiente el almacenamiento en la plataforma vía Artículo 9(2)(a) (consentimiento explícito)
 
-### Para Profesionales de la Salud
+## 1. Información que Recopilamos
 
-Además de lo anterior, recopilamos:
+Recopilamos diferentes tipos de información para proporcionar y mejorar nuestros servicios. La información que recopilamos incluye:
 
-- **Credenciales Profesionales** incluyen su licencia médica, especialidad, certificaciones y afiliaciones institucionales.
-- **Información de Práctica** incluyen detalles de su práctica médica, horarios de consulta, políticas de seguro aceptadas y tarifas de servicio.
+**a. Información Personal**
 
-### Para Pacientes
+- **Nombre**
+- **Dirección de Correo Electrónico**
+- **Número de Teléfono**
+- **Información de Pago** (por ejemplo, detalles de tarjeta de crédito)
+- **Datos Médicos** (si aplica)
+- **Dirección y otros detalles de contacto**
 
-Además de los datos de usuario general, recopilamos:
+**b. Datos de Uso**
 
-- **Información de Salud** - Con su consentimiento explícito, recopilamos información sobre condiciones médicas, medicamentos, alergias, historial médico y otra información de salud que usted elige proporcionar para facilitar servicios de atención médica. Esta es la categoría de datos más sensibles que procesamos, y se maneja con el más alto nivel de seguridad y confidencialidad.
-- **Información de Seguro** incluye detalles sobre su cobertura de seguro médico, número de póliza, y proveedor de seguro.
+- **Dirección IP**
+- **Información del Dispositivo**
+- **Hora y Fecha de Uso**
+- **Páginas Visitadas en el Sitio Web**
+- **URLs de Referencia**
 
-## 3. Cómo Utilizamos Sus Datos Personales
+**c. Cookies y Tecnologías de Seguimiento**
 
-Solo utilizaremos sus datos personales cuando la ley nos lo permita. Más comúnmente, utilizaremos sus datos personales en las siguientes circunstancias:
+Utilizamos cookies y tecnologías de seguimiento similares para rastrear su actividad en nuestros servicios y almacenar cierta información. Las cookies nos ayudan a personalizar su experiencia y comprender cómo se utilizan nuestros servicios.
 
-- Donde necesitemos ejecutar el contrato que estamos a punto de celebrar o hemos celebrado con usted.
-- Donde sea necesario para nuestros intereses legítimos (o los de un tercero) y sus intereses y derechos fundamentales no anulan esos intereses.
-- Donde necesitemos cumplir con una obligación legal o regulatoria.
-- Con respecto a datos de salud, solo con su consentimiento explícito.
+Puede controlar el uso de cookies a nivel del navegador individual, pero deshabilitar las cookies puede afectar su capacidad para usar ciertas funciones de nuestros servicios.
 
-### Propósitos para los Cuales Utilizaremos Sus Datos Personales
+## 2. Cómo Usamos Su Información
 
-Hemos establecido a continuación una descripción de todas las formas en que planeamos utilizar sus datos personales, y qué bases legales confiamos para hacerlo:
+Utilizamos la información que recopilamos para varios propósitos, incluyendo:
 
-- **Para registrar y gestionar su cuenta con nosotros**
-- **Para proporcionar servicios de atención médica** a través de nuestra plataforma
-- **Para gestionar nuestra relación con usted**, incluyendo notificarle sobre cambios en nuestros términos o política de privacidad
-- **Para procesar pagos por servicios** prestados a través de nuestra plataforma
-- **Para administrar y proteger nuestro negocio y este sitio web** (incluida resolución de problemas, análisis de datos, pruebas, mantenimiento del sistema, soporte, reportes y alojamiento de datos)
-- **Para entregar contenido y anuncios relevantes del sitio web** para usted y medir o comprender la efectividad de la publicidad que le servimos
-- **Para utilizar análisis de datos** para mejorar nuestro sitio web, productos/servicios, marketing, relaciones con clientes y experiencias
+- **Proporcionar y mejorar nuestros servicios:** Para ofrecer servicios de salud personalizados, programación de citas y atención al cliente.
+- **Procesar pagos:** Para completar transacciones y facturación de servicios proporcionados.
+- **Comunicarnos con usted:** Para enviarle información importante sobre su cuenta, actualizaciones de servicios u ofertas promocionales (si ha optado por recibirlas).
+- **Mejorar la experiencia del usuario:** Para analizar tendencias y comportamiento en nuestra plataforma, permitiéndonos mejorar su experiencia y adaptar nuestros servicios a sus necesidades.
+- **Cumplimiento de obligaciones legales:** Para cumplir con leyes, regulaciones y procesos legales aplicables.
 
-## 4. Revelación de Sus Datos Personales
+## 3. Cómo Compartimos Su Información
 
-Podemos compartir sus datos personales con las partes establecidas a continuación para los propósitos establecidos en la sección 3 anterior:
+No vendemos, intercambiamos ni compartimos de otro modo sus datos personales con terceros, excepto en las siguientes circunstancias:
 
-- **Profesionales de la Salud** - Para facilitar servicios de atención médica
-- **Proveedores de Servicio** - Que proporcionan servicios de TI, administración de sistemas, y funciones de plataforma
-- **Procesadores de Pago** - Para procesar transacciones (nunca almacenan sus datos completos de pago)
-- **Asesores Profesionales** - Incluyendo abogados, banqueros, auditores y aseguradores
-- **Autoridades Reguladoras y otros organismos** - Como requerido por ley
+- **Con proveedores de servicios:** Podemos compartir su información con empresas o individuos terceros que proporcionan servicios en nuestro nombre, como procesamiento de pagos o servicios de alojamiento. Estos proveedores están obligados a proteger su información y usarla solo con el propósito de realizar servicios para nosotros.
+- **Por razones legales:** Podemos divulgar sus datos personales si es requerido por ley o en respuesta a procesos legales, como una citación u orden judicial.
+- **Transferencias comerciales:** En caso de una fusión, adquisición o venta de activos, su información puede ser transferida como parte de la transacción. Le notificaremos antes de que sus datos personales sean transferidos y queden sujetos a una política de privacidad diferente.
 
-Exigimos a todos los terceros que respeten la seguridad de sus datos personales y los traten de acuerdo con la ley. No permitimos a nuestros proveedores de servicios terceros utilizar sus datos personales para sus propios propósitos y solo les permitimos procesar sus datos personales para propósitos específicos y de acuerdo con nuestras instrucciones.
+## 4. Retención de Datos
 
-## 5. Transferencias Internacionales
+Retendremos sus datos personales solo durante el tiempo necesario para cumplir los propósitos descritos en esta Política de Privacidad, a menos que un período de retención más largo sea requerido o permitido por ley.
 
-Operamos principalmente en la Unión Europea. Sin embargo, algunos de nuestros proveedores de servicio pueden estar ubicados fuera del Espacio Económico Europeo (EEE), por lo que su procesamiento de sus datos personales implicará una transferencia de datos fuera del EEE.
+## 5. Sus Derechos de Protección de Datos
 
-Siempre que transferimos sus datos personales fuera del EEE, nos aseguramos de que se les proporcione un grado similar de protección asegurándonos de que al menos una de las siguientes salvaguardas se implemente:
+Dependiendo de su ubicación, puede tener los siguientes derechos con respecto a sus datos personales:
 
-- Transferiremos sus datos personales solo a países que han sido considerados que proporcionan un nivel adecuado de protección para datos personales por la Comisión Europea.
-- Donde usamos ciertos proveedores de servicio, podemos usar contratos específicos aprobados por la Comisión Europea que dan a los datos personales la misma protección que tiene en Europa (conocidas como Cláusulas Contractuales Estándar).
+- **Derecho de acceso:** Puede solicitar una copia de los datos personales que tenemos sobre usted.
+- **Derecho de rectificación:** Puede solicitar que corrijamos cualquier información inexacta o incompleta.
+- **Derecho al borrado:** Puede solicitar que eliminemos sus datos personales, sujeto a ciertas excepciones.
+- **Derecho a la limitación:** Puede solicitar que limitemos el procesamiento de sus datos personales bajo ciertas circunstancias.
+- **Derecho a la portabilidad de datos:** Puede solicitar una transferencia de sus datos personales a otra organización en un formato estructurado, de uso común y legible por máquina.
+- **Derecho a retirar el consentimiento:** Si nos basamos en su consentimiento para procesar sus datos, puede retirar ese consentimiento en cualquier momento.
 
-## 6. Seguridad de Datos
+Para ejercer cualquiera de estos derechos, contáctenos utilizando la información proporcionada a continuación.
 
-Hemos implementado medidas de seguridad apropiadas para prevenir que sus datos personales se pierdan accidentalmente, se usen o accedan de manera no autorizada, se alteren o se revelen. Además, limitamos el acceso a sus datos personales a aquellos empleados, agentes, contratistas y otros terceros que tienen una necesidad comercial de saber. Solo procesarán sus datos personales bajo nuestras instrucciones y están sujetos a un deber de confidencialidad.
+## 6. Seguridad de Sus Datos
 
-Tenemos procedimientos establecidos para tratar con cualquier sospecha de violación de datos personales y le notificaremos a usted y a cualquier regulador aplicable de una violación donde se nos requiera legalmente hacerlo.
+Implementamos medidas técnicas y organizativas apropiadas para proteger sus datos personales contra acceso no autorizado, alteración o destrucción. Sin embargo, ninguna transmisión de datos por internet o método de almacenamiento electrónico es 100% seguro, y no podemos garantizar la seguridad absoluta de su información.
 
-## 7. Retención de Datos
+## 7. Transferencias Internacionales
 
-Solo retendremos sus datos personales durante el tiempo que sea necesario para cumplir con los propósitos para los que los recopilamos, incluyendo para los propósitos de satisfacer cualquier requisito legal, contable o de reporte.
+Si está ubicado fuera de Portugal, tenga en cuenta que sus datos personales pueden ser transferidos a y procesados en Portugal u otros países donde Eleva.care opera. Al utilizar nuestros servicios, consiente la transferencia de sus datos a países que pueden tener leyes de protección de datos diferentes.
 
-Para determinar el período de retención apropiado para datos personales, consideramos la cantidad, naturaleza y sensibilidad de los datos personales, el riesgo potencial de daño por uso o revelación no autorizada de sus datos personales, los propósitos para los cuales procesamos sus datos personales y si podemos lograr esos propósitos a través de otros medios, y los requisitos legales aplicables.
+## 8. Privacidad de los Niños
 
-## 8. Sus Derechos Legales
+Nuestros servicios no están destinados a niños menores de 16 años, y no recopilamos intencionalmente datos personales de niños. Si nos enteramos de que hemos recopilado datos personales de un niño menor de 16 años sin verificación del consentimiento parental, tomaremos medidas para eliminar esa información.
 
-Bajo ciertas circunstancias, usted tiene derechos bajo las leyes de protección de datos en relación con sus datos personales, incluyendo el derecho a:
+## 9. Cambios a Esta Política de Privacidad
 
-- **Solicitar acceso** a sus datos personales
-- **Solicitar corrección** de sus datos personales
-- **Solicitar borrado** de sus datos personales
-- **Objetar al procesamiento** de sus datos personales
-- **Solicitar restricción del procesamiento** de sus datos personales
-- **Solicitar la transferencia** de sus datos personales
-- **Retirar el consentimiento** en cualquier momento
-
-Si desea ejercer cualquiera de los derechos establecidos anteriormente, por favor contáctenos.
+Podemos actualizar esta Política de Privacidad periódicamente. Cualquier cambio será publicado en esta página con una fecha de vigencia actualizada. Le recomendamos revisar esta Política de Privacidad periódicamente para mantenerse informado sobre cómo estamos protegiendo su información.
 
 ---
 
-## Información de Contacto
+## Responsable del Tratamiento
 
-Si tiene preguntas sobre esta Política de Privacidad, por favor contáctenos:
+El responsable del procesamiento de sus datos personales es:
 
-- **Correo electrónico:** [privacy@eleva.care](mailto:privacy@eleva.care)
-- **Correo postal:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Teléfono:** [+351 931 897 950](tel:+351931897950)
+- **BÚZIOS E TARTARUGAS - LDA**
+- Operando comercialmente como **Eleva.care**
+- NIPC/NIF: 515001708
+- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
+- Email: [support@eleva.care](mailto:support@eleva.care)
+- Teléfono: [+351 931 897 950](tel:+351931897950)
+
+---
+
+## Cumplimiento Internacional de Protección de Datos
+
+### Cumplimiento del RGPD (Unión Europea)
+
+Como empresa con sede en Portugal, cumplimos plenamente con el **Reglamento General de Protección de Datos (RGPD)**. Todas las actividades de procesamiento de datos se adhieren a los principios del RGPD, incluyendo:
+
+- **Legalidad, lealtad y transparencia**
+- **Limitación de la finalidad**
+- **Minimización de datos**
+- **Exactitud**
+- **Limitación del plazo de conservación**
+- **Integridad y confidencialidad**
+
+Para información detallada sobre nuestro cumplimiento del RGPD, incluido nuestro Acuerdo de Procesamiento de Datos, visite nuestro [Acuerdo de Procesamiento de Datos](/legal/dpa).
+
+### Cumplimiento de la LGPD (Brasil)
+
+También cumplimos con la **Lei Geral de Proteção de Dados Pessoais (LGPD)** de Brasil, garantizando que los datos de los usuarios brasileños estén protegidos con los mismos altos estándares que el RGPD. Nuestro cumplimiento de la LGPD incluye:
+
+- **Bases legales para el procesamiento de datos** (LGPD Artículo 7)
+- **Protección de categorías especiales de datos personales** (LGPD Artículo 11)
+- **Derechos de los titulares de datos** (LGPD Artículos 17-22)
+- **Salvaguardias para la transferencia internacional de datos** (LGPD Artículos 33-36)
+- **Medidas de seguridad de datos** (LGPD Artículo 46)
+
+**Derechos de los Usuarios Brasileños:**
+
+Bajo la LGPD, los usuarios brasileños tienen derecho a:
+
+1. **Confirmación del procesamiento de datos** (Artículo 18, I)
+2. **Acceso a sus datos** (Artículo 18, II)
+3. **Corrección de datos incompletos o inexactos** (Artículo 18, III)
+4. **Anonimización, bloqueo o eliminación de datos** (Artículo 18, IV)
+5. **Portabilidad de datos** (Artículo 18, V)
+6. **Eliminación de datos procesados con consentimiento** (Artículo 18, VI)
+7. **Información sobre el intercambio de datos** (Artículo 18, VII)
+8. **Información sobre la posibilidad de no otorgar consentimiento** (Artículo 18, VIII)
+9. **Revocación del consentimiento** (Artículo 18, IX)
+
+Para ejercer cualquiera de estos derechos, póngase en contacto con nosotros en [privacy@eleva.care](mailto:privacy@eleva.care).
+
+**Delegado de Protección de Datos (DPO):**
+
+Para consultas relacionadas con el RGPD y la LGPD, contacte a nuestro DPO en: [dpo@eleva.care](mailto:dpo@eleva.care)
