--- a/content/privacy/pt.mdx
+++ b/content/privacy/pt.mdx
@@ -2,133 +2,176 @@
 
 _Data de Vigência:_ 16 de abril de 2025
 
-Na Eleva.care, respeitamos a sua privacidade e estamos comprometidos em proteger os seus dados pessoais. Esta política de privacidade irá informá-lo sobre como cuidamos dos seus dados pessoais quando visita o nosso website e informá-lo sobre os seus direitos de privacidade e como a lei o protege.
+Na **Eleva.care** ("nós," "nosso"), estamos comprometidos em proteger a sua privacidade e garantir que as suas informações pessoais sejam tratadas de forma segura e responsável. Esta Política de Privacidade explica como recolhemos, utilizamos, divulgamos e protegemos os seus dados pessoais quando utiliza os nossos **serviços de plataforma tecnológica**.
 
-## 1. Informação Importante e Quem Somos
+**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia para saúde** que conecta pacientes com profissionais de saúde independentes e licenciados. NÃO somos um prestador de cuidados de saúde. Esta Política de Privacidade cobre como NÓS (Eleva.care) tratamos os seus dados da plataforma. O seu profissional de saúde tem as suas próprias responsabilidades separadas para os dados médicos que cria.
 
-### Propósito Desta Política de Privacidade
+Ao utilizar ou aceder aos serviços da plataforma Eleva.care, concorda com a recolha e utilização dos seus dados conforme descrito nesta Política de Privacidade.
 
-Esta política de privacidade visa proporcionar-lhe informação sobre como a Eleva.care recolhe e processa os seus dados pessoais através da sua utilização do nosso website e serviços, incluindo quaisquer dados que possa fornecer através do nosso site quando se regista na nossa plataforma, utiliza os nossos serviços ou participa num inquérito.
+## Papel Dual da Eleva.care no Processamento de Dados
 
-É importante que leia esta política de privacidade juntamente com qualquer outra política de privacidade ou aviso de processamento justo que possamos fornecer em ocasiões específicas quando estamos a recolher ou processar dados pessoais sobre si, para que esteja totalmente ciente de como e porquê estamos a utilizar os seus dados.
+A Eleva.care processa os seus dados em **duas capacidades distintas**:
 
-### Responsável pelo Tratamento
+### Como Responsável pelo Tratamento (Operações da Plataforma)
 
-**Búzios e Tartarugas, Lda**, operando como **Eleva.care**, é o responsável pelo tratamento e responsável pelos seus dados pessoais (coletivamente referidos como "Eleva.care", "nós", "nos" ou "nosso" nesta política de privacidade).
+Para os seguintes dados, **a Eleva.care é o responsável pelo tratamento**:
 
-Detalhes de contacto:
+- As suas informações de conta (nome, email, número de telefone)
+- Informações de marcação e agendamento
+- Informações de pagamento (processadas via Stripe)
+- Análises de utilização da plataforma
+- Comunicações com a nossa equipa de suporte
 
-- **Nome da Empresa:** Búzios e Tartarugas, Lda
-- **Morada:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Email:** [privacy@eleva.care](mailto:privacy@eleva.care)
-- **Telefone:** [+351 931 897 950](tel:+351931897950)
-- **NIPC/VAT:** 515001708
+**Base Legal**: Execução do contrato (Artigo 6(1)(b) do RGPD)
 
-## 2. Os Dados que Recolhemos Sobre Si
+### Como Subcontratante (Armazenamento de Dados Clínicos)
 
-Dados pessoais, ou informação pessoal, significa qualquer informação sobre um indivíduo a partir da qual essa pessoa pode ser identificada. Não inclui dados onde a identidade foi removida (dados anónimos).
+Para notas de sessão clínicas e registos médicos criados pelos profissionais:
 
-Podemos recolher, utilizar, armazenar e transferir diferentes tipos de dados pessoais sobre si, que agrupámos da seguinte forma:
+- **O profissional de saúde é o responsável pelo tratamento**
+- **A Eleva.care fornece apenas armazenamento encriptado seguro**
+- Processamos estes dados APENAS sob as instruções do profissional
+- NÃO acedemos a notas clínicas sem autorização
 
-### Para Utilizadores Gerais
+**Base Legal**:
 
-- **Dados de Identidade** incluem nome, apelido, nome de utilizador ou identificador semelhante, e data de nascimento.
-- **Dados de Contacto** incluem morada de faturação, morada de entrega, endereço de email e números de telefone.
-- **Dados Financeiros** incluem detalhes de conta bancária e cartão de pagamento para processamento de transações.
-- **Dados de Transação** incluem detalhes sobre pagamentos de e para si, e outros detalhes de serviços que comprou de nós.
-- **Dados Técnicos** incluem endereço de protocolo de Internet (IP), dados de login, tipo e versão de navegador, definição de fuso horário e localização, tipos e versões de plugins do navegador, sistema operativo e plataforma, e outra tecnologia nos dispositivos que utiliza para aceder ao nosso website.
-- **Dados de Perfil** incluem o seu nome de utilizador e palavra-passe, os seus interesses, preferências, feedback e respostas a inquéritos.
-- **Dados de Utilização** incluem informações sobre como utiliza o nosso website, produtos e serviços.
-- **Dados de Marketing e Comunicações** incluem as suas preferências em receber marketing de nós e dos nossos terceiros, e as suas preferências de comunicação.
+- Os profissionais baseiam-se no Artigo 9(2)(h) do RGPD (prestação de cuidados de saúde)
+- Você consente com o armazenamento na plataforma via Artigo 9(2)(a) (consentimento explícito)
 
-### Para Profissionais de Saúde
+## 1. Informação que Recolhemos
 
-Além do acima referido, recolhemos:
+Recolhemos diferentes tipos de informação para fornecer e melhorar os nossos serviços. A informação que recolhemos inclui:
 
-- **Credenciais Profissionais** incluem a sua licença médica, especialidade, certificações e afiliações institucionais.
-- **Informação de Prática** incluem detalhes da sua prática médica, horários de consulta, políticas de seguro aceites e taxas de serviço.
+**a. Informação Pessoal**
 
-### Para Pacientes
+- **Nome**
+- **Endereço de Email**
+- **Número de Telefone**
+- **Informações de Pagamento** (por exemplo, detalhes de cartão de crédito)
+- **Dados Médicos** (se aplicável)
+- **Morada e outros detalhes de contacto**
 
-Além dos dados de utilizador geral, recolhemos:
+**b. Dados de Utilização**
 
-- **Informação de Saúde** - Com o seu consentimento explícito, recolhemos informações sobre condições médicas, medicamentos, alergias, histórico médico e outra informação de saúde que opta por fornecer para facilitar serviços de saúde. Esta é a categoria de dados mais sensível que processamos, e é tratada com o mais alto nível de segurança e confidencialidade.
-- **Informação de Seguro** inclui detalhes sobre a sua cobertura de seguro de saúde, número de apólice e provedor de seguro.
+- **Endereço IP**
+- **Informação do Dispositivo**
+- **Hora e Data de Utilização**
+- **Páginas Visitadas no Website**
+- **URLs de Referência**
 
-## 3. Como Utilizamos os Seus Dados Pessoais
+**c. Cookies e Tecnologias de Rastreamento**
 
-Apenas utilizaremos os seus dados pessoais quando a lei nos permitir. Mais comummente, utilizaremos os seus dados pessoais nas seguintes circunstâncias:
+Utilizamos cookies e tecnologias de rastreamento semelhantes para acompanhar a sua atividade nos nossos serviços e armazenar certas informações. Os cookies ajudam-nos a personalizar a sua experiência e compreender como os nossos serviços são utilizados.
 
-- Quando precisamos de executar o contrato que estamos prestes a celebrar ou celebrámos consigo.
-- Quando é necessário para os nossos interesses legítimos (ou os de um terceiro) e os seus interesses e direitos fundamentais não se sobrepõem a esses interesses.
-- Quando precisamos de cumprir uma obrigação legal ou regulatória.
-- No que diz respeito a dados de saúde, apenas com o seu consentimento explícito.
+Pode controlar o uso de cookies ao nível do navegador individual, mas desativar cookies pode afetar a sua capacidade de utilizar certas funcionalidades dos nossos serviços.
 
-### Finalidades para as Quais Utilizaremos os Seus Dados Pessoais
+## 2. Como Utilizamos a Sua Informação
 
-Estabelecemos abaixo uma descrição de todas as formas como planeamos utilizar os seus dados pessoais, e quais as bases legais em que nos apoiamos para o fazer:
+Utilizamos a informação que recolhemos para vários propósitos, incluindo:
 
-- **Para registar e gerir a sua conta connosco**
-- **Para fornecer serviços de saúde** através da nossa plataforma
-- **Para gerir a nossa relação consigo**, incluindo notificá-lo sobre alterações aos nossos termos ou política de privacidade
-- **Para processar pagamentos por serviços** prestados através da nossa plataforma
-- **Para administrar e proteger o nosso negócio e este website** (incluindo resolução de problemas, análise de dados, testes, manutenção do sistema, suporte, reporte e alojamento de dados)
-- **Para entregar conteúdo relevante do website e anúncios** para si e medir ou compreender a eficácia da publicidade que lhe apresentamos
-- **Para utilizar análise de dados** para melhorar o nosso website, produtos/serviços, marketing, relações com os clientes e experiências
+- **Fornecer e melhorar os nossos serviços:** Para oferecer serviços de saúde personalizados, agendamento de consultas e apoio ao cliente.
+- **Processar pagamentos:** Para completar transações e faturação de serviços fornecidos.
+- **Comunicar consigo:** Para lhe enviar informações importantes relativamente à sua conta, atualizações de serviços ou ofertas promocionais (se optou por recebê-las).
+- **Melhorar a experiência do utilizador:** Para analisar tendências e comportamento na nossa plataforma, permitindo-nos melhorar a sua experiência e adaptar os nossos serviços às suas necessidades.
+- **Cumprimento de obrigações legais:** Para cumprir com leis, regulamentos e processos legais aplicáveis.
 
-## 4. Divulgação dos Seus Dados Pessoais
+## 3. Como Partilhamos a Sua Informação
 
-Podemos partilhar os seus dados pessoais com as partes indicadas abaixo para os fins estabelecidos na secção 3 acima:
+Não vendemos, trocamos ou partilhamos de outra forma os seus dados pessoais com terceiros, exceto nas seguintes circunstâncias:
 
-- **Profissionais de Saúde** - Para facilitar serviços de saúde
-- **Prestadores de Serviços** - Que fornecem serviços de TI, administração de sistemas e funções de plataforma
-- **Processadores de Pagamento** - Para processar transações (nunca armazenam os seus dados completos de pagamento)
-- **Consultores Profissionais** - Incluindo advogados, banqueiros, auditores e seguradoras
-- **Autoridades Reguladoras e outros organismos** - Conforme exigido por lei
+- **Com prestadores de serviços:** Podemos partilhar a sua informação com empresas ou indivíduos terceiros que fornecem serviços em nosso nome, tais como processamento de pagamentos ou serviços de hospedagem. Estes prestadores são obrigados a proteger a sua informação e utilizá-la apenas com o propósito de realizar serviços para nós.
+- **Por razões legais:** Podemos divulgar os seus dados pessoais se tal for exigido por lei ou em resposta a processos legais, tais como uma intimação ou ordem judicial.
+- **Transferências comerciais:** No caso de uma fusão, aquisição ou venda de ativos, a sua informação pode ser transferida como parte da transação. Notificá-lo-emos antes de os seus dados pessoais serem transferidos e ficarem sujeitos a uma política de privacidade diferente.
 
-Exigimos a todos os terceiros que respeitem a segurança dos seus dados pessoais e os tratem de acordo com a lei. Não permitimos que os nossos prestadores de serviços terceiros utilizem os seus dados pessoais para os seus próprios fins e apenas lhes permitimos processar os seus dados pessoais para fins específicos e de acordo com as nossas instruções.
+## 4. Retenção de Dados
 
-## 5. Transferências Internacionais
+Reteremos os seus dados pessoais apenas pelo tempo necessário para cumprir os propósitos descritos nesta Política de Privacidade, a menos que um período de retenção mais longo seja exigido ou permitido por lei.
 
-Operamos principalmente na União Europeia. No entanto, alguns dos nossos prestadores de serviços podem estar localizados fora do Espaço Económico Europeu (EEE), pelo que o seu processamento dos seus dados pessoais envolverá uma transferência de dados para fora do EEE.
+## 5. Os Seus Direitos de Proteção de Dados
 
-Sempre que transferimos os seus dados pessoais para fora do EEE, garantimos que lhes é oferecido um grau semelhante de proteção, garantindo que pelo menos uma das seguintes salvaguardas é implementada:
+Dependendo da sua localização, pode ter os seguintes direitos relativamente aos seus dados pessoais:
 
-- Transferiremos os seus dados pessoais apenas para países que tenham sido considerados como proporcionando um nível adequado de proteção para dados pessoais pela Comissão Europeia.
-- Quando utilizamos determinados prestadores de serviços, podemos utilizar contratos específicos aprovados pela Comissão Europeia que dão aos dados pessoais a mesma proteção que têm na Europa (conhecidas como Cláusulas Contratuais Padrão).
+- **Direito de acesso:** Pode solicitar uma cópia dos dados pessoais que detemos sobre si.
+- **Direito de retificação:** Pode solicitar que corrijamos qualquer informação imprecisa ou incompleta.
+- **Direito ao apagamento:** Pode solicitar que eliminemos os seus dados pessoais, sujeito a certas exceções.
+- **Direito à limitação:** Pode solicitar que limitemos o processamento dos seus dados pessoais sob certas circunstâncias.
+- **Direito à portabilidade dos dados:** Pode solicitar uma transferência dos seus dados pessoais para outra organização num formato estruturado, de uso comum e legível por máquina.
+- **Direito de retirar o consentimento:** Se nos baseamos no seu consentimento para processar os seus dados, pode retirar esse consentimento a qualquer momento.
 
-## 6. Segurança de Dados
+Para exercer qualquer um destes direitos, contacte-nos utilizando as informações fornecidas abaixo.
 
-Implementámos medidas de segurança apropriadas para prevenir que os seus dados pessoais sejam acidentalmente perdidos, utilizados ou acedidos de forma não autorizada, alterados ou divulgados. Além disso, limitamos o acesso aos seus dados pessoais a esses funcionários, agentes, contratantes e outros terceiros que têm uma necessidade comercial de saber. Eles só processarão os seus dados pessoais de acordo com as nossas instruções e estão sujeitos a um dever de confidencialidade.
+## 6. Segurança dos Seus Dados
 
-Temos procedimentos estabelecidos para lidar com qualquer suspeita de violação de dados pessoais e notificaremos a si e a qualquer regulador aplicável de uma violação onde somos legalmente obrigados a fazê-lo.
+Implementamos medidas técnicas e organizacionais apropriadas para proteger os seus dados pessoais contra acesso não autorizado, alteração ou destruição. No entanto, nenhuma transmissão de dados pela internet ou método de armazenamento eletrónico é 100% seguro, e não podemos garantir a segurança absoluta da sua informação.
 
-## 7. Retenção de Dados
+## 7. Transferências Internacionais
 
-Apenas reteremos os seus dados pessoais pelo tempo necessário para cumprir os propósitos para os quais os recolhemos, incluindo para os fins de satisfazer quaisquer requisitos legais, contabilísticos ou de reporte.
+Se estiver localizado fora de Portugal, esteja ciente de que os seus dados pessoais podem ser transferidos para e processados em Portugal ou outros países onde a Eleva.care opera. Ao utilizar os nossos serviços, consente com a transferência dos seus dados para países que podem ter leis de proteção de dados diferentes.
 
-Para determinar o período de retenção apropriado para dados pessoais, consideramos a quantidade, natureza e sensibilidade dos dados pessoais, o risco potencial de dano por uso não autorizado ou divulgação dos seus dados pessoais, os propósitos para os quais processamos os seus dados pessoais e se podemos alcançar esses propósitos através de outros meios, e os requisitos legais aplicáveis.
+## 8. Privacidade de Crianças
 
-## 8. Os Seus Direitos Legais
+Os nossos serviços não se destinam a crianças com menos de 16 anos, e não recolhemos intencionalmente dados pessoais de crianças. Se tomarmos conhecimento de que recolhemos dados pessoais de uma criança com menos de 16 anos sem verificação do consentimento parental, tomaremos medidas para remover essa informação.
 
-Em determinadas circunstâncias, tem direitos ao abrigo das leis de proteção de dados em relação aos seus dados pessoais, incluindo o direito a:
+## 9. Alterações a Esta Política de Privacidade
 
-- **Solicitar acesso** aos seus dados pessoais
-- **Solicitar correção** dos seus dados pessoais
-- **Solicitar o apagamento** dos seus dados pessoais
-- **Opor-se ao processamento** dos seus dados pessoais
-- **Solicitar restrição de processamento** dos seus dados pessoais
-- **Solicitar a transferência** dos seus dados pessoais
-- **Retirar o consentimento** a qualquer momento
-
-Se desejar exercer qualquer um dos direitos acima estabelecidos, por favor contacte-nos.
+Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão publicadas nesta página com uma data de vigência atualizada. Encorajamos a rever esta Política de Privacidade periodicamente para se manter informado sobre como estamos a proteger a sua informação.
 
 ---
 
-## Informação de Contacto
+## Responsável pelo Tratamento
 
-Se tiver quaisquer questões sobre esta Política de Privacidade, por favor contacte-nos:
+O responsável pelo processamento dos seus dados pessoais é:
 
-- **Email:** [privacy@eleva.care](mailto:privacy@eleva.care)
-- **Morada postal:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Telefone:** [+351 931 897 950](tel:+351931897950)
+- **BÚZIOS E TARTARUGAS - LDA**
+- Operando comercialmente como **Eleva.care**
+- NIPC/NIF: 515001708
+- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
+- Email: [support@eleva.care](mailto:support@eleva.care)
+- Telefone: [+351 931 897 950](tel:+351931897950)
+
+---
+
+## Conformidade Internacional com a Proteção de Dados
+
+### Conformidade com o RGPD (União Europeia)
+
+Como empresa sediada em Portugal, cumprimos integralmente o **Regulamento Geral sobre a Proteção de Dados (RGPD)**. Todas as atividades de processamento de dados seguem os princípios do RGPD, incluindo:
+
+- **Legalidade, lealdade e transparência**
+- **Limitação das finalidades**
+- **Minimização dos dados**
+- **Exatidão**
+- **Limitação da conservação**
+- **Integridade e confidencialidade**
+
+Para informações detalhadas sobre a nossa conformidade com o RGPD, incluindo o nosso Acordo de Processamento de Dados, visite o nosso [Acordo de Processamento de Dados](/legal/dpa).
+
+### Conformidade com a LGPD (Brasil)
+
+Também cumprimos a **Lei Geral de Proteção de Dados Pessoais (LGPD)** do Brasil, garantindo que os dados dos utilizadores brasileiros sejam protegidos com os mesmos padrões elevados do RGPD. A nossa conformidade com a LGPD inclui:
+
+- **Bases legais para processamento de dados** (LGPD Artigo 7)
+- **Proteção de categorias especiais de dados pessoais** (LGPD Artigo 11)
+- **Direitos dos titulares de dados** (LGPD Artigos 17-22)
+- **Salvaguardas para transferência internacional de dados** (LGPD Artigos 33-36)
+- **Medidas de segurança de dados** (LGPD Artigo 46)
+
+**Direitos dos Utilizadores Brasileiros:**
+
+Ao abrigo da LGPD, os utilizadores brasileiros têm o direito de:
+
+1. **Confirmação do processamento de dados** (Artigo 18, I)
+2. **Acesso aos seus dados** (Artigo 18, II)
+3. **Correção de dados incompletos ou incorretos** (Artigo 18, III)
+4. **Anonimização, bloqueio ou eliminação de dados** (Artigo 18, IV)
+5. **Portabilidade de dados** (Artigo 18, V)
+6. **Eliminação de dados processados com consentimento** (Artigo 18, VI)
+7. **Informação sobre partilha de dados** (Artigo 18, VII)
+8. **Informação sobre a possibilidade de não fornecer consentimento** (Artigo 18, VIII)
+9. **Revogação do consentimento** (Artigo 18, IX)
+
+Para exercer qualquer um destes direitos, contacte-nos através de [privacy@eleva.care](mailto:privacy@eleva.care).
+
+**Encarregado de Proteção de Dados (DPO):**
+
+Para questões relacionadas com o RGPD e a LGPD, contacte o nosso DPO através de: [dpo@eleva.care](mailto:dpo@eleva.care)
