--- a/content/terms/es.mdx
+++ b/content/terms/es.mdx
@@ -2,74 +2,169 @@
 
 _Fecha de Vigencia:_ 16 de abril de 2025
 
-Estos Términos y Condiciones ("Términos") rigen el uso de los servicios proporcionados por **Búzios e Tartarugas, Lda.**, una empresa registrada en Portugal, con el nombre comercial **Eleva.care** ("Eleva.care," "nosotros," o "nuestro"). Al utilizar o acceder a cualquiera de nuestros servicios, usted acepta estar vinculado por estos Términos.
+Estos Términos y Condiciones ("Términos") rigen el uso de los servicios proporcionados por **Búzios e Tartarugas, Lda.**, una empresa registrada en Portugal, con el nombre comercial **Eleva.care** ("Eleva.care," "nosotros," o "nuestro"). Al utilizar o acceder a cualquiera de nuestros servicios, acepta estar sujeto a estos Términos.
 
 ## 1. Aceptación de los Términos
 
-Al acceder o utilizar los servicios proporcionados por Eleva.care, usted acepta cumplir y estar vinculado por estos Términos y todas las leyes y regulaciones aplicables. Si no está de acuerdo con estos Términos, por favor no utilice nuestros servicios.
+Al acceder o utilizar los servicios proporcionados por Eleva.care, acepta cumplir y estar sujeto a estos Términos y todas las leyes y regulaciones aplicables. Si no está de acuerdo con estos Términos, por favor no utilice nuestros servicios.
 
-## 2. Servicios Proporcionados
+## 2. Naturaleza de la Plataforma y Servicios Proporcionados
 
-Eleva.care ofrece una plataforma integral de atención médica diseñada para profesionales de la salud y pacientes, incluyendo:
+### 2.1 Plataforma Marketplace - No es un Proveedor de Atención Médica
 
-- Gestión de Registros Médicos
-- Procesamiento de Pagos
-- Programación de Citas
-- Análisis de Datos Sanitarios
-- Atención al Cliente
+**AVISO IMPORTANTE**: Eleva.care es una **plataforma marketplace de tecnología** que conecta pacientes con profesionales de salud independientes y licenciados.
 
-Estos servicios están sujetos a cambios, y Eleva.care se reserva el derecho de modificar o discontinuar cualquier parte de los servicios en cualquier momento.
+**Eleva.care NO es**:
+
+- ❌ Un proveedor de atención médica
+- ❌ Una clínica o consultorio médico
+- ❌ Responsable de la atención médica, diagnósticos o tratamiento
+- ❌ Empleador o supervisor de profesionales de salud
+
+**Los profesionales de salud en nuestra plataforma son**:
+
+- ✅ Profesionales independientes
+- ✅ Licenciados en sus respectivas jurisdicciones
+- ✅ Únicos responsables de toda la atención médica que brindan
+- ✅ Mantienen su propio seguro de responsabilidad profesional
+
+### 2.2 Servicios Tecnológicos que Proporcionamos
+
+Eleva.care proporciona los siguientes **servicios de plataforma tecnológica**:
+
+**Para Todos los Usuarios:**
+
+- Creación y gestión de cuenta de usuario
+- Verificación de identidad y autenticación
+- Soporte de la plataforma y servicio al cliente
+
+**Para Pacientes/Clientes:**
+
+- Herramientas de búsqueda y descubrimiento de profesionales
+- Sistema seguro de reservas y programación de citas
+- Procesamiento de pagos para servicios de profesionales (vía Stripe)
+- Mensajería segura con su profesional elegido
+- Acceso a su historial de reservas
+
+**Para Profesionales de Salud:**
+
+- Creación y gestión de perfil profesional
+- Herramientas de programación de citas
+- Almacenamiento cifrado de notas clínicas (usted controla el contenido)
+- Cobro y procesamiento de pagos (vía Stripe Connect)
+- Herramientas de comunicación segura con pacientes
+- Almacenamiento de archivos adjuntos (cifrado)
+
+**Lo Que NO Proporcionamos:**
+
+- ❌ Asesoramiento médico, diagnósticos o tratamiento
+- ❌ Supervisión médica o fiscalización de profesionales
+- ❌ Verificación de credenciales médicas de los profesionales (los profesionales autocertifican)
+- ❌ Seguro de responsabilidad profesional médica
+- ❌ Servicios de salud de cualquier tipo
+
+Estos servicios están sujetos a cambios, y Eleva.care se reserva el derecho de modificar o descontinuar cualquier parte de los servicios de la plataforma en cualquier momento.
 
 ## 3. Registro de Cuenta y Elegibilidad
 
-Para acceder a ciertas funcionalidades de nuestros servicios, debe crear una cuenta. Usted acepta:
+Para acceder a ciertas funciones de nuestros servicios, debe crear una cuenta. Acepta:
 
-- Proporcionar información precisa, actualizada y completa durante el proceso de registro.
+- Proporcionar información precisa, actual y completa durante el proceso de registro.
 - Mantener la seguridad y confidencialidad de las credenciales de su cuenta.
 - Notificar a Eleva.care inmediatamente de cualquier uso no autorizado de su cuenta.
 
 Debe tener al menos 18 años y ser legalmente capaz de celebrar un contrato en su jurisdicción para utilizar nuestros servicios.
 
-## 4. Uso de los Servicios
+## 4. Uso de los Servicios de la Plataforma
 
-Usted acepta utilizar los servicios de Eleva.care únicamente para fines lícitos y de acuerdo con estos Términos. Está prohibido:
+Acepta utilizar los servicios de la plataforma Eleva.care solo para fines lícitos y de acuerdo con estos Términos. Está prohibido:
 
 - Violar cualquier ley o regulación aplicable.
 - Participar en actividades fraudulentas o engañosas.
 - Distribuir contenido dañino, difamatorio o ilegal.
-- Interferir con la operación normal de los servicios.
+- Interferir con el funcionamiento normal de la plataforma.
+- Hacerse pasar por un profesional de salud licenciado (si no lo es).
+- Utilizar la plataforma para emergencias médicas.
 
 Eleva.care puede suspender o terminar su acceso si viola estos Términos.
 
+### 4.1 Para Pacientes/Clientes
+
+Usted entiende y acepta que:
+
+- Los profesionales de salud en nuestra plataforma son profesionales independientes, no empleados de Eleva.care
+- Usted es responsable de elegir su profesional de salud
+- Debe verificar las credenciales y licencias del profesional antes de reservar
+- Su relación es con el profesional, no con Eleva.care
+- Eleva.care no es responsable de la atención médica que recibe
+
+### 4.2 Para Profesionales de Salud
+
+Al utilizar nuestra plataforma como profesional, declara y garantiza que:
+
+- Es un profesional de salud licenciado en buen estado
+- Mantiene seguro de responsabilidad profesional vigente
+- Es el único responsable de toda la atención médica que brinda
+- Cumplirá con todas las regulaciones de salud aplicables
+- Obtendrá consentimiento informado de sus pacientes
+- Entiende que es un contratista independiente, no un empleado de Eleva.care
+
 ## 5. Términos de Pago
 
-Ciertos servicios ofrecidos por Eleva.care son servicios de pago. Al utilizar servicios de pago, usted acepta pagar las tarifas aplicables, que serán claramente comunicadas en el momento de la compra. Los métodos de pago incluyen tarjetas de crédito, transferencias bancarias y otros sistemas de pago disponibles.
+Ciertos servicios ofrecidos por Eleva.care son servicios de pago. Al utilizar servicios de pago, acepta pagar las tarifas aplicables, que se comunicarán claramente en el momento de la compra. Los métodos de pago incluyen tarjetas de crédito, transferencias bancarias y otros sistemas de pago disponibles.
 
-Todas las tarifas no son reembolsables, excepto según lo requiera la ley aplicable. Si hay un problema con el procesamiento del pago, Eleva.care trabajará con usted para resolver el problema.
+Todas las tarifas no son reembolsables, excepto según lo requerido por la ley aplicable. Si hay un problema con el procesamiento del pago, Eleva.care trabajará con usted para resolver el problema.
 
 ## 6. Privacidad y Protección de Datos
 
-El uso de los servicios de Eleva.care se rige por nuestra **Política de Privacidad**. Estamos comprometidos a proteger sus datos personales y garantizar el cumplimiento de las leyes de protección de datos aplicables, incluido el **Reglamento General de Protección de Datos (RGPD)**.
+Su uso de los servicios de Eleva.care se rige por nuestra **Política de Privacidad**. Estamos comprometidos a proteger sus datos personales y garantizar el cumplimiento de las leyes de protección de datos aplicables, incluyendo el **Reglamento General de Protección de Datos (RGPD)**.
 
-Al utilizar nuestros servicios, usted consiente la recopilación, uso y procesamiento de sus datos personales como se describe en nuestra Política de Privacidad.
+Al utilizar nuestros servicios, consiente la recopilación, uso y procesamiento de sus datos personales según lo descrito en nuestra Política de Privacidad.
 
 ## 7. Propiedad Intelectual
 
-Todo el contenido y materiales en la plataforma Eleva.care, incluidos texto, gráficos, logotipos y software, son propiedad de Eleva.care o nuestros licenciantes y están protegidos por leyes de propiedad intelectual. Usted acepta no utilizar, copiar o distribuir ninguno de estos materiales sin el permiso explícito de Eleva.care.
+Todo el contenido y materiales en la plataforma Eleva.care, incluyendo texto, gráficos, logotipos y software, son propiedad de Eleva.care o de nuestros licenciantes y están protegidos por leyes de propiedad intelectual. Acepta no usar, copiar o distribuir ninguno de estos materiales sin permiso explícito de Eleva.care.
 
 ## 8. Limitación de Responsabilidad
 
-En la medida máxima permitida por la ley, Eleva.care no es responsable por ningún daño directo, indirecto, incidental, especial o consecuencial resultante de su uso o incapacidad para usar nuestros servicios. No garantizamos la precisión, fiabilidad o integridad de los servicios.
+### 8.1 Responsabilidad de la Plataforma
+
+En la máxima medida permitida por la ley, Eleva.care es responsable solo del rendimiento de nuestros **servicios de plataforma tecnológica**. No somos responsables de ningún daño directo, indirecto, incidental, especial o consecuente resultante de su uso o incapacidad de usar nuestros servicios de plataforma.
+
+### 8.2 Sin Responsabilidad por la Atención Médica
+
+**Eleva.care NO es responsable de:**
+
+- ❌ Cualquier atención médica, asesoramiento, diagnóstico o tratamiento proporcionado por los profesionales
+- ❌ Resultados médicos, ya sean positivos o negativos
+- ❌ Negligencia médica o negligencia profesional por parte de los profesionales
+- ❌ Calificaciones, licencias o credenciales de los profesionales
+- ❌ Calidad de los servicios médicos proporcionados por los profesionales
+- ❌ Disputas profesional-paciente con respecto a la atención médica
+- ❌ Cualquier resultado de salud resultante de los servicios del profesional
+
+**El profesional de salud que elija es el único responsable de toda la atención médica que brinda.**
+
+### 8.3 Aviso de Emergencia
+
+**Eleva.care NO es para emergencias médicas.** Si experimenta una emergencia médica:
+
+- **En Portugal**: Llame al 112
+- **En países de la UE**: Llame al 112
+- **En EE.UU.**: Llame al 911
+- O contacte inmediatamente a sus servicios de emergencia locales
+
+No utilice nuestra plataforma para situaciones médicas urgentes o de emergencia.
 
 ## 9. Indemnización
 
-Usted acepta indemnizar y mantener a Eleva.care, sus afiliados, empleados y socios libres de cualquier reclamación, daño, responsabilidad y gasto que surja de su uso de nuestros servicios, violación de estos Términos o infracción de cualquier derecho de terceros.
+Acepta indemnizar y eximir a Eleva.care, sus afiliados, empleados y socios de cualquier reclamación, daño, responsabilidad y gasto que surja de su uso de nuestros servicios, violación de estos Términos o infracción de cualquier derecho de terceros.
 
 ## 10. Terminación
 
-Eleva.care puede suspender o terminar su acceso a los servicios en cualquier momento, sin previo aviso, si creemos que ha violado estos Términos o ha participado en actividades que dañan la reputación o los servicios de Eleva.care. Usted puede terminar su cuenta contactando al servicio de atención al cliente de Eleva.care.
+Eleva.care puede suspender o terminar su acceso a los servicios en cualquier momento, sin previo aviso, si creemos que ha violado estos Términos o ha participado en actividades que perjudican la reputación o los servicios de Eleva.care. Puede terminar su cuenta contactando al servicio de atención al cliente de Eleva.care.
 
-Tras la terminación, dejará de tener acceso a los servicios, y todos los pagos pendientes deben ser liquidados.
+Tras la terminación, dejará de tener acceso a los servicios, y todos los pagos pendientes deben liquidarse.
 
 ## 11. Ley Aplicable y Resolución de Disputas
 
@@ -77,12 +172,12 @@ Estos Términos se rigen por las leyes de Portugal. Cualquier disputa que surja 
 
 ## 12. Cambios en los Términos
 
-Eleva.care se reserva el derecho de actualizar o modificar estos Términos en cualquier momento. Le notificaremos de cualquier cambio material por correo electrónico o a través de la plataforma. El uso continuado de nuestros servicios después de que se realicen cambios se considerará aceptación de los Términos actualizados.
+Eleva.care se reserva el derecho de actualizar o modificar estos Términos en cualquier momento. Le notificaremos de cualquier cambio material por correo electrónico o a través de la plataforma. El uso continuado de nuestros servicios después de realizar los cambios se considerará aceptación de los Términos actualizados.
 
 ## 13. Disposiciones Varias
 
-- **Divisibilidad:** Si alguna disposición de estos Términos se encuentra inválida o inaplicable, las disposiciones restantes permanecerán en vigor.
-- **Renuncia:** El no hacer cumplir cualquier parte de estos Términos no renuncia a nuestro derecho de hacer cumplir esas disposiciones en el futuro.
+- **Divisibilidad:** Si alguna disposición de estos Términos se considera inválida o inaplicable, las disposiciones restantes permanecerán en vigor.
+- **Renuncia:** El incumplimiento de hacer cumplir cualquier parte de estos Términos no renuncia a nuestro derecho de hacer cumplir esas disposiciones en el futuro.
 
 ---
 
@@ -92,9 +187,9 @@ Estos Términos y Condiciones son emitidos por:
 
 - **Entidad Legal:** BÚZIOS E TARTARUGAS - LDA
 - **Nombre Comercial:** Eleva.care
-- **NIPC/VAT:** 515001708
+- **NIPC/NIF:** 515001708
 - **Forma Legal:** Sociedade por Quotas (LDA)
-- **Oficina Registrada:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Director Gerente:** Rodrigo Barona Oliete
+- **Domicilio Social:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
+- **Director General:** Rodrigo Barona Oliete
 - **Email:** [support@eleva.care](mailto:support@eleva.care)
 - **Teléfono:** [+351 931 897 950](tel:+351931897950)
