--- a/content/terms/pt.mdx
+++ b/content/terms/pt.mdx
@@ -8,17 +8,62 @@ Estes Termos e Condições ("Termos") regem a utilização dos serviços forneci
 
 Ao aceder ou utilizar os serviços fornecidos pela Eleva.care, concorda em cumprir e estar vinculado por estes Termos e todas as leis e regulamentos aplicáveis. Se não concordar com estes Termos, por favor não utilize os nossos serviços.
 
-## 2. Serviços Fornecidos
+## 2. Natureza da Plataforma e Serviços Fornecidos
 
-A Eleva.care oferece uma plataforma de saúde abrangente concebida para profissionais de saúde e pacientes, incluindo:
+### 2.1 Plataforma Marketplace - Não é um Prestador de Cuidados de Saúde
 
-- Gestão de Registos Médicos
-- Processamento de Pagamentos
-- Agendamento de Consultas
-- Análise de Dados de Saúde
-- Apoio ao Cliente
+**AVISO IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia** que conecta pacientes com profissionais de saúde independentes e licenciados.
 
-Estes serviços estão sujeitos a alterações, e a Eleva.care reserva-se o direito de modificar ou descontinuar qualquer parte dos serviços a qualquer momento.
+**A Eleva.care NÃO é**:
+
+- ❌ Um prestador de cuidados de saúde
+- ❌ Uma clínica ou consultório médico
+- ❌ Responsável pelos cuidados médicos, diagnósticos ou tratamento
+- ❌ Empregador ou supervisor de profissionais de saúde
+
+**Os profissionais de saúde na nossa plataforma são**:
+
+- ✅ Profissionais independentes
+- ✅ Licenciados nas suas respetivas jurisdições
+- ✅ Únicos responsáveis por todos os cuidados médicos que prestam
+- ✅ Possuem o seu próprio seguro de responsabilidade profissional
+
+### 2.2 Serviços Tecnológicos que Fornecemos
+
+A Eleva.care fornece os seguintes **serviços de plataforma tecnológica**:
+
+**Para Todos os Utilizadores:**
+
+- Criação e gestão de conta de utilizador
+- Verificação de identidade e autenticação
+- Suporte da plataforma e atendimento ao cliente
+
+**Para Pacientes/Clientes:**
+
+- Ferramentas de pesquisa e descoberta de profissionais
+- Sistema seguro de marcação e agendamento de consultas
+- Processamento de pagamentos para serviços de profissionais (via Stripe)
+- Mensagens seguras com o seu profissional escolhido
+- Acesso ao seu histórico de marcações
+
+**Para Profissionais de Saúde:**
+
+- Criação e gestão de perfil profissional
+- Ferramentas de agendamento de consultas
+- Armazenamento encriptado de notas clínicas (você controla o conteúdo)
+- Cobrança e processamento de pagamentos (via Stripe Connect)
+- Ferramentas de comunicação segura com pacientes
+- Armazenamento de anexos de ficheiros (encriptado)
+
+**O Que NÃO Fornecemos:**
+
+- ❌ Aconselhamento médico, diagnósticos ou tratamento
+- ❌ Supervisão médica ou fiscalização de profissionais
+- ❌ Verificação de credenciais médicas dos profissionais (os profissionais auto-certificam)
+- ❌ Seguro de responsabilidade profissional médica
+- ❌ Serviços de saúde de qualquer tipo
+
+Estes serviços estão sujeitos a alterações, e a Eleva.care reserva-se o direito de modificar ou descontinuar qualquer parte dos serviços da plataforma a qualquer momento.
 
 ## 3. Registo de Conta e Elegibilidade
 
@@ -30,16 +75,39 @@ Para aceder a certas funcionalidades dos nossos serviços, deve criar uma conta.
 
 Deve ter pelo menos 18 anos e ser legalmente capaz de celebrar um contrato na sua jurisdição para utilizar os nossos serviços.
 
-## 4. Utilização dos Serviços
+## 4. Utilização dos Serviços da Plataforma
 
-Concorda em utilizar os serviços da Eleva.care apenas para fins lícitos e de acordo com estes Termos. É proibido:
+Concorda em utilizar os serviços da plataforma Eleva.care apenas para fins lícitos e de acordo com estes Termos. É proibido:
 
 - Violar quaisquer leis ou regulamentos aplicáveis.
 - Participar em atividades fraudulentas ou enganosas.
 - Distribuir conteúdo prejudicial, difamatório ou ilegal.
-- Interferir com o funcionamento normal dos serviços.
+- Interferir com o funcionamento normal da plataforma.
+- Fazer-se passar por um profissional de saúde licenciado (se não o for).
+- Utilizar a plataforma para emergências médicas.
 
 A Eleva.care pode suspender ou terminar o seu acesso se violar estes Termos.
+
+### 4.1 Para Pacientes/Clientes
+
+Você compreende e concorda que:
+
+- Os profissionais de saúde na nossa plataforma são profissionais independentes, não funcionários da Eleva.care
+- Você é responsável por escolher o seu profissional de saúde
+- Deve verificar as credenciais e licenciamento do profissional antes de marcar
+- A sua relação é com o profissional, não com a Eleva.care
+- A Eleva.care não é responsável pelos cuidados médicos que recebe
+
+### 4.2 Para Profissionais de Saúde
+
+Ao utilizar a nossa plataforma como profissional, você declara e garante que:
+
+- É um profissional de saúde licenciado em boa situação
+- Mantém seguro de responsabilidade profissional atual
+- É o único responsável por todos os cuidados médicos que presta
+- Cumprirá com todos os regulamentos de saúde aplicáveis
+- Obterá consentimento informado dos seus pacientes
+- Compreende que é um prestador independente, não um funcionário da Eleva.care
 
 ## 5. Termos de Pagamento
 
@@ -59,17 +127,44 @@ Todo o conteúdo e materiais na plataforma Eleva.care, incluindo texto, gráfico
 
 ## 8. Limitação de Responsabilidade
 
-Na máxima extensão permitida por lei, a Eleva.care não é responsável por quaisquer danos diretos, indiretos, incidentais, especiais ou consequentes resultantes da sua utilização ou incapacidade de utilizar os nossos serviços. Não garantimos a precisão, fiabilidade ou completude dos serviços.
+### 8.1 Responsabilidade da Plataforma
+
+Na máxima extensão permitida por lei, a Eleva.care é responsável apenas pelo desempenho dos nossos **serviços de plataforma tecnológica**. Não somos responsáveis por quaisquer danos diretos, indiretos, incidentais, especiais ou consequentes resultantes da sua utilização ou incapacidade de utilizar os nossos serviços da plataforma.
+
+### 8.2 Sem Responsabilidade pelos Cuidados Médicos
+
+**A Eleva.care NÃO é responsável por:**
+
+- ❌ Quaisquer cuidados médicos, aconselhamento, diagnóstico ou tratamento fornecidos pelos profissionais
+- ❌ Resultados médicos, sejam positivos ou negativos
+- ❌ Negligência médica ou negligência profissional por parte dos profissionais
+- ❌ Qualificações, licenciamento ou credenciais dos profissionais
+- ❌ Qualidade dos serviços médicos prestados pelos profissionais
+- ❌ Disputas profissional-paciente relativamente a cuidados médicos
+- ❌ Quaisquer resultados de saúde decorrentes dos serviços dos profissionais
+
+**O profissional de saúde que você escolhe é o único responsável por todos os cuidados médicos que presta.**
+
+### 8.3 Aviso de Emergência
+
+**A Eleva.care NÃO é para emergências médicas.** Se estiver a vivenciar uma emergência médica:
+
+- **Em Portugal**: Ligue 112
+- **Em países da UE**: Ligue 112
+- **Nos EUA**: Ligue 911
+- Ou contacte imediatamente os seus serviços de emergência locais
+
+Não utilize a nossa plataforma para situações médicas urgentes ou de emergência.
 
 ## 9. Indemnização
 
 Concorda em indemnizar e isentar a Eleva.care, os seus afiliados, funcionários e parceiros de quaisquer reclamações, danos, responsabilidades e despesas decorrentes da sua utilização dos nossos serviços, violação destes Termos ou violação de quaisquer direitos de terceiros.
 
-## 10. Cessação
+## 10. Rescisão
 
 A Eleva.care pode suspender ou terminar o seu acesso aos serviços a qualquer momento, sem aviso prévio, se acreditarmos que violou estes Termos ou participou em atividades que prejudicam a reputação ou os serviços da Eleva.care. Pode terminar a sua conta contactando o apoio ao cliente da Eleva.care.
 
-Após a cessação, deixará de ter acesso aos serviços, e todos os pagamentos pendentes devem ser liquidados.
+Após a rescisão, deixará de ter acesso aos serviços, e todos os pagamentos pendentes devem ser liquidados.
 
 ## 11. Lei Aplicável e Resolução de Litígios
 
@@ -77,7 +172,7 @@ Estes Termos são regidos pelas leis de Portugal. Quaisquer litígios decorrente
 
 ## 12. Alterações aos Termos
 
-A Eleva.care reserva-se o direito de atualizar ou modificar estes Termos a qualquer momento. Notificaremos sobre quaisquer alterações materiais por e-mail ou através da plataforma. A utilização continuada dos nossos serviços após a realização de alterações será considerada aceitação dos Termos atualizados.
+A Eleva.care reserva-se o direito de atualizar ou modificar estes Termos a qualquer momento. Notificaremos sobre quaisquer alterações materiais por email ou através da plataforma. A utilização continuada dos nossos serviços após a realização de alterações será considerada aceitação dos Termos atualizados.
 
 ## 13. Disposições Diversas
 
@@ -92,7 +187,7 @@ Estes Termos e Condições são emitidos por:
 
 - **Entidade Legal:** BÚZIOS E TARTARUGAS - LDA
 - **Nome Comercial:** Eleva.care
-- **NIPC/VAT:** 515001708
+- **NIPC/NIF:** 515001708
 - **Forma Legal:** Sociedade por Quotas (LDA)
 - **Sede Registada:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
 - **Diretor-Geral:** Rodrigo Barona Oliete
