--- a/content/about/br.mdx
+++ b/content/about/br.mdx
@@ -13,56 +13,58 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   id="transforming-women-healthcare"
-  title="Transformando o cuidado de saúde da mulher através da inovação e compaixão"
-  description="Na Eleva Care, nos dedicamos a capacitar mulheres de todas as idades para que assumam o controle de sua saúde e bem-estar."
+  headingLevel="h1"
+  title="Conectando você com profissionais de saúde especializados em saúde da mulher"
+  description="Na Eleva Care, fornecemos uma plataforma tecnológica segura que capacita as mulheres a encontrar e conectar-se com profissionais de saúde licenciados para atendimento personalizado."
 />
 
 <MissionSection
-  title="Nossa missão"
+  title="Nossa Missão"
   description={[
     {
       paragraph:
-        'Nossa missão é fornecer uma plataforma de apoio e inclusiva que conecte indivíduos a recursos liderados por especialistas, informações baseadas em evidências e uma comunidade colaborativa de profissionais de saúde.',
+        'Nossa missão é fornecer um marketplace tecnológico seguro que conecta mulheres com profissionais de saúde independentes e licenciados. Oferecemos a plataforma e as ferramentas; profissionais de saúde qualificados prestam seus cuidados médicos.',
     },
     {
       paragraph:
-        'Acreditamos em tornar os cuidados de saúde de qualidade acessíveis a todas as mulheres, capacitando-as com conhecimento e promovendo a colaboração para melhores resultados de saúde. Nossa abordagem reconhece que a saúde da mulher é uma jornada contínua e em evolução.',
+        'Acreditamos que a tecnologia pode tornar os cuidados de saúde de qualidade mais acessíveis. Ao conectar pacientes com profissionais verificados através de nossa plataforma, capacitamos as mulheres com escolha, conveniência e acesso a atendimento especializado em todas as etapas da vida.',
     },
   ]}
   statsTitle="Os números"
   stats={[
-    { label: 'Satisfação do Paciente', value: '95%' },
-    { label: 'Suporte Disponível', value: '24/7' },
+    { label: 'Satisfação da Plataforma', value: '95%' },
+    { label: 'Suporte da Plataforma', value: '24/7' },
   ]}
 />
 
 <HeadlineSection
   id="our-vision"
-  label="Nossa visão"
-  title="Unindo ciência e cuidado para cada mulher"
-  description="Para unir o gap entre pesquisa científica e aplicação prática, entregando soluções de cuidados de saúde da mulher de forma acessível e personalizadas em todas as fases da vida."
+  label="Nossa Visão"
+  title="Conectando mulheres com profissionais de saúde especializados"
+  description="Ser a plataforma tecnológica líder que conecta mulheres com profissionais de saúde licenciados, tornando o atendimento especializado acessível e conveniente em todas as etapas da vida."
 />
 
 <BeliefsSection
-  title="Nossas crenças fundamentais"
+  id="our-beliefs"
+  title="Nossas Convicções"
   beliefs={[
     {
       title: 'Acesso a Cuidados de Saúde de Qualidade',
       description:
-        'Todas as mulheres merecem acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
+        'Toda mulher merece acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
     },
     {
       title: 'Conhecimento é Poder',
       description:
-        'Capacitar as mulheres com informações baseadas em evidências para tomar decisões informadas sobre sua saúde.',
+        'Capacitar as mulheres com informação baseada em evidências para tomar decisões informadas sobre cuidados de saúde.',
     },
     {
-      title: 'Cuidados Colaborativos',
+      title: 'Atendimento Colaborativo',
       description:
-        'Melhores resultados de saúde são alcançados através da colaboração entre pacientes e profissionais de saúde.',
+        'Melhores resultados de saúde são alcançados através da colaboração entre pacientes e prestadores de cuidados de saúde.',
     },
     {
-      title: 'Jornada de Saúde',
+      title: 'Jornada para a Vida',
       description:
         'A saúde da mulher é uma jornada contínua que evolui através de diferentes etapas da vida.',
     },
@@ -71,25 +73,25 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   id="our-team"
-  label="Conheça a nossa equipe"
-  title="Liderada por inovadores e especialistas em saúde"
-  description="Nossa equipe combina expertise em saúde da mulher, tecnologia e cuidado com pacientes para revolucionar a entrega de cuidados de saúde."
+  label="Conheça nossa equipe"
+  title="Liderados por inovadores e especialistas em saúde"
+  description="Nossa equipe combina experiência em saúde da mulher, tecnologia e atendimento ao paciente para revolucionar a prestação de cuidados de saúde."
 />
 
 <TeamSection
   description={[
     {
       paragraph:
-        'Fundada por profissionais de saúde que testemunharam em primeira mão as lacunas nos cuidados de saúde da mulher, a Eleva Care surgiu de uma visão compartilhada para tornar os cuidados especializados mais acessíveis, personalizados e abrangentes.',
+        'Fundada por profissionais de saúde que testemunharam em primeira mão as lacunas no acesso aos cuidados de saúde da mulher, a Eleva Care surgiu como uma solução tecnológica para conectar pacientes com profissionais especializados de forma mais eficiente.',
     },
     {
       paragraph:
-        'Hoje, a Eleva Care está transformando a forma como as mulheres acessam e experimentam os cuidados de saúde. Nossa plataforma conecta milhares de mulheres a prestadores de cuidados de saúde especializados, oferecendo cuidados baseados em evidências e apoio ao longo de cada etapa da vida.',
+        'Hoje, a Eleva Care opera um marketplace digital seguro que conecta mulheres com profissionais de saúde independentes e licenciados. Nossa plataforma fornece a tecnologia; seu profissional escolhido presta seus cuidados médicos.',
     },
   ]}
-  title="Nossa liderança"
-  ctaText="Saiba mais"
-  ctaLink="/pt-br/history"
+  ctaText="Leia nossa história"
+  ctaLink="/history"
+  title="Nossa Liderança"
   leadership={[
     {
       name: 'Patricia Mota, PT, PhD',
@@ -108,9 +110,9 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   id="board-of-advisors"
-  label="Guiada por especialistas do setor"
-  title="Conselho Consultivo"
-  description="Nossa consultoria de especialistas do setor traz consigo liderança e inovação para o nosso trabalho."
+  label="Orientados por especialistas da indústria"
+  title="Conselho de Assessores"
+  description="Nosso conselho consultivo reúne vozes líderes em saúde da mulher, inovação em cuidados de saúde e transformação digital."
 />
 
 <AdvisorsSection
@@ -119,63 +121,64 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       name: 'Kari Bø, PT, PhD',
       flags: '🇳🇴',
-      role: 'Consultora em Saúde Pélvica',
+      role: 'Assessora em Saúde do Assoalho Pélvico',
       quote:
-        'O treinamento dos músculos do assoalho pélvico baseado em evidências não apenas previne e trata a disfunção, mas também capacita as mulheres a viverem com confiança e plenitude em todas as fases da vida.',
+        'O treinamento baseado em evidências dos músculos do assoalho pélvico não só previne e trata disfunções—capacita as mulheres a viver com confiança e plenamente em todas as etapas da vida.',
       image: '/img/about/team/team-kari-bo.jpg',
     },
-    {
+        {
       name: 'Ruben Barakat, PhD',
       flags: '🇦🇷 🇪🇸',
-      role: 'Consultor em Ciências do Exercício',
+      role: 'Assessor em Ciência do Exercício',
       quote:
-        'As evidências mostram que o exercício personalizado durante a gravidez pode transformar os resultados de saúde das mulheres.',
+        'A evidência mostra que o exercício personalizado durante a gravidez pode transformar os resultados de saúde das mulheres.',
       image: '/img/about/team/team-ruben-barakat.jpg',
     },
         {
       name: 'Alexandre Delgado, PT, PhD',
       flags: '🇧🇷',
-      role: 'Consultor em Fisioterapia Obstétrica',
+      role: 'Assessor em Fisioterapia Obstétrica',
       quote:
-        'A fisioterapia baseada em evidências transforma a experiência da gravidez e do parto, capacitando as mulheres em cada etapa.',
+        'A fisioterapia baseada em evidências transforma a experiência da gravidez e do parto, capacitando as mulheres em todas as etapas.',
       image: '/img/about/team/team-alexandre-delgado.jpg',
     },
     {
       name: 'Cristine Homsi Jorge, PT, PhD',
       flags: '🇧🇷',
-      role: 'Consultora em Saúde da Mulher',
+      role: "Assessora em Saúde da Mulher",
       quote:
-        'A pesquisa clínica e a educação capacitam as mulheres para tomarem decisões informadas sobre sua jornada de saúde',
+        'A pesquisa clínica e a educação capacitam as mulheres a tomar decisões informadas sobre sua jornada de saúde',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
-   {
+ {
       name: 'Annelie Gutke, PT, PhD',
       flags: '🇸🇪',
-      role: 'Consultora em Saúde da Mulher',
+      role: "Assessora em Saúde da Mulher",
       quote:
-        'Compreender os mecanismos da dor transforma a forma como cuidamos das mulheres durante a gravidez e além.',
+        'Compreender os mecanismos da dor transforma como cuidamos das mulheres durante a gravidez e além.',
       image: '/img/about/team/team-annelie-gutke.jpg',
     },
        {
       name: 'Joana Goulão Barros, MD, PhD',
       flags: '🇵🇹',
-      role: 'Consultora em Cuidados para Mulheres',
+      role: 'Assessora em Atendimento ao Longo da Vida da Mulher',
       quote:
-        'Cuidados contínuos e em equipa em todas as fases da vida - desde a adolescência até à gravidez, parto e menopausa - garantem que as mulheres recebem o apoio personalizado de que necessitam.',
+        'Atendimento integrado e em equipe em todas as etapas da vida—da adolescência à gravidez, parto e menopausa—garante que as mulheres recebam o apoio personalizado de que precisam para prosperar.',
       image: '/img/about/team/team-joana-barros.jpg',
     },
     {
       name: 'Patricia Driusso, PT, PhD',
       flags: '🇧🇷',
-      role: 'Consultora em Saúde da Mulher',
+      role: "Assessora em Saúde da Mulher",
       quote:
-        'A pesquisa clínica avança nos tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
+        'A pesquisa clínica avança os tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
+
     {
       name: 'Jenny Bagwell, PT, PhD, DPT',
       flags: '🇺🇸',
-      role: 'Consultora em Biomecânica e Saúde Perinatal',
+      role: 'Assessora em Biomecânica e Saúde Perinatal',
       quote:
         'Compreender os padrões de movimento durante e após a gravidez ajuda a otimizar os cuidados e melhorar os resultados a longo prazo para as mulheres.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
@@ -188,28 +191,28 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="join-our-network"
   label="Junte-se à nossa rede"
   title="Transforme os cuidados de saúde da mulher conosco"
-  description="Junte-se a uma comunidade de profissionais de saúde dedicados que tornam os cuidados de qualidade acessíveis às mulheres em todo lugar."
+  description="Junte-se a uma comunidade de profissionais de saúde dedicados a tornar os cuidados de qualidade acessíveis a mulheres em todo lugar."
 />
 
 <JoinNetworkSection
-  title="Por que se juntar à nossa rede?"
+  title="Por Que Juntar-se à Eleva"
   benefits={[
     {
-      title: 'Prática Flexível',
+      title: 'Prática Independente',
       description:
-        'Pratique nos seus termos com nossa plataforma flexível de telesaúde. Defina seu próprio horário e conecte-se com pacientes de qualquer lugar.',
+        'Mantenha sua independência como prestador de cuidados de saúde licenciado. Defina seu próprio horário, tarifas e políticas de prática enquanto usa nossa plataforma tecnológica.',
     },
     {
-      title: 'Tecnologia Inovadora',
+      title: 'Plataforma Tecnológica Segura',
       description:
-        'Acesse ferramentas de telesaúde de ponta e suporte clínico assistido por IA para melhorar sua prática.',
+        'Acesse nosso sistema seguro de agendamento, programação, processamento de pagamentos e armazenamento criptografado de notas clínicas. Fornecemos a tecnologia; você presta os cuidados médicos.',
     },
     {
-      title: 'Comunidade Colaborativa',
+      title: 'Rede Profissional',
       description:
-        'Junte-se a uma rede de profissionais de saúde líderes e participe em discussões de casos e compartilhamento de conhecimentos.',
+        'Conecte-se com outros profissionais de saúde independentes em nossa rede para oportunidades de desenvolvimento profissional e compartilhamento de conhecimento.',
     },
   ]}
-  applyUrl="mailto:patimota@gmail.com?subject=Candidatura%20para%20a%20Eleva%20Care&body=Olá%20Patrícia,%20gostaria%20de%20candidatar-me%20para%20a%20Eleva%20Care."
+  applyUrl="mailto:patimota@gmail.com?subject=Candidatura%20para%20Eleva%20Care&body=Olá%20Patrícia,%20gostaria%20de%20me%20candidatar%20à%20Eleva%20Care."
   applyButtonText="Candidatar-se"
 />
