--- a/content/cookie/pt.mdx
+++ b/content/cookie/pt.mdx
@@ -2,6 +2,10 @@
 
 _Data de Vigência:_ 16 de abril de 2025
 
+**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia para saúde** que conecta pacientes com profissionais de saúde independentes e licenciados. NÃO somos um prestador de cuidados de saúde. Esta Política de Cookies explica como utilizamos cookies e tecnologias de rastreamento semelhantes na nossa plataforma.
+
+---
+
 Como plataforma de saúde, levamos muito a sério a privacidade e transparência dos cookies. Esta Política de Cookies explica como utilizamos cookies e tecnologias de rastreamento semelhantes no nosso website e plataforma, com especial atenção à proteção de dados de saúde. Também explica como gerimos o consentimento de cookies para garantir a sua privacidade e o cumprimento dos regulamentos relevantes.
 
 ## 1. O Que São Cookies?
@@ -105,16 +109,27 @@ Pode gerir as suas preferências de cookies de várias maneiras:
 
 Minimizamos o uso de cookies de terceiros. Quando necessário, garantimos que os nossos parceiros cumprem os regulamentos relevantes de proteção de dados e mantêm práticas de privacidade transparentes. Os nossos serviços de terceiros incluem:
 
-- Clerk para autenticação de utilizadores
-- Stripe para processamento de pagamentos
-- PostHog para estatísticas mínimas de uso e análises
-- Beehiiv para gestão de subscrições de newsletter
+- **Clerk** para autenticação e gestão de identidade de utilizadores
+- **Stripe** para processamento de pagamentos (processamento na UE)
+- **PostHog** para estatísticas mínimas de uso e análises (alojamento na UE)
+- **Beehiiv** para gestão de subscrições de newsletter
+- **Novu** (Noti-Fire Apps Ltd.) para serviços de notificação (endpoint da API na UE: eu.api.novu.co)
+- **Vercel** para alojamento e infraestrutura da plataforma (regiões da UE)
 
-Cada um destes fornecedores foi selecionado com base nas suas práticas de segurança e conformidade com os padrões de proteção de dados relevantes para aplicações de saúde.
+Cada um destes fornecedores foi selecionado com base nas suas práticas de segurança e conformidade com os padrões de proteção de dados relevantes para aplicações de saúde. Todos os fornecedores executaram Acordos de Processamento de Dados (APD) e utilizam data centers na UE para alojamento e processamento.
 
 ## 9. Processamento e Armazenamento de Dados
 
-Os dados de cookies podem ser processados e armazenados na União Europeia e nos Estados Unidos. Para transferências fora da UE, garantimos que salvaguardas apropriadas estejam em vigor, como Cláusulas Contratuais Padrão ou decisões de adequação.
+**Residência de Dados na UE:** Todos os dados de cookies são armazenados e processados dentro da União Europeia. Não transferimos dados de cookies fora do EEE durante operações normais.
+
+**Localização de Dados:** A nossa infraestrutura está alojada exclusivamente em regiões da UE:
+
+- Base de dados: Frankfurt, Alemanha (UE)
+- Alojamento: Vercel regiões da UE
+- Análise: PostHog alojamento na UE
+- Notificações: Novu endpoint da API na UE
+
+Embora alguns prestadores de serviços sejam empresas baseadas nos EUA, fornecem **infraestrutura alojada na UE** com residência de dados na União Europeia e executaram Cláusulas Contratuais Tipo (CCT) para conformidade com o RGPD.
 
 ## 10. Auditorias Regulares de Cookies
 
