--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -4,21 +4,47 @@ _Effective Date:_ June 3, 2025
 
 These Payment Policies govern all financial transactions conducted through the Eleva.care platform. By using our payment services, you agree to be bound by these policies in addition to our Terms and Conditions.
 
-## 1. Payment Methods
+**IMPORTANT**: Eleva.care is a **technology marketplace platform**. Payments processed through our platform are for services provided by **independent, licensed healthcare practitioners**. Eleva.care facilitates the payment processing but does not provide medical services. We charge a platform service fee to maintain and operate our technology, marketing, and support infrastructure.
+
+## 1. Platform Role in Payments
+
+### 1.1 Payment Facilitation
+
+- Eleva.care provides the technology platform for secure payment processing
+- Payments are made TO independent healthcare practitioners FOR their medical services
+- We process payments securely via Stripe and Stripe Connect
+- We are NOT the medical service provider
+- We are NOT responsible for the quality of medical services provided
+
+### 1.2 What You're Paying For
+
+When you make a payment through Eleva.care:
+
+- **Practitioner Service Fee**: Payment for the healthcare practitioner's consultation/service (85%)
+- **Platform Service Fee**: 15% fee for using Eleva.care's booking, payment processing, and platform technology
+
+**Example**: For a €100 appointment:
+
+- Practitioner receives: €85.00 (after Stripe processing fees)
+- Platform service fee: €15.00 (covers technology, marketing, sales, infrastructure)
+
+The total price displayed at booking includes all fees. No hidden charges.
+
+## 2. Payment Methods
 
 Eleva.care accepts various payment methods including:
 
 - Credit and debit cards (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
 
-## 2. Multibanco Payment Policies
+## 3. Multibanco Payment Policies
 
-### 2.1 Payment Window Restrictions
+### 3.1 Payment Window Restrictions
 
 - **Appointments within 8 days**: Multibanco payments are **not available** for appointments scheduled within 8 days of the current time
 - **Appointments 8+ days in advance**: Multibanco payments are accepted with special terms outlined below
 
-### 2.2 Slot Reservation System
+### 3.2 Slot Reservation System
 
 When paying with Multibanco for appointments scheduled 8 or more days in advance:
 
@@ -26,7 +52,7 @@ When paying with Multibanco for appointments scheduled 8 or more days in advance
 - You have **7 full days** to complete the Multibanco payment
 - If payment is not received within 7 days, the slot reservation expires and becomes available to other patients
 
-### 2.3 Payment Reminder System
+### 3.3 Payment Reminder System
 
 To help ensure you don't miss your payment deadline:
 
@@ -35,25 +61,25 @@ To help ensure you don't miss your payment deadline:
 - **Payment Instructions**: Each reminder includes complete Multibanco payment details and instructions
 - **Payment Methods**: Pay via ATM, online banking, or MB WAY (if supported by your bank)
 
-### 2.4 Late Payment Processing
+### 3.4 Late Payment Processing
 
 If a Multibanco payment is processed after the 7-day reservation period:
 
 - The system automatically checks for appointment conflicts
-- If the appointment slot is no longer available or conflicts with expert availability requirements, a **partial refund** will be processed
+- If the appointment slot is no longer available or conflicts with practitioner availability requirements, a **partial refund** will be processed
 - **Refund Structure**: 90% of the payment amount will be refunded, with 10% retained as a processing fee
 
-## 3. Appointment Conflicts and Refund Policy
+## 4. Appointment Conflicts and Refund Policy
 
-### 3.1 Conflict Detection
+### 4.1 Conflict Detection
 
 Our system automatically detects conflicts, including:
 
 - **Time slot conflicts**: When another patient has booked the same or overlapping time
-- **Minimum notice violations**: When the appointment no longer meets the expert's minimum notice requirements
-- **Expert availability changes**: When the expert is no longer available at the scheduled time
+- **Minimum notice violations**: When the appointment no longer meets the practitioner's minimum notice requirements
+- **Practitioner availability changes**: When the practitioner is no longer available at the scheduled time
 
-### 3.2 Refund Processing
+### 4.2 Refund Processing
 
 When conflicts are detected due to late Multibanco payments:
 
@@ -70,7 +96,7 @@ When conflicts are detected due to late Multibanco payments:
 - Refund Amount: €90.00 (90%)
 - Processing Fee: €10.00 (10% - retained)
 
-### 3.3 Manual Resolution
+### 4.3 Manual Resolution
 
 In cases of system errors or special circumstances:
 
@@ -78,9 +104,9 @@ In cases of system errors or special circumstances:
 - Provide your payment reference and booking details
 - Our team will review and resolve the issue within 2 business days
 
-## 4. Payment Method Selection Guide
+## 5. Payment Method Selection Guide
 
-### 4.1 Card Payments (Immediate)
+### 5.1 Card Payments (Immediate)
 
 **Best for:**
 
@@ -94,7 +120,7 @@ In cases of system errors or special circumstances:
 - Immediate meeting link access
 - No payment deadline stress
 
-### 4.2 Multibanco Payments (7-Day Window)
+### 5.2 Multibanco Payments (7-Day Window)
 
 **Best for:**
 
@@ -108,65 +134,72 @@ In cases of system errors or special circumstances:
 - Payment must be completed within 7 days
 - Access to ATM, online banking, or MB WAY
 
-## 5. Expert Payment Processing
+## 6. Practitioner Payment Processing
 
-### 5.1 Payment Transfers
+### 6.1 Payment Transfers
 
-- Expert payments are processed after successful appointment completion
-- Transfer schedule varies by expert's settings and local banking requirements
+**Eleva.care acts as a payment facilitator between patients and independent healthcare practitioners:**
+
+- Healthcare practitioners are independent professionals receiving payment for their services
+- Payments are processed through Stripe Connect
+- Practitioners receive 85% of the appointment fee (after applicable Stripe processing fees)
+- Eleva.care retains 15% as a platform service fee
+- Transfers occur after successful appointment completion
+- Transfer schedule varies by practitioner's settings and local banking requirements
 - All transfers comply with Stripe Connect policies and local regulations
 
-### 5.2 Dispute Resolution
+### 6.2 Dispute Resolution
 
 - Payment disputes are handled through Stripe's dispute resolution process
-- Experts are notified immediately of any payment disputes
+- Healthcare practitioners are notified immediately of any payment disputes
 - Documentation and evidence may be required for dispute resolution
 
-## 6. Currency and Pricing
+## 7. Currency and Pricing
 
-### 6.1 Base Currency
+### 7.1 Base Currency
 
 - All prices are displayed in Euros (EUR)
 - Currency conversion may apply for international payments
 - Exchange rates are determined by payment processors at the time of transaction
 
-### 6.2 Price Changes
+### 7.2 Price Changes
 
 - Appointment prices are locked at the time of booking
 - No additional charges will be applied after booking confirmation
+- The 15% platform service fee is included in the displayed price
 - Taxes and fees are included in the displayed price
 
-## 7. Payment Security
+## 8. Payment Security
 
-### 7.1 Data Protection
+### 8.1 Data Protection
 
 - All payment data is processed securely through Stripe
 - We do not store payment card details on our servers
-- All transactions are encrypted and comply with PCI DSS standards.
+- All transactions are encrypted and comply with PCI DSS standards
 
-### 7.2 Fraud Prevention
+### 8.2 Fraud Prevention
 
 - Automated fraud detection systems are in place
 - Suspicious transactions may be delayed or declined
 - Additional verification may be required for high-value transactions
 
-## 8. Failed Payments
+## 9. Failed Payments
 
-### 8.1 Payment Failures
+### 9.1 Payment Failures
 
 - Failed payments result in automatic appointment cancellation
 - Patients are notified immediately via email
 - New bookings can be made with valid payment methods
 
-### 8.2 Retry Policy
+### 9.2 Retry Policy
 
 - Automatic payment retries are not performed
 - Patients must initiate new payment attempts manually
 - Multiple failed attempts may result in temporary booking restrictions
 
-## 9. Customer Support
+## 10. Customer Support
 
-### 9.1 Payment Issues
+### 10.1 Payment Issues
 
 For payment-related questions or issues:
 
@@ -174,17 +207,17 @@ For payment-related questions or issues:
 - Response time: Within 24 hours
 - Available in multiple languages (English, Portuguese, Spanish, Brazilian Portuguese)
 
-### 9.2 Refund Requests
+### 10.2 Refund Requests
 
 - Refund requests must be submitted within 7 days of the original transaction
 - Medical emergency refunds are considered on a case-by-case basis
 - Cancellation policies apply as outlined in our Terms and Conditions
 
-## 10. Policy Updates
+## 11. Policy Updates
 
 These payment policies may be updated periodically. Users will be notified of significant changes via email and platform notifications. Continued use of the platform constitutes acceptance of updated policies.
 
-## 11. Legal Compliance
+## 12. Legal Compliance
 
 These policies comply with:
 
