--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -1,24 +1,50 @@
 # Políticas de Pagamento
 
-_Data de Entrada em Vigor:_ 3 de junho de 2025
+_Data de Vigência:_ 3 de junho de 2025
 
-Estas Políticas de Pagamento regem todas as transações financeiras conduzidas através da plataforma **Eleva.care**. Ao utilizar os nossos serviços de pagamento, concorda em estar vinculado a estas políticas, para além dos nossos Termos e Condições.
+Estas Políticas de Pagamento regem todas as transações financeiras conduzidas através da plataforma Eleva.care. Ao utilizar os nossos serviços de pagamento, concorda em estar vinculado a estas políticas, para além dos nossos Termos e Condições.
 
-## 1. Métodos de Pagamento
+**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia**. Os pagamentos processados através da nossa plataforma são para serviços fornecidos por **profissionais de saúde independentes e licenciados**. A Eleva.care facilita o processamento de pagamentos, mas não fornece serviços médicos. Cobramos uma taxa de serviço da plataforma para manter e operar a nossa infraestrutura de tecnologia, marketing e suporte.
+
+## 1. Papel da Plataforma nos Pagamentos
+
+### 1.1 Facilitação de Pagamentos
+
+- A Eleva.care fornece a plataforma tecnológica para processamento seguro de pagamentos
+- Os pagamentos são feitos AOS profissionais de saúde independentes PELOS seus serviços médicos
+- Processamos pagamentos de forma segura via Stripe e Stripe Connect
+- NÃO somos o prestador de serviços médicos
+- NÃO somos responsáveis pela qualidade dos serviços médicos prestados
+
+### 1.2 O Que Está a Pagar
+
+Quando faz um pagamento através da Eleva.care:
+
+- **Taxa de Serviço do Profissional**: Pagamento pela consulta/serviço do profissional de saúde (85%)
+- **Taxa de Serviço da Plataforma**: Taxa de 15% pela utilização da tecnologia de marcação, processamento de pagamentos e plataforma da Eleva.care
+
+**Exemplo**: Para uma consulta de €100:
+
+- O profissional recebe: €85,00 (após taxas de processamento Stripe)
+- Taxa de serviço da plataforma: €15,00 (cobre tecnologia, marketing, vendas, infraestrutura)
+
+O preço total apresentado na marcação inclui todas as taxas. Sem custos ocultos.
+
+## 2. Métodos de Pagamento
 
 A Eleva.care aceita vários métodos de pagamento, incluindo:
 
 - Cartões de crédito e débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
 
-## 2. Políticas de Pagamento Multibanco
+## 3. Políticas de Pagamento Multibanco
 
-### 2.1 Restrições de Janela de Pagamento
+### 3.1 Restrições de Janela de Pagamento
 
 - **Consultas dentro de 8 dias**: Pagamentos Multibanco **não estão disponíveis** para consultas marcadas dentro de 8 dias do momento atual
 - **Consultas com 8+ dias de antecedência**: Pagamentos Multibanco são aceites com termos especiais descritos abaixo
 
-### 2.2 Sistema de Reserva de Horário
+### 3.2 Sistema de Reserva de Horário
 
 Ao pagar com Multibanco para consultas marcadas com 8 ou mais dias de antecedência:
 
@@ -26,173 +52,180 @@ Ao pagar com Multibanco para consultas marcadas com 8 ou mais dias de antecedên
 - Tem **7 dias completos** para completar o pagamento Multibanco
 - Se o pagamento não for recebido dentro de 7 dias, a reserva de horário expira e fica disponível para outros pacientes
 
-### 2.3 Sistema de Lembretes de Pagamento
+### 3.3 Sistema de Lembretes de Pagamento
 
 Para ajudar a garantir que não perde o prazo de pagamento:
 
-- **Lembrete do 3º Dia**: Email amigável de lembrete com 4 dias restantes para pagar
-- **Lembrete do 6º Dia**: Aviso final urgente com 1 dia restante para pagar
-- **Instruções de Pagamento**: Cada lembrete inclui todos os detalhes e instruções de pagamento Multibanco
-- **Métodos de Pagamento**: Pague via Multibanco (ATM), homebanking, ou MB WAY (se suportado pelo seu banco)
+- **Lembrete Dia 3**: Email de lembrete amigável com 4 dias restantes para pagar
+- **Lembrete Dia 6**: Aviso final urgente com 1 dia restante para pagar
+- **Instruções de Pagamento**: Cada lembrete inclui detalhes completos de pagamento Multibanco e instruções
+- **Métodos de Pagamento**: Pague via ATM, homebanking ou MB WAY (se suportado pelo seu banco)
 
-### 2.4 Processamento de Pagamento Tardio
+### 3.4 Processamento de Pagamento Atrasado
 
 Se um pagamento Multibanco for processado após o período de reserva de 7 dias:
 
 - O sistema verifica automaticamente conflitos de consulta
-- Se o horário da consulta já não estiver disponível ou conflituar com os requisitos de disponibilidade do especialista, será processado um **reembolso parcial**
+- Se o horário de consulta já não estiver disponível ou entrar em conflito com os requisitos de disponibilidade do profissional, será processado um **reembolso parcial**
 - **Estrutura de Reembolso**: 90% do valor do pagamento será reembolsado, com 10% retido como taxa de processamento
 
-## 3. Conflitos de Consulta e Política de Reembolso
+## 4. Conflitos de Consulta e Política de Reembolso
 
-### 3.1 Deteção de Conflitos
+### 4.1 Deteção de Conflitos
 
-O nosso sistema deteta automaticamente conflitos incluindo:
+O nosso sistema deteta automaticamente conflitos, incluindo:
 
 - **Conflitos de horário**: Quando outro paciente marcou o mesmo horário ou horário sobreposto
-- **Violações de aviso mínimo**: Quando a consulta já não cumpre os requisitos de aviso mínimo do especialista
-- **Alterações de disponibilidade do especialista**: Quando o especialista já não está disponível no horário marcado
+- **Violações de aviso mínimo**: Quando a consulta já não cumpre os requisitos de aviso mínimo do profissional
+- **Alterações de disponibilidade do profissional**: Quando o profissional já não está disponível no horário marcado
 
-### 3.2 Processamento de Reembolsos
+### 4.2 Processamento de Reembolsos
 
-Quando conflitos são detetados devido a pagamentos Multibanco tardios:
+Quando são detetados conflitos devido a pagamentos Multibanco atrasados:
 
 #### Reembolsos Automáticos
 
 - **Valor do Reembolso**: 90% do pagamento original
-- **Taxa de Processamento**: 10% do pagamento original (retida)
+- **Taxa de Processamento**: 10% do pagamento original (retido)
 - **Tempo de Processamento**: 5-10 dias úteis via Stripe
 - **Notificação**: Notificação automática por email no seu idioma preferido
 
 #### Exemplo de Discriminação de Reembolso
 
 - Pagamento Original: €100,00
-- Valor Reembolsado: €90,00 (90%)
-- Taxa de Processamento: €10,00 (10% - retida)
+- Valor do Reembolso: €90,00 (90%)
+- Taxa de Processamento: €10,00 (10% - retido)
 
-### 3.3 Resolução Manual
+### 4.3 Resolução Manual
 
 Em casos de erros do sistema ou circunstâncias especiais:
 
-- Contacte a nossa equipa de apoio dentro de 48 horas
+- Contacte a nossa equipa de suporte dentro de 48 horas
 - Forneça a sua referência de pagamento e detalhes da marcação
-- A nossa equipa irá rever e resolver a questão dentro de 2 dias úteis
+- A nossa equipa irá rever e resolver o problema dentro de 2 dias úteis
 
-## 4. Guia de Seleção de Método de Pagamento
+## 5. Guia de Seleção de Método de Pagamento
 
-### 4.1 Pagamentos por Cartão (Imediato)
+### 5.1 Pagamentos com Cartão (Imediato)
 
 **Melhor para:**
 
 - Consultas dentro de 8 dias
-- Confirmação imediata necessária
+- Necessidade de confirmação imediata
 - Marcações de última hora
 
 **Benefícios:**
 
-- Processamento instantâneo de pagamento
+- Processamento de pagamento instantâneo
 - Acesso imediato ao link da reunião
 - Sem stress de prazo de pagamento
 
-### 4.2 Pagamentos Multibanco (Janela de 7 Dias)
+### 5.2 Pagamentos Multibanco (Janela de 7 Dias)
 
 **Melhor para:**
 
-- Consultas planeadas com muita antecedência (8+ dias)
+- Consultas planeadas com bastante antecedência (8+ dias)
 - Residentes portugueses que preferem métodos de pagamento locais
-- Aqueles que se sentem confortáveis com pagamento diferido
+- Quem se sente confortável com pagamento diferido
 
 **Requisitos:**
 
 - A consulta deve ser marcada com 8+ dias de antecedência
-- O pagamento deve ser concluído dentro de 7 dias
-- Acesso a Multibanco (ATM), homebanking, ou MB WAY
+- O pagamento deve ser completado dentro de 7 dias
+- Acesso a ATM, homebanking ou MB WAY
 
-## 5. Processamento de Pagamentos de Especialistas
+## 6. Processamento de Pagamentos aos Profissionais
 
-### 5.1 Transferências de Pagamento
+### 6.1 Transferências de Pagamento
 
-- Pagamentos de especialistas são processados após conclusão bem-sucedida da consulta
-- O cronograma de transferência varia conforme as definições do especialista e requisitos bancários locais
-- Todas as transferências cumprem as políticas do Stripe Connect e regulamentações locais
+**A Eleva.care atua como facilitador de pagamentos entre pacientes e profissionais de saúde independentes:**
 
-### 5.2 Resolução de Disputas
+- Os profissionais de saúde são profissionais independentes que recebem pagamento pelos seus serviços
+- Os pagamentos são processados através do Stripe Connect
+- Os profissionais recebem 85% da taxa de consulta (após taxas de processamento Stripe aplicáveis)
+- A Eleva.care retém 15% como taxa de serviço da plataforma
+- As transferências ocorrem após a conclusão bem-sucedida da consulta
+- O calendário de transferências varia de acordo com as configurações do profissional e requisitos bancários locais
+- Todas as transferências cumprem com as políticas do Stripe Connect e regulamentos locais
 
-- Disputas de pagamento são tratadas através do processo de resolução de disputas do Stripe
-- Especialistas são notificados imediatamente de quaisquer disputas de pagamento
+### 6.2 Resolução de Disputas
+
+- As disputas de pagamento são tratadas através do processo de resolução de disputas do Stripe
+- Os profissionais de saúde são notificados imediatamente de quaisquer disputas de pagamento
 - Documentação e evidências podem ser necessárias para resolução de disputas
 
-## 6. Moeda e Preços
+## 7. Moeda e Preços
 
-### 6.1 Moeda Base
+### 7.1 Moeda Base
 
 - Todos os preços são apresentados em Euros (EUR)
 - Conversão de moeda pode aplicar-se para pagamentos internacionais
-- Taxas de câmbio são determinadas pelos processadores de pagamento no momento da transação
+- As taxas de câmbio são determinadas pelos processadores de pagamento no momento da transação
 
-### 6.2 Alterações de Preços
+### 7.2 Alterações de Preços
 
-- Preços de consultas são fixados no momento da marcação
-- Não serão aplicadas taxas adicionais após confirmação da marcação
+- Os preços das consultas são bloqueados no momento da marcação
+- Não serão aplicados custos adicionais após a confirmação da marcação
+- A taxa de serviço da plataforma de 15% está incluída no preço apresentado
 - Impostos e taxas estão incluídos no preço apresentado
 
-## 7. Segurança de Pagamentos
+## 8. Segurança de Pagamentos
 
-### 7.1 Proteção de Dados
+### 8.1 Proteção de Dados
 
 - Todos os dados de pagamento são processados de forma segura através do Stripe
 - Não armazenamos detalhes de cartões de pagamento nos nossos servidores
-- Todas as transações são encriptadas e cumprem os padrões PCI DSS
+- Todas as transações são encriptadas e cumprem com os padrões PCI DSS
 
-### 7.2 Prevenção de Fraude
+### 8.2 Prevenção de Fraude
 
 - Sistemas automatizados de deteção de fraude estão implementados
 - Transações suspeitas podem ser atrasadas ou recusadas
 - Verificação adicional pode ser necessária para transações de alto valor
 
-## 8. Pagamentos Falhados
+## 9. Pagamentos Falhados
 
-### 8.1 Falhas de Pagamento
+### 9.1 Falhas de Pagamento
 
-- Pagamentos falhados resultam no cancelamento automático da consulta
-- Pacientes são notificados imediatamente por email
+- Pagamentos falhados resultam em cancelamento automático da consulta
+- Os pacientes são notificados imediatamente por email
 - Novas marcações podem ser feitas com métodos de pagamento válidos
 
-### 8.2 Política de Repetição
+### 9.2 Política de Repetição
 
-- Repetições automáticas de pagamento não são realizadas
-- Pacientes devem iniciar novas tentativas de pagamento manualmente
+- Tentativas automáticas de pagamento não são realizadas
+- Os pacientes devem iniciar novas tentativas de pagamento manualmente
 - Múltiplas tentativas falhadas podem resultar em restrições temporárias de marcação
 
-## 9. Apoio ao Cliente
+## 10. Apoio ao Cliente
 
-### 9.1 Questões de Pagamento
+### 10.1 Problemas de Pagamento
 
 Para questões ou problemas relacionados com pagamentos:
 
 - Email: support@eleva.care
 - Tempo de resposta: Dentro de 24 horas
-- Disponível em múltiplos idiomas (Inglês, Português, Espanhol, Português Brasileiro)
+- Disponível em vários idiomas (Inglês, Português, Espanhol, Português Brasileiro)
 
-### 9.2 Pedidos de Reembolso
+### 10.2 Pedidos de Reembolso
 
-- Pedidos de reembolso devem ser submetidos dentro de 7 dias da transação original
+- Os pedidos de reembolso devem ser submetidos dentro de 7 dias da transação original
 - Reembolsos por emergência médica são considerados caso a caso
-- Políticas de cancelamento aplicam-se conforme descritas nos nossos Termos e Condições
+- As políticas de cancelamento aplicam-se conforme descrito nos nossos Termos e Condições
 
-## 10. Atualizações de Políticas
+## 11. Atualizações de Políticas
 
-Estas políticas de pagamento podem ser atualizadas periodicamente. Os utilizadores serão notificados de alterações significativas por email e notificações da plataforma. O uso continuado da plataforma constitui aceitação das políticas atualizadas.
+Estas políticas de pagamento podem ser atualizadas periodicamente. Os utilizadores serão notificados de alterações significativas por email e notificações da plataforma. A utilização continuada da plataforma constitui aceitação das políticas atualizadas.
 
-## 11. Conformidade Legal
+## 12. Conformidade Legal
 
-Estas políticas cumprem:
+Estas políticas cumprem com:
 
 - Leis portuguesas de proteção do consumidor
-- Regulamentações europeias de serviços de pagamento (PSD2)
-- Requisitos de proteção de dados RGPD
+- Regulamentos europeus de serviços de pagamento (PSD2)
+- Requisitos de proteção de dados do RGPD
 - Termos de serviço e padrões de conformidade do Stripe
 
 ---
 
-_Para questões sobre estas políticas de pagamento, contacte a nossa equipa de apoio em support@eleva.care_
+_Para questões sobre estas políticas de pagamento, contacte a nossa equipa de suporte em support@eleva.care_
