--- a/content/privacy/br.mdx
+++ b/content/privacy/br.mdx
@@ -2,133 +2,176 @@
 
 _Data de Vigência:_ 16 de abril de 2025
 
-Na Eleva.care, respeitamos sua privacidade e estamos comprometidos em proteger seus dados pessoais. Esta política de privacidade irá informá-lo sobre como cuidamos dos seus dados pessoais quando visita nosso site e informá-lo sobre seus direitos de privacidade e como a lei o protege.
+Na **Eleva.care** ("nós," "nosso"), estamos comprometidos em proteger sua privacidade e garantir que suas informações pessoais sejam tratadas de forma segura e responsável. Esta Política de Privacidade explica como coletamos, usamos, divulgamos e protegemos seus dados pessoais quando você utiliza nossos **serviços de plataforma tecnológica**.
 
-## 1. Informação Importante e Quem Somos
+**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia em saúde** que conecta pacientes com profissionais de saúde independentes e licenciados. NÃO somos um provedor de cuidados de saúde. Esta Política de Privacidade cobre como NÓS (Eleva.care) tratamos seus dados da plataforma. Seu profissional de saúde tem suas próprias responsabilidades separadas para os dados médicos que cria.
 
-### Propósito Desta Política de Privacidade
+Ao utilizar ou acessar os serviços da plataforma Eleva.care, você concorda com a coleta e uso de seus dados conforme descrito nesta Política de Privacidade.
 
-Esta política de privacidade visa proporcionar a você informação sobre como a Eleva.care coleta e processa seus dados pessoais através do seu uso do nosso site e serviços, incluindo quaisquer dados que você possa fornecer através do nosso site quando se registra na nossa plataforma, utiliza nossos serviços ou participa em uma pesquisa.
+## Papel Dual da Eleva.care no Processamento de Dados
 
-É importante que você leia esta política de privacidade juntamente com qualquer outra política de privacidade ou aviso de processamento justo que possamos fornecer em ocasiões específicas quando estamos coletando ou processando dados pessoais sobre você, para que esteja totalmente ciente de como e por que estamos utilizando seus dados.
+A Eleva.care processa seus dados em **duas capacidades distintas**:
 
-### Controlador
+### Como Controlador de Dados (Operações da Plataforma)
 
-**Búzios e Tartarugas, Lda**, operando como **Eleva.care**, é o controlador e responsável pelos seus dados pessoais (coletivamente referidos como "Eleva.care", "nós", "nos" ou "nosso" nesta política de privacidade).
+Para os seguintes dados, **a Eleva.care é o controlador de dados**:
 
-Detalhes de contato:
+- Suas informações de conta (nome, email, número de telefone)
+- Informações de agendamento e reservas
+- Informações de pagamento (processadas via Stripe)
+- Análises de uso da plataforma
+- Comunicações com nossa equipe de suporte
 
-- **Nome da Empresa:** Búzios e Tartarugas, Lda
-- **Endereço:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Email:** [privacy@eleva.care](mailto:privacy@eleva.care)
-- **Telefone:** [+351 931 897 950](tel:+351931897950)
-- **NIPC/VAT:** 515001708
+**Base Legal**: Execução do contrato (Artigo 6(1)(b) do GDPR / LGPD Art. 7º, V)
 
-## 2. Os Dados que Coletamos Sobre Você
+### Como Operador de Dados (Armazenamento de Dados Clínicos)
 
-Dados pessoais, ou informação pessoal, significa qualquer informação sobre um indivíduo a partir da qual essa pessoa pode ser identificada. Não inclui dados onde a identidade foi removida (dados anônimos).
+Para notas de sessão clínicas e registros médicos criados pelos profissionais:
 
-Podemos coletar, utilizar, armazenar e transferir diferentes tipos de dados pessoais sobre você, que agrupamos da seguinte forma:
+- **O profissional de saúde é o controlador de dados**
+- **A Eleva.care fornece apenas armazenamento criptografado seguro**
+- Processamos estes dados APENAS sob as instruções do profissional
+- NÃO acessamos notas clínicas sem autorização
 
-### Para Usuários Gerais
+**Base Legal**:
 
-- **Dados de Identidade** incluem nome, sobrenome, nome de usuário ou identificador semelhante, e data de nascimento.
-- **Dados de Contato** incluem endereço de faturamento, endereço de entrega, endereço de email e números de telefone.
-- **Dados Financeiros** incluem detalhes de conta bancária e cartão de pagamento para processamento de transações.
-- **Dados de Transação** incluem detalhes sobre pagamentos de e para você, e outros detalhes de serviços que comprou de nós.
-- **Dados Técnicos** incluem endereço de protocolo de Internet (IP), dados de login, tipo e versão de navegador, definição de fuso horário e localização, tipos e versões de plugins do navegador, sistema operacional e plataforma, e outra tecnologia nos dispositivos que utiliza para acessar nosso site.
-- **Dados de Perfil** incluem seu nome de usuário e senha, seus interesses, preferências, feedback e respostas a pesquisas.
-- **Dados de Uso** incluem informações sobre como você utiliza nosso site, produtos e serviços.
-- **Dados de Marketing e Comunicações** incluem suas preferências em receber marketing de nós e dos nossos terceiros, e suas preferências de comunicação.
+- Os profissionais baseiam-se no Artigo 9(2)(h) do GDPR (prestação de cuidados de saúde) / LGPD Art. 11, II
+- Você consente com o armazenamento na plataforma via Artigo 9(2)(a) (consentimento explícito) / LGPD Art. 7º, I
 
-### Para Profissionais de Saúde
+## 1. Informação que Coletamos
 
-Além do acima referido, coletamos:
+Coletamos diferentes tipos de informação para fornecer e melhorar nossos serviços. A informação que coletamos inclui:
 
-- **Credenciais Profissionais** incluem sua licença médica, especialidade, certificações e afiliações institucionais.
-- **Informação de Prática** incluem detalhes da sua prática médica, horários de consulta, políticas de seguro aceitas e taxas de serviço.
+**a. Informação Pessoal**
 
-### Para Pacientes
+- **Nome**
+- **Endereço de Email**
+- **Número de Telefone**
+- **Informações de Pagamento** (por exemplo, detalhes de cartão de crédito)
+- **Dados Médicos** (se aplicável)
+- **Endereço e outros detalhes de contato**
 
-Além dos dados de usuário geral, coletamos:
+**b. Dados de Uso**
 
-- **Informação de Saúde** - Com seu consentimento explícito, coletamos informações sobre condições médicas, medicamentos, alergias, histórico médico e outra informação de saúde que você opta por fornecer para facilitar serviços de saúde. Esta é a categoria de dados mais sensível que processamos, e é tratada com o mais alto nível de segurança e confidencialidade.
-- **Informação de Seguro** inclui detalhes sobre sua cobertura de seguro de saúde, número de apólice e provedor de seguro.
+- **Endereço IP**
+- **Informação do Dispositivo**
+- **Hora e Data de Uso**
+- **Páginas Visitadas no Website**
+- **URLs de Referência**
 
-## 3. Como Utilizamos Seus Dados Pessoais
+**c. Cookies e Tecnologias de Rastreamento**
 
-Apenas utilizaremos seus dados pessoais quando a lei nos permitir. Mais comumente, utilizaremos seus dados pessoais nas seguintes circunstâncias:
+Utilizamos cookies e tecnologias de rastreamento similares para rastrear sua atividade em nossos serviços e armazenar certas informações. Os cookies nos ajudam a personalizar sua experiência e compreender como nossos serviços são utilizados.
 
-- Quando precisamos executar o contrato que estamos prestes a celebrar ou celebramos com você.
-- Quando é necessário para nossos interesses legítimos (ou os de um terceiro) e seus interesses e direitos fundamentais não se sobrepõem a esses interesses.
-- Quando precisamos cumprir uma obrigação legal ou regulatória.
-- No que diz respeito a dados de saúde, apenas com seu consentimento explícito.
+Você pode controlar o uso de cookies ao nível do navegador individual, mas desabilitar cookies pode afetar sua capacidade de usar certas funcionalidades de nossos serviços.
 
-### Finalidades para as Quais Utilizaremos Seus Dados Pessoais
+## 2. Como Usamos Sua Informação
 
-Estabelecemos abaixo uma descrição de todas as formas como planejamos utilizar seus dados pessoais, e quais as bases legais em que nos apoiamos para fazê-lo:
+Utilizamos a informação que coletamos para vários propósitos, incluindo:
 
-- **Para registrar e gerenciar sua conta conosco**
-- **Para fornecer serviços de saúde** através da nossa plataforma
-- **Para gerenciar nossa relação com você**, incluindo notificá-lo sobre alterações aos nossos termos ou política de privacidade
-- **Para processar pagamentos por serviços** prestados através da nossa plataforma
-- **Para administrar e proteger nosso negócio e este site** (incluindo resolução de problemas, análise de dados, testes, manutenção do sistema, suporte, relatórios e hospedagem de dados)
-- **Para entregar conteúdo relevante do site e anúncios** para você e medir ou compreender a eficácia da publicidade que lhe apresentamos
-- **Para utilizar análise de dados** para melhorar nosso site, produtos/serviços, marketing, relações com os clientes e experiências
+- **Fornecer e melhorar nossos serviços:** Para oferecer serviços de saúde personalizados, agendamento de consultas e atendimento ao cliente.
+- **Processar pagamentos:** Para completar transações e faturamento de serviços fornecidos.
+- **Comunicar com você:** Para lhe enviar informações importantes relativamente à sua conta, atualizações de serviços ou ofertas promocionais (se optou por recebê-las).
+- **Melhorar a experiência do usuário:** Para analisar tendências e comportamento em nossa plataforma, permitindo-nos melhorar sua experiência e adaptar nossos serviços às suas necessidades.
+- **Cumprimento de obrigações legais:** Para cumprir com leis, regulamentos e processos legais aplicáveis.
 
-## 4. Divulgação dos Seus Dados Pessoais
+## 3. Como Compartilhamos Sua Informação
 
-Podemos compartilhar seus dados pessoais com as partes indicadas abaixo para os fins estabelecidos na seção 3 acima:
+Não vendemos, trocamos ou compartilhamos de outra forma seus dados pessoais com terceiros, exceto nas seguintes circunstâncias:
 
-- **Profissionais de Saúde** - Para facilitar serviços de saúde
-- **Prestadores de Serviços** - Que fornecem serviços de TI, administração de sistemas e funções de plataforma
-- **Processadores de Pagamento** - Para processar transações (nunca armazenam seus dados completos de pagamento)
-- **Consultores Profissionais** - Incluindo advogados, banqueiros, auditores e seguradoras
-- **Autoridades Reguladoras e outros organismos** - Conforme exigido por lei
+- **Com prestadores de serviços:** Podemos compartilhar sua informação com empresas ou indivíduos terceiros que fornecem serviços em nosso nome, tais como processamento de pagamentos ou serviços de hospedagem. Estes prestadores são obrigados a proteger sua informação e utilizá-la apenas com o propósito de realizar serviços para nós.
+- **Por razões legais:** Podemos divulgar seus dados pessoais se tal for exigido por lei ou em resposta a processos legais, tais como uma intimação ou ordem judicial.
+- **Transferências comerciais:** No caso de uma fusão, aquisição ou venda de ativos, sua informação pode ser transferida como parte da transação. Notificaremos você antes de seus dados pessoais serem transferidos e ficarem sujeitos a uma política de privacidade diferente.
 
-Exigimos a todos os terceiros que respeitem a segurança dos seus dados pessoais e os tratem de acordo com a lei. Não permitimos que nossos prestadores de serviços terceiros utilizem seus dados pessoais para seus próprios fins e apenas lhes permitimos processar seus dados pessoais para fins específicos e de acordo com nossas instruções.
+## 4. Retenção de Dados
 
-## 5. Transferências Internacionais
+Reteremos seus dados pessoais apenas pelo tempo necessário para cumprir os propósitos descritos nesta Política de Privacidade, a menos que um período de retenção mais longo seja exigido ou permitido por lei.
 
-Operamos principalmente na União Europeia. No entanto, alguns dos nossos prestadores de serviços podem estar localizados fora do Espaço Econômico Europeu (EEE), pelo que o seu processamento dos seus dados pessoais envolverá uma transferência de dados para fora do EEE.
+## 5. Seus Direitos de Proteção de Dados
 
-Sempre que transferimos seus dados pessoais para fora do EEE, garantimos que lhes é oferecido um grau semelhante de proteção, garantindo que pelo menos uma das seguintes salvaguardas é implementada:
+Dependendo de sua localização, você pode ter os seguintes direitos relativamente aos seus dados pessoais:
 
-- Transferiremos seus dados pessoais apenas para países que tenham sido considerados como proporcionando um nível adequado de proteção para dados pessoais pela Comissão Europeia.
-- Quando utilizamos determinados prestadores de serviços, podemos utilizar contratos específicos aprovados pela Comissão Europeia que dão aos dados pessoais a mesma proteção que têm na Europa (conhecidas como Cláusulas Contratuais Padrão).
+- **Direito de acesso:** Pode solicitar uma cópia dos dados pessoais que detemos sobre você.
+- **Direito de retificação:** Pode solicitar que corrijamos qualquer informação imprecisa ou incompleta.
+- **Direito ao apagamento:** Pode solicitar que eliminemos seus dados pessoais, sujeito a certas exceções.
+- **Direito à limitação:** Pode solicitar que limitemos o processamento de seus dados pessoais sob certas circunstâncias.
+- **Direito à portabilidade dos dados:** Pode solicitar uma transferência de seus dados pessoais para outra organização num formato estruturado, de uso comum e legível por máquina.
+- **Direito de retirar o consentimento:** Se nos baseamos em seu consentimento para processar seus dados, pode retirar esse consentimento a qualquer momento.
 
-## 6. Segurança de Dados
+Para exercer qualquer um destes direitos, entre em contato conosco utilizando as informações fornecidas abaixo.
 
-Implementamos medidas de segurança apropriadas para prevenir que seus dados pessoais sejam acidentalmente perdidos, utilizados ou acessados de forma não autorizada, alterados ou divulgados. Além disso, limitamos o acesso aos seus dados pessoais a esses funcionários, agentes, contratantes e outros terceiros que têm uma necessidade comercial de saber. Eles só processarão seus dados pessoais de acordo com nossas instruções e estão sujeitos a um dever de confidencialidade.
+## 6. Segurança de Seus Dados
 
-Temos procedimentos estabelecidos para lidar com qualquer suspeita de violação de dados pessoais e notificaremos você e qualquer regulador aplicável de uma violação onde somos legalmente obrigados a fazê-lo.
+Implementamos medidas técnicas e organizacionais apropriadas para proteger seus dados pessoais contra acesso não autorizado, alteração ou destruição. No entanto, nenhuma transmissão de dados pela internet ou método de armazenamento eletrônico é 100% seguro, e não podemos garantir a segurança absoluta de sua informação.
 
-## 7. Retenção de Dados
+## 7. Transferências Internacionais
 
-Apenas reteremos seus dados pessoais pelo tempo necessário para cumprir os propósitos para os quais os coletamos, incluindo para os fins de satisfazer quaisquer requisitos legais, contábeis ou de relatório.
+Se estiver localizado fora de Portugal, esteja ciente de que seus dados pessoais podem ser transferidos para e processados em Portugal ou outros países onde a Eleva.care opera. Ao utilizar nossos serviços, você consente com a transferência de seus dados para países que podem ter leis de proteção de dados diferentes.
 
-Para determinar o período de retenção apropriado para dados pessoais, consideramos a quantidade, natureza e sensibilidade dos dados pessoais, o risco potencial de dano por uso não autorizado ou divulgação dos seus dados pessoais, os propósitos para os quais processamos seus dados pessoais e se podemos alcançar esses propósitos através de outros meios, e os requisitos legais aplicáveis.
+## 8. Privacidade de Crianças
 
-## 8. Seus Direitos Legais
+Nossos serviços não se destinam a crianças com menos de 16 anos, e não coletamos intencionalmente dados pessoais de crianças. Se tomarmos conhecimento de que coletamos dados pessoais de uma criança com menos de 16 anos sem verificação do consentimento parental, tomaremos medidas para remover essa informação.
 
-Em determinadas circunstâncias, você tem direitos sob as leis de proteção de dados em relação aos seus dados pessoais, incluindo o direito a:
+## 9. Alterações a Esta Política de Privacidade
 
-- **Solicitar acesso** aos seus dados pessoais
-- **Solicitar correção** dos seus dados pessoais
-- **Solicitar a exclusão** dos seus dados pessoais
-- **Opor-se ao processamento** dos seus dados pessoais
-- **Solicitar restrição de processamento** dos seus dados pessoais
-- **Solicitar a transferência** dos seus dados pessoais
-- **Retirar o consentimento** a qualquer momento
-
-Se você desejar exercer qualquer um dos direitos acima estabelecidos, por favor entre em contato conosco.
+Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão publicadas nesta página com uma data de vigência atualizada. Encorajamos a revisar esta Política de Privacidade periodicamente para se manter informado sobre como estamos protegendo sua informação.
 
 ---
 
-## Informação de Contato
+## Controlador de Dados
 
-Se você tiver quaisquer questões sobre esta Política de Privacidade, por favor entre em contato conosco:
+O responsável pelo processamento de seus dados pessoais é:
 
-- **Email:** [privacy@eleva.care](mailto:privacy@eleva.care)
-- **Endereço postal:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- **Telefone:** [+351 931 897 950](tel:+351931897950)
+- **BÚZIOS E TARTARUGAS - LDA**
+- Operando comercialmente como **Eleva.care**
+- NIPC/NIF: 515001708
+- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
+- Email: [support@eleva.care](mailto:support@eleva.care)
+- Telefone: [+351 931 897 950](tel:+351931897950)
+
+---
+
+## Conformidade Internacional de Proteção de Dados
+
+### Conformidade com o GDPR (União Europeia)
+
+Como empresa sediada em Portugal, cumprimos integralmente o **Regulamento Geral de Proteção de Dados (GDPR)**. Todas as atividades de processamento de dados aderem aos princípios do GDPR, incluindo:
+
+- **Legalidade, lealdade e transparência**
+- **Limitação da finalidade**
+- **Minimização de dados**
+- **Exatidão**
+- **Limitação de armazenamento**
+- **Integridade e confidencialidade**
+
+Para informações detalhadas sobre nossa conformidade com o GDPR, incluindo nosso Acordo de Processamento de Dados, visite nosso [Acordo de Processamento de Dados](/legal/dpa).
+
+### Conformidade com a LGPD (Brasil)
+
+Também cumprimos a **Lei Geral de Proteção de Dados Pessoais (LGPD)** do Brasil, garantindo que os dados dos usuários brasileiros sejam protegidos com os mesmos altos padrões do GDPR. Nossa conformidade com a LGPD inclui:
+
+- **Bases legais para processamento de dados** (LGPD Artigo 7)
+- **Proteção de categorias especiais de dados pessoais** (LGPD Artigo 11)
+- **Direitos dos titulares de dados** (LGPD Artigos 17-22)
+- **Salvaguardas para transferência internacional de dados** (LGPD Artigos 33-36)
+- **Medidas de segurança de dados** (LGPD Artigo 46)
+
+**Direitos dos Usuários Brasileiros:**
+
+Sob a LGPD, os usuários brasileiros têm o direito de:
+
+1. **Confirmação do processamento de dados** (Artigo 18, I)
+2. **Acesso aos seus dados** (Artigo 18, II)
+3. **Correção de dados incompletos ou incorretos** (Artigo 18, III)
+4. **Anonimização, bloqueio ou eliminação de dados** (Artigo 18, IV)
+5. **Portabilidade de dados** (Artigo 18, V)
+6. **Eliminação de dados processados com consentimento** (Artigo 18, VI)
+7. **Informação sobre compartilhamento de dados** (Artigo 18, VII)
+8. **Informação sobre a possibilidade de não fornecer consentimento** (Artigo 18, VIII)
+9. **Revogação do consentimento** (Artigo 18, IX)
+
+Para exercer qualquer um desses direitos, entre em contato conosco em [privacy@eleva.care](mailto:privacy@eleva.care).
+
+**Encarregado de Proteção de Dados (DPO):**
+
+Para questões relacionadas ao GDPR e à LGPD, entre em contato com nosso DPO em: [dpo@eleva.care](mailto:dpo@eleva.care)
