--- a/content/terms/en.mdx
+++ b/content/terms/en.mdx
@@ -8,17 +8,62 @@ These Terms and Conditions ("Terms") govern the use of the services provided by 
 
 By accessing or using the services provided by Eleva.care, you agree to comply with and be bound by these Terms and all applicable laws and regulations. If you do not agree to these Terms, please do not use our services.
 
-## 2. Services Provided
+## 2. Platform Nature and Services Provided
 
-Eleva.care offers a comprehensive healthcare platform designed for healthcare professionals and patients, including:
+### 2.1 Marketplace Platform - Not a Healthcare Provider
 
-- Medical Records Management
-- Payment Processing
-- Appointment Scheduling
-- Healthcare Data Analytics
-- Customer Support
+**IMPORTANT NOTICE**: Eleva.care is a **technology marketplace platform** that connects patients with independent, licensed healthcare practitioners.
 
-These services are subject to change, and Eleva.care reserves the right to modify or discontinue any part of the services at any time.
+**Eleva.care is NOT**:
+
+- ❌ A healthcare provider
+- ❌ A medical practice or clinic
+- ❌ Responsible for medical care, diagnoses, or treatment
+- ❌ Employing or supervising healthcare practitioners
+
+**Healthcare practitioners on our platform are**:
+
+- ✅ Independent professionals
+- ✅ Licensed in their respective jurisdictions
+- ✅ Solely responsible for all medical care they provide
+- ✅ Maintaining their own professional liability insurance
+
+### 2.2 Technology Services We Provide
+
+Eleva.care provides the following **technology platform services**:
+
+**For All Users:**
+
+- User account creation and management
+- Identity verification and authentication
+- Platform support and customer service
+
+**For Patients/Clients:**
+
+- Practitioner search and discovery tools
+- Secure appointment booking and scheduling system
+- Payment processing for practitioner services (via Stripe)
+- Secure messaging with your chosen practitioner
+- Access to your booking history
+
+**For Healthcare Practitioners:**
+
+- Professional profile creation and management
+- Appointment scheduling tools
+- Encrypted clinical notes storage (you control the content)
+- Payment collection and payout processing (via Stripe Connect)
+- Secure patient communication tools
+- File attachment storage (encrypted)
+
+**What We Do NOT Provide:**
+
+- ❌ Medical advice, diagnoses, or treatment
+- ❌ Medical supervision or oversight of practitioners
+- ❌ Verification of practitioner medical credentials (practitioners self-certify)
+- ❌ Medical malpractice insurance
+- ❌ Healthcare services of any kind
+
+These services are subject to change, and Eleva.care reserves the right to modify or discontinue any part of the platform services at any time.
 
 ## 3. Account Registration and Eligibility
 
@@ -30,16 +75,39 @@ To access certain features of our services, you must create an account. You agre
 
 You must be at least 18 years old and legally capable of entering into a contract in your jurisdiction to use our services.
 
-## 4. Use of Services
+## 4. Use of Platform Services
 
-You agree to use Eleva.care's services only for lawful purposes and in accordance with these Terms. You are prohibited from:
+You agree to use Eleva.care's platform services only for lawful purposes and in accordance with these Terms. You are prohibited from:
 
 - Violating any applicable laws or regulations.
 - Engaging in fraudulent or deceptive activities.
 - Distributing harmful, defamatory, or illegal content.
-- Interfering with the normal operation of the services.
+- Interfering with the normal operation of the platform.
+- Misrepresenting yourself as a licensed healthcare professional (if you are not).
+- Using the platform for medical emergencies.
 
 Eleva.care may suspend or terminate your access if you violate these Terms.
+
+### 4.1 For Patients/Clients
+
+You understand and agree that:
+
+- Healthcare practitioners on our platform are independent professionals, not Eleva.care employees
+- You are responsible for choosing your healthcare practitioner
+- You should verify practitioner credentials and licensing before booking
+- Your relationship is with the practitioner, not with Eleva.care
+- Eleva.care is not responsible for the medical care you receive
+
+### 4.2 For Healthcare Practitioners
+
+By using our platform as a practitioner, you represent and warrant that:
+
+- You are a licensed healthcare professional in good standing
+- You maintain current professional liability insurance
+- You are solely responsible for all medical care you provide
+- You will comply with all applicable healthcare regulations
+- You will obtain informed consent from your patients
+- You understand you are an independent contractor, not an Eleva.care employee
 
 ## 5. Payment Terms
 
@@ -59,7 +127,34 @@ All content and materials on the Eleva.care platform, including text, graphics, 
 
 ## 8. Limitation of Liability
 
-To the fullest extent permitted by law, Eleva.care is not liable for any direct, indirect, incidental, special, or consequential damages resulting from your use or inability to use our services. We do not guarantee the accuracy, reliability, or completeness of the services.
+### 8.1 Platform Liability
+
+To the fullest extent permitted by law, Eleva.care is liable only for the performance of our **technology platform services**. We are not liable for any direct, indirect, incidental, special, or consequential damages resulting from your use or inability to use our platform services.
+
+### 8.2 No Liability for Medical Care
+
+**Eleva.care is NOT liable for:**
+
+- ❌ Any medical care, advice, diagnosis, or treatment provided by practitioners
+- ❌ Medical outcomes, whether positive or negative
+- ❌ Medical malpractice or professional negligence by practitioners
+- ❌ Practitioner qualifications, licensing, or credentials
+- ❌ Quality of medical services provided by practitioners
+- ❌ Practitioner-patient disputes regarding medical care
+- ❌ Any health outcomes resulting from practitioner services
+
+**The healthcare practitioner you choose is solely responsible for all medical care they provide.**
+
+### 8.3 Emergency Disclaimer
+
+**Eleva.care is NOT for medical emergencies.** If you are experiencing a medical emergency:
+
+- **In Portugal**: Call 112
+- **In EU countries**: Call 112
+- **In USA**: Call 911
+- Or contact your local emergency services immediately
+
+Do not use our platform for urgent or emergency medical situations.
 
 ## 9. Indemnity
 
